--- a/sites_data/BRO_CO/stat_matrix_static_colors.html
+++ b/sites_data/BRO_CO/stat_matrix_static_colors.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_d862d_row0_col7, #T_d862d_row0_col8, #T_d862d_row4_col7 {
+#T_f461b_row0_col7, #T_f461b_row0_col8, #T_f461b_row4_col7 {
   background-color: yellow;
 }
-#T_d862d_row1_col7, #T_d862d_row1_col8, #T_d862d_row3_col7, #T_d862d_row3_col8 {
+#T_f461b_row1_col7, #T_f461b_row1_col8, #T_f461b_row3_col7, #T_f461b_row3_col8 {
   background-color: green;
 }
-#T_d862d_row2_col7, #T_d862d_row2_col8, #T_d862d_row4_col8, #T_d862d_row6_col7, #T_d862d_row6_col8, #T_d862d_row7_col7, #T_d862d_row7_col8 {
+#T_f461b_row2_col7, #T_f461b_row2_col8, #T_f461b_row4_col8, #T_f461b_row6_col7, #T_f461b_row6_col8, #T_f461b_row7_col7, #T_f461b_row7_col8 {
   background-color: red;
 }
-#T_d862d_row5_col2, #T_d862d_row6_col2, #T_d862d_row7_col2 {
+#T_f461b_row5_col2, #T_f461b_row6_col2, #T_f461b_row7_col2 {
   background-color: white;
 }
-#T_d862d_row5_col7, #T_d862d_row5_col8 {
+#T_f461b_row5_col7, #T_f461b_row5_col8 {
   background-color: gray;
 }
 </style>
 </head>
 <body>
-<table id="T_d862d_">
+<table id="T_f461b_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -38,100 +38,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_d862d_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_d862d_row0_col0" class="data row0 col0" >0.91</td>
-      <td id="T_d862d_row0_col1" class="data row0 col1" >0.05</td>
-      <td id="T_d862d_row0_col2" class="data row0 col2" >0.91</td>
-      <td id="T_d862d_row0_col3" class="data row0 col3" >1.00</td>
-      <td id="T_d862d_row0_col4" class="data row0 col4" >1.13</td>
-      <td id="T_d862d_row0_col5" class="data row0 col5" >1.01</td>
-      <td id="T_d862d_row0_col6" class="data row0 col6" >1.18</td>
-      <td id="T_d862d_row0_col7" class="data row0 col7" >medium</td>
-      <td id="T_d862d_row0_col8" class="data row0 col8" >medium</td>
+      <th id="T_f461b_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_f461b_row0_col0" class="data row0 col0" >0.91</td>
+      <td id="T_f461b_row0_col1" class="data row0 col1" >0.05</td>
+      <td id="T_f461b_row0_col2" class="data row0 col2" >0.91</td>
+      <td id="T_f461b_row0_col3" class="data row0 col3" >1.00</td>
+      <td id="T_f461b_row0_col4" class="data row0 col4" >1.13</td>
+      <td id="T_f461b_row0_col5" class="data row0 col5" >1.01</td>
+      <td id="T_f461b_row0_col6" class="data row0 col6" >1.18</td>
+      <td id="T_f461b_row0_col7" class="data row0 col7" >medium</td>
+      <td id="T_f461b_row0_col8" class="data row0 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_d862d_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_d862d_row1_col0" class="data row1 col0" >1.22</td>
-      <td id="T_d862d_row1_col1" class="data row1 col1" >1.13</td>
-      <td id="T_d862d_row1_col2" class="data row1 col2" >0.00</td>
-      <td id="T_d862d_row1_col3" class="data row1 col3" >1.58</td>
-      <td id="T_d862d_row1_col4" class="data row1 col4" >6.10</td>
-      <td id="T_d862d_row1_col5" class="data row1 col5" >1.78</td>
-      <td id="T_d862d_row1_col6" class="data row1 col6" >6.33</td>
-      <td id="T_d862d_row1_col7" class="data row1 col7" >low</td>
-      <td id="T_d862d_row1_col8" class="data row1 col8" >low</td>
+      <th id="T_f461b_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_f461b_row1_col0" class="data row1 col0" >1.22</td>
+      <td id="T_f461b_row1_col1" class="data row1 col1" >1.13</td>
+      <td id="T_f461b_row1_col2" class="data row1 col2" >0.00</td>
+      <td id="T_f461b_row1_col3" class="data row1 col3" >1.58</td>
+      <td id="T_f461b_row1_col4" class="data row1 col4" >6.10</td>
+      <td id="T_f461b_row1_col5" class="data row1 col5" >1.78</td>
+      <td id="T_f461b_row1_col6" class="data row1 col6" >6.33</td>
+      <td id="T_f461b_row1_col7" class="data row1 col7" >low</td>
+      <td id="T_f461b_row1_col8" class="data row1 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_d862d_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_d862d_row2_col0" class="data row2 col0" >15.70</td>
-      <td id="T_d862d_row2_col1" class="data row2 col1" >0.40</td>
-      <td id="T_d862d_row2_col2" class="data row2 col2" >16.43</td>
-      <td id="T_d862d_row2_col3" class="data row2 col3" >18.14</td>
-      <td id="T_d862d_row2_col4" class="data row2 col4" >19.35</td>
-      <td id="T_d862d_row2_col5" class="data row2 col5" >19.27</td>
-      <td id="T_d862d_row2_col6" class="data row2 col6" >23.68</td>
-      <td id="T_d862d_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_d862d_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_f461b_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_f461b_row2_col0" class="data row2 col0" >15.70</td>
+      <td id="T_f461b_row2_col1" class="data row2 col1" >0.40</td>
+      <td id="T_f461b_row2_col2" class="data row2 col2" >16.43</td>
+      <td id="T_f461b_row2_col3" class="data row2 col3" >18.14</td>
+      <td id="T_f461b_row2_col4" class="data row2 col4" >19.35</td>
+      <td id="T_f461b_row2_col5" class="data row2 col5" >19.27</td>
+      <td id="T_f461b_row2_col6" class="data row2 col6" >23.68</td>
+      <td id="T_f461b_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_f461b_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_d862d_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_d862d_row3_col0" class="data row3 col0" >22.63</td>
-      <td id="T_d862d_row3_col1" class="data row3 col1" >8.63</td>
-      <td id="T_d862d_row3_col2" class="data row3 col2" >22.77</td>
-      <td id="T_d862d_row3_col3" class="data row3 col3" >24.03</td>
-      <td id="T_d862d_row3_col4" class="data row3 col4" >52.29</td>
-      <td id="T_d862d_row3_col5" class="data row3 col5" >25.42</td>
-      <td id="T_d862d_row3_col6" class="data row3 col6" >58.17</td>
-      <td id="T_d862d_row3_col7" class="data row3 col7" >low</td>
-      <td id="T_d862d_row3_col8" class="data row3 col8" >low</td>
+      <th id="T_f461b_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_f461b_row3_col0" class="data row3 col0" >22.63</td>
+      <td id="T_f461b_row3_col1" class="data row3 col1" >8.63</td>
+      <td id="T_f461b_row3_col2" class="data row3 col2" >22.77</td>
+      <td id="T_f461b_row3_col3" class="data row3 col3" >24.03</td>
+      <td id="T_f461b_row3_col4" class="data row3 col4" >52.29</td>
+      <td id="T_f461b_row3_col5" class="data row3 col5" >25.42</td>
+      <td id="T_f461b_row3_col6" class="data row3 col6" >58.17</td>
+      <td id="T_f461b_row3_col7" class="data row3 col7" >low</td>
+      <td id="T_f461b_row3_col8" class="data row3 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_d862d_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_d862d_row4_col0" class="data row4 col0" >-0.00</td>
-      <td id="T_d862d_row4_col1" class="data row4 col1" >0.26</td>
-      <td id="T_d862d_row4_col2" class="data row4 col2" >-0.03</td>
-      <td id="T_d862d_row4_col3" class="data row4 col3" >-0.26</td>
-      <td id="T_d862d_row4_col4" class="data row4 col4" >-1.21</td>
-      <td id="T_d862d_row4_col5" class="data row4 col5" >-0.54</td>
-      <td id="T_d862d_row4_col6" class="data row4 col6" >-1.42</td>
-      <td id="T_d862d_row4_col7" class="data row4 col7" >medium</td>
-      <td id="T_d862d_row4_col8" class="data row4 col8" >high</td>
+      <th id="T_f461b_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_f461b_row4_col0" class="data row4 col0" >-0.00</td>
+      <td id="T_f461b_row4_col1" class="data row4 col1" >0.26</td>
+      <td id="T_f461b_row4_col2" class="data row4 col2" >-0.03</td>
+      <td id="T_f461b_row4_col3" class="data row4 col3" >-0.26</td>
+      <td id="T_f461b_row4_col4" class="data row4 col4" >-1.21</td>
+      <td id="T_f461b_row4_col5" class="data row4 col5" >-0.54</td>
+      <td id="T_f461b_row4_col6" class="data row4 col6" >-1.42</td>
+      <td id="T_f461b_row4_col7" class="data row4 col7" >medium</td>
+      <td id="T_f461b_row4_col8" class="data row4 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_d862d_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_d862d_row5_col0" class="data row5 col0" >7268.82</td>
-      <td id="T_d862d_row5_col1" class="data row5 col1" >420.84</td>
-      <td id="T_d862d_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_d862d_row5_col3" class="data row5 col3" >6027.38</td>
-      <td id="T_d862d_row5_col4" class="data row5 col4" >7397.59</td>
-      <td id="T_d862d_row5_col5" class="data row5 col5" >5565.66</td>
-      <td id="T_d862d_row5_col6" class="data row5 col6" >7481.00</td>
-      <td id="T_d862d_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_d862d_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_f461b_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_f461b_row5_col0" class="data row5 col0" >7268.82</td>
+      <td id="T_f461b_row5_col1" class="data row5 col1" >420.84</td>
+      <td id="T_f461b_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_f461b_row5_col3" class="data row5 col3" >6027.38</td>
+      <td id="T_f461b_row5_col4" class="data row5 col4" >7397.59</td>
+      <td id="T_f461b_row5_col5" class="data row5 col5" >5565.66</td>
+      <td id="T_f461b_row5_col6" class="data row5 col6" >7481.00</td>
+      <td id="T_f461b_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_f461b_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_d862d_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_d862d_row6_col0" class="data row6 col0" >0.00</td>
-      <td id="T_d862d_row6_col1" class="data row6 col1" >0.00</td>
-      <td id="T_d862d_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_d862d_row6_col3" class="data row6 col3" >0.00</td>
-      <td id="T_d862d_row6_col4" class="data row6 col4" >0.00</td>
-      <td id="T_d862d_row6_col5" class="data row6 col5" >0.01</td>
-      <td id="T_d862d_row6_col6" class="data row6 col6" >0.53</td>
-      <td id="T_d862d_row6_col7" class="data row6 col7" >high</td>
-      <td id="T_d862d_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_f461b_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_f461b_row6_col0" class="data row6 col0" >0.00</td>
+      <td id="T_f461b_row6_col1" class="data row6 col1" >0.00</td>
+      <td id="T_f461b_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_f461b_row6_col3" class="data row6 col3" >0.00</td>
+      <td id="T_f461b_row6_col4" class="data row6 col4" >0.00</td>
+      <td id="T_f461b_row6_col5" class="data row6 col5" >0.01</td>
+      <td id="T_f461b_row6_col6" class="data row6 col6" >0.53</td>
+      <td id="T_f461b_row6_col7" class="data row6 col7" >high</td>
+      <td id="T_f461b_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_d862d_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_d862d_row7_col0" class="data row7 col0" >210.72</td>
-      <td id="T_d862d_row7_col1" class="data row7 col1" >88.70</td>
-      <td id="T_d862d_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_d862d_row7_col3" class="data row7 col3" >570.72</td>
-      <td id="T_d862d_row7_col4" class="data row7 col4" >1046.30</td>
-      <td id="T_d862d_row7_col5" class="data row7 col5" >825.74</td>
-      <td id="T_d862d_row7_col6" class="data row7 col6" >1851.36</td>
-      <td id="T_d862d_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_d862d_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_f461b_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_f461b_row7_col0" class="data row7 col0" >210.72</td>
+      <td id="T_f461b_row7_col1" class="data row7 col1" >88.70</td>
+      <td id="T_f461b_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_f461b_row7_col3" class="data row7 col3" >570.72</td>
+      <td id="T_f461b_row7_col4" class="data row7 col4" >1046.30</td>
+      <td id="T_f461b_row7_col5" class="data row7 col5" >825.74</td>
+      <td id="T_f461b_row7_col6" class="data row7 col6" >1851.36</td>
+      <td id="T_f461b_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_f461b_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
