--- a/sites_data/GAC_CO/stat_matrix_static_colors.html
+++ b/sites_data/GAC_CO/stat_matrix_static_colors.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_70eb1_row0_col7, #T_70eb1_row0_col8, #T_70eb1_row4_col7 {
+#T_031e8_row0_col7, #T_031e8_row0_col8, #T_031e8_row4_col7 {
   background-color: yellow;
 }
-#T_70eb1_row1_col7, #T_70eb1_row1_col8, #T_70eb1_row3_col7, #T_70eb1_row3_col8 {
+#T_031e8_row1_col7, #T_031e8_row1_col8, #T_031e8_row3_col7, #T_031e8_row3_col8 {
   background-color: green;
 }
-#T_70eb1_row2_col7, #T_70eb1_row2_col8, #T_70eb1_row4_col8, #T_70eb1_row6_col7, #T_70eb1_row6_col8, #T_70eb1_row7_col7, #T_70eb1_row7_col8 {
+#T_031e8_row2_col7, #T_031e8_row2_col8, #T_031e8_row4_col8, #T_031e8_row6_col7, #T_031e8_row6_col8, #T_031e8_row7_col7, #T_031e8_row7_col8 {
   background-color: red;
 }
-#T_70eb1_row5_col2, #T_70eb1_row6_col2, #T_70eb1_row7_col2 {
+#T_031e8_row5_col2, #T_031e8_row6_col2, #T_031e8_row7_col2 {
   background-color: white;
 }
-#T_70eb1_row5_col7, #T_70eb1_row5_col8 {
+#T_031e8_row5_col7, #T_031e8_row5_col8 {
   background-color: gray;
 }
 </style>
 </head>
 <body>
-<table id="T_70eb1_">
+<table id="T_031e8_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -38,100 +38,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_70eb1_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_70eb1_row0_col0" class="data row0 col0" >0.86</td>
-      <td id="T_70eb1_row0_col1" class="data row0 col1" >0.05</td>
-      <td id="T_70eb1_row0_col2" class="data row0 col2" >0.86</td>
-      <td id="T_70eb1_row0_col3" class="data row0 col3" >0.93</td>
-      <td id="T_70eb1_row0_col4" class="data row0 col4" >1.06</td>
-      <td id="T_70eb1_row0_col5" class="data row0 col5" >0.93</td>
-      <td id="T_70eb1_row0_col6" class="data row0 col6" >1.11</td>
-      <td id="T_70eb1_row0_col7" class="data row0 col7" >medium</td>
-      <td id="T_70eb1_row0_col8" class="data row0 col8" >medium</td>
+      <th id="T_031e8_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_031e8_row0_col0" class="data row0 col0" >0.86</td>
+      <td id="T_031e8_row0_col1" class="data row0 col1" >0.05</td>
+      <td id="T_031e8_row0_col2" class="data row0 col2" >0.86</td>
+      <td id="T_031e8_row0_col3" class="data row0 col3" >0.93</td>
+      <td id="T_031e8_row0_col4" class="data row0 col4" >1.06</td>
+      <td id="T_031e8_row0_col5" class="data row0 col5" >0.93</td>
+      <td id="T_031e8_row0_col6" class="data row0 col6" >1.11</td>
+      <td id="T_031e8_row0_col7" class="data row0 col7" >medium</td>
+      <td id="T_031e8_row0_col8" class="data row0 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_70eb1_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_70eb1_row1_col0" class="data row1 col0" >1.07</td>
-      <td id="T_70eb1_row1_col1" class="data row1 col1" >1.08</td>
-      <td id="T_70eb1_row1_col2" class="data row1 col2" >0.48</td>
-      <td id="T_70eb1_row1_col3" class="data row1 col3" >1.34</td>
-      <td id="T_70eb1_row1_col4" class="data row1 col4" >5.76</td>
-      <td id="T_70eb1_row1_col5" class="data row1 col5" >1.45</td>
-      <td id="T_70eb1_row1_col6" class="data row1 col6" >5.38</td>
-      <td id="T_70eb1_row1_col7" class="data row1 col7" >low</td>
-      <td id="T_70eb1_row1_col8" class="data row1 col8" >low</td>
+      <th id="T_031e8_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_031e8_row1_col0" class="data row1 col0" >1.07</td>
+      <td id="T_031e8_row1_col1" class="data row1 col1" >1.08</td>
+      <td id="T_031e8_row1_col2" class="data row1 col2" >0.48</td>
+      <td id="T_031e8_row1_col3" class="data row1 col3" >1.34</td>
+      <td id="T_031e8_row1_col4" class="data row1 col4" >5.76</td>
+      <td id="T_031e8_row1_col5" class="data row1 col5" >1.45</td>
+      <td id="T_031e8_row1_col6" class="data row1 col6" >5.38</td>
+      <td id="T_031e8_row1_col7" class="data row1 col7" >low</td>
+      <td id="T_031e8_row1_col8" class="data row1 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_70eb1_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_70eb1_row2_col0" class="data row2 col0" >18.67</td>
-      <td id="T_70eb1_row2_col1" class="data row2 col1" >0.41</td>
-      <td id="T_70eb1_row2_col2" class="data row2 col2" >19.42</td>
-      <td id="T_70eb1_row2_col3" class="data row2 col3" >21.16</td>
-      <td id="T_70eb1_row2_col4" class="data row2 col4" >23.22</td>
-      <td id="T_70eb1_row2_col5" class="data row2 col5" >22.28</td>
-      <td id="T_70eb1_row2_col6" class="data row2 col6" >26.79</td>
-      <td id="T_70eb1_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_70eb1_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_031e8_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_031e8_row2_col0" class="data row2 col0" >18.67</td>
+      <td id="T_031e8_row2_col1" class="data row2 col1" >0.41</td>
+      <td id="T_031e8_row2_col2" class="data row2 col2" >19.42</td>
+      <td id="T_031e8_row2_col3" class="data row2 col3" >21.16</td>
+      <td id="T_031e8_row2_col4" class="data row2 col4" >23.22</td>
+      <td id="T_031e8_row2_col5" class="data row2 col5" >22.28</td>
+      <td id="T_031e8_row2_col6" class="data row2 col6" >26.79</td>
+      <td id="T_031e8_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_031e8_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_70eb1_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_70eb1_row3_col0" class="data row3 col0" >23.82</td>
-      <td id="T_70eb1_row3_col1" class="data row3 col1" >9.52</td>
-      <td id="T_70eb1_row3_col2" class="data row3 col2" >24.59</td>
-      <td id="T_70eb1_row3_col3" class="data row3 col3" >25.65</td>
-      <td id="T_70eb1_row3_col4" class="data row3 col4" >63.63</td>
-      <td id="T_70eb1_row3_col5" class="data row3 col5" >26.85</td>
-      <td id="T_70eb1_row3_col6" class="data row3 col6" >71.22</td>
-      <td id="T_70eb1_row3_col7" class="data row3 col7" >low</td>
-      <td id="T_70eb1_row3_col8" class="data row3 col8" >low</td>
+      <th id="T_031e8_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_031e8_row3_col0" class="data row3 col0" >23.82</td>
+      <td id="T_031e8_row3_col1" class="data row3 col1" >9.52</td>
+      <td id="T_031e8_row3_col2" class="data row3 col2" >24.59</td>
+      <td id="T_031e8_row3_col3" class="data row3 col3" >25.65</td>
+      <td id="T_031e8_row3_col4" class="data row3 col4" >63.63</td>
+      <td id="T_031e8_row3_col5" class="data row3 col5" >26.85</td>
+      <td id="T_031e8_row3_col6" class="data row3 col6" >71.22</td>
+      <td id="T_031e8_row3_col7" class="data row3 col7" >low</td>
+      <td id="T_031e8_row3_col8" class="data row3 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_70eb1_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_70eb1_row4_col0" class="data row4 col0" >-0.00</td>
-      <td id="T_70eb1_row4_col1" class="data row4 col1" >0.26</td>
-      <td id="T_70eb1_row4_col2" class="data row4 col2" >-0.05</td>
-      <td id="T_70eb1_row4_col3" class="data row4 col3" >-0.29</td>
-      <td id="T_70eb1_row4_col4" class="data row4 col4" >-1.16</td>
-      <td id="T_70eb1_row4_col5" class="data row4 col5" >-0.56</td>
-      <td id="T_70eb1_row4_col6" class="data row4 col6" >-1.48</td>
-      <td id="T_70eb1_row4_col7" class="data row4 col7" >medium</td>
-      <td id="T_70eb1_row4_col8" class="data row4 col8" >high</td>
+      <th id="T_031e8_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_031e8_row4_col0" class="data row4 col0" >-0.00</td>
+      <td id="T_031e8_row4_col1" class="data row4 col1" >0.26</td>
+      <td id="T_031e8_row4_col2" class="data row4 col2" >-0.05</td>
+      <td id="T_031e8_row4_col3" class="data row4 col3" >-0.29</td>
+      <td id="T_031e8_row4_col4" class="data row4 col4" >-1.16</td>
+      <td id="T_031e8_row4_col5" class="data row4 col5" >-0.56</td>
+      <td id="T_031e8_row4_col6" class="data row4 col6" >-1.48</td>
+      <td id="T_031e8_row4_col7" class="data row4 col7" >medium</td>
+      <td id="T_031e8_row4_col8" class="data row4 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_70eb1_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_70eb1_row5_col0" class="data row5 col0" >5674.09</td>
-      <td id="T_70eb1_row5_col1" class="data row5 col1" >394.59</td>
-      <td id="T_70eb1_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_70eb1_row5_col3" class="data row5 col3" >4626.89</td>
-      <td id="T_70eb1_row5_col4" class="data row5 col4" >5859.97</td>
-      <td id="T_70eb1_row5_col5" class="data row5 col5" >4245.61</td>
-      <td id="T_70eb1_row5_col6" class="data row5 col6" >5953.53</td>
-      <td id="T_70eb1_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_70eb1_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_031e8_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_031e8_row5_col0" class="data row5 col0" >5674.09</td>
+      <td id="T_031e8_row5_col1" class="data row5 col1" >394.59</td>
+      <td id="T_031e8_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_031e8_row5_col3" class="data row5 col3" >4626.89</td>
+      <td id="T_031e8_row5_col4" class="data row5 col4" >5859.97</td>
+      <td id="T_031e8_row5_col5" class="data row5 col5" >4245.61</td>
+      <td id="T_031e8_row5_col6" class="data row5 col6" >5953.53</td>
+      <td id="T_031e8_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_031e8_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_70eb1_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_70eb1_row6_col0" class="data row6 col0" >0.00</td>
-      <td id="T_70eb1_row6_col1" class="data row6 col1" >0.00</td>
-      <td id="T_70eb1_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_70eb1_row6_col3" class="data row6 col3" >0.02</td>
-      <td id="T_70eb1_row6_col4" class="data row6 col4" >0.62</td>
-      <td id="T_70eb1_row6_col5" class="data row6 col5" >1.41</td>
-      <td id="T_70eb1_row6_col6" class="data row6 col6" >24.49</td>
-      <td id="T_70eb1_row6_col7" class="data row6 col7" >high</td>
-      <td id="T_70eb1_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_031e8_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_031e8_row6_col0" class="data row6 col0" >0.00</td>
+      <td id="T_031e8_row6_col1" class="data row6 col1" >0.00</td>
+      <td id="T_031e8_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_031e8_row6_col3" class="data row6 col3" >0.02</td>
+      <td id="T_031e8_row6_col4" class="data row6 col4" >0.62</td>
+      <td id="T_031e8_row6_col5" class="data row6 col5" >1.41</td>
+      <td id="T_031e8_row6_col6" class="data row6 col6" >24.49</td>
+      <td id="T_031e8_row6_col7" class="data row6 col7" >high</td>
+      <td id="T_031e8_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_70eb1_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_70eb1_row7_col0" class="data row7 col0" >730.38</td>
-      <td id="T_70eb1_row7_col1" class="data row7 col1" >143.75</td>
-      <td id="T_70eb1_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_70eb1_row7_col3" class="data row7 col3" >1292.18</td>
-      <td id="T_70eb1_row7_col4" class="data row7 col4" >1911.79</td>
-      <td id="T_70eb1_row7_col5" class="data row7 col5" >1618.89</td>
-      <td id="T_70eb1_row7_col6" class="data row7 col6" >2882.90</td>
-      <td id="T_70eb1_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_70eb1_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_031e8_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_031e8_row7_col0" class="data row7 col0" >730.38</td>
+      <td id="T_031e8_row7_col1" class="data row7 col1" >143.75</td>
+      <td id="T_031e8_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_031e8_row7_col3" class="data row7 col3" >1292.18</td>
+      <td id="T_031e8_row7_col4" class="data row7 col4" >1911.79</td>
+      <td id="T_031e8_row7_col5" class="data row7 col5" >1618.89</td>
+      <td id="T_031e8_row7_col6" class="data row7 col6" >2882.90</td>
+      <td id="T_031e8_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_031e8_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
