--- a/sites_data/GSB_NM/stat_matrix_static_colors.html
+++ b/sites_data/GSB_NM/stat_matrix_static_colors.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_f0510_row0_col7, #T_f0510_row4_col8 {
+#T_79fde_row0_col7, #T_79fde_row4_col8 {
   background-color: yellow;
 }
-#T_f0510_row0_col8, #T_f0510_row1_col7, #T_f0510_row1_col8, #T_f0510_row3_col7, #T_f0510_row3_col8, #T_f0510_row4_col7 {
+#T_79fde_row0_col8, #T_79fde_row1_col7, #T_79fde_row1_col8, #T_79fde_row3_col7, #T_79fde_row3_col8, #T_79fde_row4_col7 {
   background-color: green;
 }
-#T_f0510_row2_col7, #T_f0510_row2_col8, #T_f0510_row6_col7, #T_f0510_row6_col8, #T_f0510_row7_col7, #T_f0510_row7_col8 {
+#T_79fde_row2_col7, #T_79fde_row2_col8, #T_79fde_row6_col7, #T_79fde_row6_col8, #T_79fde_row7_col7, #T_79fde_row7_col8 {
   background-color: red;
 }
-#T_f0510_row5_col2, #T_f0510_row6_col2, #T_f0510_row7_col2 {
+#T_79fde_row5_col2, #T_79fde_row6_col2, #T_79fde_row7_col2 {
   background-color: white;
 }
-#T_f0510_row5_col7, #T_f0510_row5_col8 {
+#T_79fde_row5_col7, #T_79fde_row5_col8 {
   background-color: gray;
 }
 </style>
 </head>
 <body>
-<table id="T_f0510_">
+<table id="T_79fde_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -38,100 +38,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_f0510_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_f0510_row0_col0" class="data row0 col0" >1.03</td>
-      <td id="T_f0510_row0_col1" class="data row0 col1" >0.04</td>
-      <td id="T_f0510_row0_col2" class="data row0 col2" >1.01</td>
-      <td id="T_f0510_row0_col3" class="data row0 col3" >1.07</td>
-      <td id="T_f0510_row0_col4" class="data row0 col4" >1.26</td>
-      <td id="T_f0510_row0_col5" class="data row0 col5" >1.04</td>
-      <td id="T_f0510_row0_col6" class="data row0 col6" >1.20</td>
-      <td id="T_f0510_row0_col7" class="data row0 col7" >medium</td>
-      <td id="T_f0510_row0_col8" class="data row0 col8" >low</td>
+      <th id="T_79fde_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_79fde_row0_col0" class="data row0 col0" >1.03</td>
+      <td id="T_79fde_row0_col1" class="data row0 col1" >0.04</td>
+      <td id="T_79fde_row0_col2" class="data row0 col2" >1.01</td>
+      <td id="T_79fde_row0_col3" class="data row0 col3" >1.07</td>
+      <td id="T_79fde_row0_col4" class="data row0 col4" >1.26</td>
+      <td id="T_79fde_row0_col5" class="data row0 col5" >1.04</td>
+      <td id="T_79fde_row0_col6" class="data row0 col6" >1.20</td>
+      <td id="T_79fde_row0_col7" class="data row0 col7" >medium</td>
+      <td id="T_79fde_row0_col8" class="data row0 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_f0510_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_f0510_row1_col0" class="data row1 col0" >1.00</td>
-      <td id="T_f0510_row1_col1" class="data row1 col1" >1.01</td>
-      <td id="T_f0510_row1_col2" class="data row1 col2" >2.39</td>
-      <td id="T_f0510_row1_col3" class="data row1 col3" >1.23</td>
-      <td id="T_f0510_row1_col4" class="data row1 col4" >4.71</td>
-      <td id="T_f0510_row1_col5" class="data row1 col5" >1.29</td>
-      <td id="T_f0510_row1_col6" class="data row1 col6" >5.57</td>
-      <td id="T_f0510_row1_col7" class="data row1 col7" >low</td>
-      <td id="T_f0510_row1_col8" class="data row1 col8" >low</td>
+      <th id="T_79fde_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_79fde_row1_col0" class="data row1 col0" >1.00</td>
+      <td id="T_79fde_row1_col1" class="data row1 col1" >1.01</td>
+      <td id="T_79fde_row1_col2" class="data row1 col2" >2.39</td>
+      <td id="T_79fde_row1_col3" class="data row1 col3" >1.23</td>
+      <td id="T_79fde_row1_col4" class="data row1 col4" >4.71</td>
+      <td id="T_79fde_row1_col5" class="data row1 col5" >1.29</td>
+      <td id="T_79fde_row1_col6" class="data row1 col6" >5.57</td>
+      <td id="T_79fde_row1_col7" class="data row1 col7" >low</td>
+      <td id="T_79fde_row1_col8" class="data row1 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_f0510_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_f0510_row2_col0" class="data row2 col0" >18.05</td>
-      <td id="T_f0510_row2_col1" class="data row2 col1" >0.40</td>
-      <td id="T_f0510_row2_col2" class="data row2 col2" >18.75</td>
-      <td id="T_f0510_row2_col3" class="data row2 col3" >20.43</td>
-      <td id="T_f0510_row2_col4" class="data row2 col4" >21.62</td>
-      <td id="T_f0510_row2_col5" class="data row2 col5" >21.51</td>
-      <td id="T_f0510_row2_col6" class="data row2 col6" >25.77</td>
-      <td id="T_f0510_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_f0510_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_79fde_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_79fde_row2_col0" class="data row2 col0" >18.05</td>
+      <td id="T_79fde_row2_col1" class="data row2 col1" >0.40</td>
+      <td id="T_79fde_row2_col2" class="data row2 col2" >18.75</td>
+      <td id="T_79fde_row2_col3" class="data row2 col3" >20.43</td>
+      <td id="T_79fde_row2_col4" class="data row2 col4" >21.62</td>
+      <td id="T_79fde_row2_col5" class="data row2 col5" >21.51</td>
+      <td id="T_79fde_row2_col6" class="data row2 col6" >25.77</td>
+      <td id="T_79fde_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_79fde_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_f0510_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_f0510_row3_col0" class="data row3 col0" >29.94</td>
-      <td id="T_f0510_row3_col1" class="data row3 col1" >11.20</td>
-      <td id="T_f0510_row3_col2" class="data row3 col2" >29.91</td>
-      <td id="T_f0510_row3_col3" class="data row3 col3" >31.68</td>
-      <td id="T_f0510_row3_col4" class="data row3 col4" >73.31</td>
-      <td id="T_f0510_row3_col5" class="data row3 col5" >31.52</td>
-      <td id="T_f0510_row3_col6" class="data row3 col6" >75.73</td>
-      <td id="T_f0510_row3_col7" class="data row3 col7" >low</td>
-      <td id="T_f0510_row3_col8" class="data row3 col8" >low</td>
+      <th id="T_79fde_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_79fde_row3_col0" class="data row3 col0" >29.94</td>
+      <td id="T_79fde_row3_col1" class="data row3 col1" >11.20</td>
+      <td id="T_79fde_row3_col2" class="data row3 col2" >29.91</td>
+      <td id="T_79fde_row3_col3" class="data row3 col3" >31.68</td>
+      <td id="T_79fde_row3_col4" class="data row3 col4" >73.31</td>
+      <td id="T_79fde_row3_col5" class="data row3 col5" >31.52</td>
+      <td id="T_79fde_row3_col6" class="data row3 col6" >75.73</td>
+      <td id="T_79fde_row3_col7" class="data row3 col7" >low</td>
+      <td id="T_79fde_row3_col8" class="data row3 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_f0510_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_f0510_row4_col0" class="data row4 col0" >-0.01</td>
-      <td id="T_f0510_row4_col1" class="data row4 col1" >0.32</td>
-      <td id="T_f0510_row4_col2" class="data row4 col2" >-0.07</td>
-      <td id="T_f0510_row4_col3" class="data row4 col3" >-0.32</td>
-      <td id="T_f0510_row4_col4" class="data row4 col4" >-1.01</td>
-      <td id="T_f0510_row4_col5" class="data row4 col5" >-0.63</td>
-      <td id="T_f0510_row4_col6" class="data row4 col6" >-1.59</td>
-      <td id="T_f0510_row4_col7" class="data row4 col7" >low</td>
-      <td id="T_f0510_row4_col8" class="data row4 col8" >medium</td>
+      <th id="T_79fde_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_79fde_row4_col0" class="data row4 col0" >-0.01</td>
+      <td id="T_79fde_row4_col1" class="data row4 col1" >0.32</td>
+      <td id="T_79fde_row4_col2" class="data row4 col2" >-0.07</td>
+      <td id="T_79fde_row4_col3" class="data row4 col3" >-0.32</td>
+      <td id="T_79fde_row4_col4" class="data row4 col4" >-1.01</td>
+      <td id="T_79fde_row4_col5" class="data row4 col5" >-0.63</td>
+      <td id="T_79fde_row4_col6" class="data row4 col6" >-1.59</td>
+      <td id="T_79fde_row4_col7" class="data row4 col7" >low</td>
+      <td id="T_79fde_row4_col8" class="data row4 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_f0510_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_f0510_row5_col0" class="data row5 col0" >6706.44</td>
-      <td id="T_f0510_row5_col1" class="data row5 col1" >384.54</td>
-      <td id="T_f0510_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_f0510_row5_col3" class="data row5 col3" >5574.92</td>
-      <td id="T_f0510_row5_col4" class="data row5 col4" >6760.42</td>
-      <td id="T_f0510_row5_col5" class="data row5 col5" >5163.03</td>
-      <td id="T_f0510_row5_col6" class="data row5 col6" >6899.56</td>
-      <td id="T_f0510_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_f0510_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_79fde_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_79fde_row5_col0" class="data row5 col0" >6706.44</td>
+      <td id="T_79fde_row5_col1" class="data row5 col1" >384.54</td>
+      <td id="T_79fde_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_79fde_row5_col3" class="data row5 col3" >5574.92</td>
+      <td id="T_79fde_row5_col4" class="data row5 col4" >6760.42</td>
+      <td id="T_79fde_row5_col5" class="data row5 col5" >5163.03</td>
+      <td id="T_79fde_row5_col6" class="data row5 col6" >6899.56</td>
+      <td id="T_79fde_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_79fde_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_f0510_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_f0510_row6_col0" class="data row6 col0" >0.00</td>
-      <td id="T_f0510_row6_col1" class="data row6 col1" >0.00</td>
-      <td id="T_f0510_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_f0510_row6_col3" class="data row6 col3" >0.00</td>
-      <td id="T_f0510_row6_col4" class="data row6 col4" >0.00</td>
-      <td id="T_f0510_row6_col5" class="data row6 col5" >0.00</td>
-      <td id="T_f0510_row6_col6" class="data row6 col6" >0.00</td>
-      <td id="T_f0510_row6_col7" class="data row6 col7" >high</td>
-      <td id="T_f0510_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_79fde_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_79fde_row6_col0" class="data row6 col0" >0.00</td>
+      <td id="T_79fde_row6_col1" class="data row6 col1" >0.00</td>
+      <td id="T_79fde_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_79fde_row6_col3" class="data row6 col3" >0.00</td>
+      <td id="T_79fde_row6_col4" class="data row6 col4" >0.00</td>
+      <td id="T_79fde_row6_col5" class="data row6 col5" >0.00</td>
+      <td id="T_79fde_row6_col6" class="data row6 col6" >0.00</td>
+      <td id="T_79fde_row6_col7" class="data row6 col7" >high</td>
+      <td id="T_79fde_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_f0510_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_f0510_row7_col0" class="data row7 col0" >196.15</td>
-      <td id="T_f0510_row7_col1" class="data row7 col1" >84.95</td>
-      <td id="T_f0510_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_f0510_row7_col3" class="data row7 col3" >530.65</td>
-      <td id="T_f0510_row7_col4" class="data row7 col4" >995.44</td>
-      <td id="T_f0510_row7_col5" class="data row7 col5" >775.64</td>
-      <td id="T_f0510_row7_col6" class="data row7 col6" >1773.11</td>
-      <td id="T_f0510_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_f0510_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_79fde_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_79fde_row7_col0" class="data row7 col0" >196.15</td>
+      <td id="T_79fde_row7_col1" class="data row7 col1" >84.95</td>
+      <td id="T_79fde_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_79fde_row7_col3" class="data row7 col3" >530.65</td>
+      <td id="T_79fde_row7_col4" class="data row7 col4" >995.44</td>
+      <td id="T_79fde_row7_col5" class="data row7 col5" >775.64</td>
+      <td id="T_79fde_row7_col6" class="data row7 col6" >1773.11</td>
+      <td id="T_79fde_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_79fde_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
