--- a/sites_data/GWC_TX/stat_matrix_static_colors.html
+++ b/sites_data/GWC_TX/stat_matrix_static_colors.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_41684_row0_col7, #T_41684_row0_col8, #T_41684_row1_col7, #T_41684_row5_col7, #T_41684_row5_col8 {
+#T_8d4c1_row0_col7, #T_8d4c1_row0_col8, #T_8d4c1_row1_col7, #T_8d4c1_row5_col7, #T_8d4c1_row5_col8 {
   background-color: gray;
 }
-#T_41684_row1_col8, #T_41684_row3_col7, #T_41684_row3_col8, #T_41684_row4_col7 {
+#T_8d4c1_row1_col8, #T_8d4c1_row3_col7, #T_8d4c1_row3_col8, #T_8d4c1_row4_col7 {
   background-color: green;
 }
-#T_41684_row2_col7, #T_41684_row2_col8, #T_41684_row6_col7, #T_41684_row6_col8, #T_41684_row7_col7, #T_41684_row7_col8 {
+#T_8d4c1_row2_col7, #T_8d4c1_row2_col8, #T_8d4c1_row6_col7, #T_8d4c1_row6_col8, #T_8d4c1_row7_col7, #T_8d4c1_row7_col8 {
   background-color: red;
 }
-#T_41684_row4_col8 {
+#T_8d4c1_row4_col8 {
   background-color: yellow;
 }
-#T_41684_row5_col2, #T_41684_row6_col2, #T_41684_row7_col2 {
+#T_8d4c1_row5_col2, #T_8d4c1_row6_col2, #T_8d4c1_row7_col2 {
   background-color: white;
 }
 </style>
 </head>
 <body>
-<table id="T_41684_">
+<table id="T_8d4c1_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -38,100 +38,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_41684_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_41684_row0_col0" class="data row0 col0" >1.92</td>
-      <td id="T_41684_row0_col1" class="data row0 col1" >0.14</td>
-      <td id="T_41684_row0_col2" class="data row0 col2" >1.89</td>
-      <td id="T_41684_row0_col3" class="data row0 col3" >1.87</td>
-      <td id="T_41684_row0_col4" class="data row0 col4" >2.23</td>
-      <td id="T_41684_row0_col5" class="data row0 col5" >1.80</td>
-      <td id="T_41684_row0_col6" class="data row0 col6" >2.34</td>
-      <td id="T_41684_row0_col7" class="data row0 col7" >negative</td>
-      <td id="T_41684_row0_col8" class="data row0 col8" >negative</td>
+      <th id="T_8d4c1_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_8d4c1_row0_col0" class="data row0 col0" >1.92</td>
+      <td id="T_8d4c1_row0_col1" class="data row0 col1" >0.14</td>
+      <td id="T_8d4c1_row0_col2" class="data row0 col2" >1.89</td>
+      <td id="T_8d4c1_row0_col3" class="data row0 col3" >1.87</td>
+      <td id="T_8d4c1_row0_col4" class="data row0 col4" >2.23</td>
+      <td id="T_8d4c1_row0_col5" class="data row0 col5" >1.80</td>
+      <td id="T_8d4c1_row0_col6" class="data row0 col6" >2.34</td>
+      <td id="T_8d4c1_row0_col7" class="data row0 col7" >negative</td>
+      <td id="T_8d4c1_row0_col8" class="data row0 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_41684_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_41684_row1_col0" class="data row1 col0" >1.23</td>
-      <td id="T_41684_row1_col1" class="data row1 col1" >1.27</td>
-      <td id="T_41684_row1_col2" class="data row1 col2" >14.34</td>
-      <td id="T_41684_row1_col3" class="data row1 col3" >1.40</td>
-      <td id="T_41684_row1_col4" class="data row1 col4" >6.24</td>
-      <td id="T_41684_row1_col5" class="data row1 col5" >1.47</td>
-      <td id="T_41684_row1_col6" class="data row1 col6" >6.95</td>
-      <td id="T_41684_row1_col7" class="data row1 col7" >negative</td>
-      <td id="T_41684_row1_col8" class="data row1 col8" >low</td>
+      <th id="T_8d4c1_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_8d4c1_row1_col0" class="data row1 col0" >1.23</td>
+      <td id="T_8d4c1_row1_col1" class="data row1 col1" >1.27</td>
+      <td id="T_8d4c1_row1_col2" class="data row1 col2" >14.34</td>
+      <td id="T_8d4c1_row1_col3" class="data row1 col3" >1.40</td>
+      <td id="T_8d4c1_row1_col4" class="data row1 col4" >6.24</td>
+      <td id="T_8d4c1_row1_col5" class="data row1 col5" >1.47</td>
+      <td id="T_8d4c1_row1_col6" class="data row1 col6" >6.95</td>
+      <td id="T_8d4c1_row1_col7" class="data row1 col7" >negative</td>
+      <td id="T_8d4c1_row1_col8" class="data row1 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_41684_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_41684_row2_col0" class="data row2 col0" >28.22</td>
-      <td id="T_41684_row2_col1" class="data row2 col1" >0.29</td>
-      <td id="T_41684_row2_col2" class="data row2 col2" >28.75</td>
-      <td id="T_41684_row2_col3" class="data row2 col3" >30.13</td>
-      <td id="T_41684_row2_col4" class="data row2 col4" >31.10</td>
-      <td id="T_41684_row2_col5" class="data row2 col5" >31.01</td>
-      <td id="T_41684_row2_col6" class="data row2 col6" >34.13</td>
-      <td id="T_41684_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_41684_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_8d4c1_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_8d4c1_row2_col0" class="data row2 col0" >28.22</td>
+      <td id="T_8d4c1_row2_col1" class="data row2 col1" >0.29</td>
+      <td id="T_8d4c1_row2_col2" class="data row2 col2" >28.75</td>
+      <td id="T_8d4c1_row2_col3" class="data row2 col3" >30.13</td>
+      <td id="T_8d4c1_row2_col4" class="data row2 col4" >31.10</td>
+      <td id="T_8d4c1_row2_col5" class="data row2 col5" >31.01</td>
+      <td id="T_8d4c1_row2_col6" class="data row2 col6" >34.13</td>
+      <td id="T_8d4c1_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_8d4c1_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_41684_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_41684_row3_col0" class="data row3 col0" >60.51</td>
-      <td id="T_41684_row3_col1" class="data row3 col1" >27.11</td>
-      <td id="T_41684_row3_col2" class="data row3 col2" >60.04</td>
-      <td id="T_41684_row3_col3" class="data row3 col3" >63.76</td>
-      <td id="T_41684_row3_col4" class="data row3 col4" >177.24</td>
-      <td id="T_41684_row3_col5" class="data row3 col5" >65.70</td>
-      <td id="T_41684_row3_col6" class="data row3 col6" >202.91</td>
-      <td id="T_41684_row3_col7" class="data row3 col7" >low</td>
-      <td id="T_41684_row3_col8" class="data row3 col8" >low</td>
+      <th id="T_8d4c1_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_8d4c1_row3_col0" class="data row3 col0" >60.51</td>
+      <td id="T_8d4c1_row3_col1" class="data row3 col1" >27.11</td>
+      <td id="T_8d4c1_row3_col2" class="data row3 col2" >60.04</td>
+      <td id="T_8d4c1_row3_col3" class="data row3 col3" >63.76</td>
+      <td id="T_8d4c1_row3_col4" class="data row3 col4" >177.24</td>
+      <td id="T_8d4c1_row3_col5" class="data row3 col5" >65.70</td>
+      <td id="T_8d4c1_row3_col6" class="data row3 col6" >202.91</td>
+      <td id="T_8d4c1_row3_col7" class="data row3 col7" >low</td>
+      <td id="T_8d4c1_row3_col8" class="data row3 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_41684_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_41684_row4_col0" class="data row4 col0" >-0.02</td>
-      <td id="T_41684_row4_col1" class="data row4 col1" >0.32</td>
-      <td id="T_41684_row4_col2" class="data row4 col2" >-0.03</td>
-      <td id="T_41684_row4_col3" class="data row4 col3" >-0.29</td>
-      <td id="T_41684_row4_col4" class="data row4 col4" >-1.04</td>
-      <td id="T_41684_row4_col5" class="data row4 col5" >-0.59</td>
-      <td id="T_41684_row4_col6" class="data row4 col6" >-1.74</td>
-      <td id="T_41684_row4_col7" class="data row4 col7" >low</td>
-      <td id="T_41684_row4_col8" class="data row4 col8" >medium</td>
+      <th id="T_8d4c1_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_8d4c1_row4_col0" class="data row4 col0" >-0.02</td>
+      <td id="T_8d4c1_row4_col1" class="data row4 col1" >0.32</td>
+      <td id="T_8d4c1_row4_col2" class="data row4 col2" >-0.03</td>
+      <td id="T_8d4c1_row4_col3" class="data row4 col3" >-0.29</td>
+      <td id="T_8d4c1_row4_col4" class="data row4 col4" >-1.04</td>
+      <td id="T_8d4c1_row4_col5" class="data row4 col5" >-0.59</td>
+      <td id="T_8d4c1_row4_col6" class="data row4 col6" >-1.74</td>
+      <td id="T_8d4c1_row4_col7" class="data row4 col7" >low</td>
+      <td id="T_8d4c1_row4_col8" class="data row4 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_41684_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_41684_row5_col0" class="data row5 col0" >898.23</td>
-      <td id="T_41684_row5_col1" class="data row5 col1" >161.15</td>
-      <td id="T_41684_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_41684_row5_col3" class="data row5 col3" >602.40</td>
-      <td id="T_41684_row5_col4" class="data row5 col4" >1061.76</td>
-      <td id="T_41684_row5_col5" class="data row5 col5" >505.19</td>
-      <td id="T_41684_row5_col6" class="data row5 col6" >1103.40</td>
-      <td id="T_41684_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_41684_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_8d4c1_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_8d4c1_row5_col0" class="data row5 col0" >898.23</td>
+      <td id="T_8d4c1_row5_col1" class="data row5 col1" >161.15</td>
+      <td id="T_8d4c1_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_8d4c1_row5_col3" class="data row5 col3" >602.40</td>
+      <td id="T_8d4c1_row5_col4" class="data row5 col4" >1061.76</td>
+      <td id="T_8d4c1_row5_col5" class="data row5 col5" >505.19</td>
+      <td id="T_8d4c1_row5_col6" class="data row5 col6" >1103.40</td>
+      <td id="T_8d4c1_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_8d4c1_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_41684_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_41684_row6_col0" class="data row6 col0" >0.15</td>
-      <td id="T_41684_row6_col1" class="data row6 col1" >0.66</td>
-      <td id="T_41684_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_41684_row6_col3" class="data row6 col3" >5.91</td>
-      <td id="T_41684_row6_col4" class="data row6 col4" >47.98</td>
-      <td id="T_41684_row6_col5" class="data row6 col5" >44.83</td>
-      <td id="T_41684_row6_col6" class="data row6 col6" >288.99</td>
-      <td id="T_41684_row6_col7" class="data row6 col7" >high</td>
-      <td id="T_41684_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_8d4c1_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_8d4c1_row6_col0" class="data row6 col0" >0.15</td>
+      <td id="T_8d4c1_row6_col1" class="data row6 col1" >0.66</td>
+      <td id="T_8d4c1_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_8d4c1_row6_col3" class="data row6 col3" >5.91</td>
+      <td id="T_8d4c1_row6_col4" class="data row6 col4" >47.98</td>
+      <td id="T_8d4c1_row6_col5" class="data row6 col5" >44.83</td>
+      <td id="T_8d4c1_row6_col6" class="data row6 col6" >288.99</td>
+      <td id="T_8d4c1_row6_col7" class="data row6 col7" >high</td>
+      <td id="T_8d4c1_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_41684_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_41684_row7_col0" class="data row7 col0" >3309.23</td>
-      <td id="T_41684_row7_col1" class="data row7 col1" >254.39</td>
-      <td id="T_41684_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_41684_row7_col3" class="data row7 col3" >4232.47</td>
-      <td id="T_41684_row7_col4" class="data row7 col4" >5085.98</td>
-      <td id="T_41684_row7_col5" class="data row7 col5" >4705.27</td>
-      <td id="T_41684_row7_col6" class="data row7 col6" >6394.28</td>
-      <td id="T_41684_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_41684_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_8d4c1_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_8d4c1_row7_col0" class="data row7 col0" >3309.23</td>
+      <td id="T_8d4c1_row7_col1" class="data row7 col1" >254.39</td>
+      <td id="T_8d4c1_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_8d4c1_row7_col3" class="data row7 col3" >4232.47</td>
+      <td id="T_8d4c1_row7_col4" class="data row7 col4" >5085.98</td>
+      <td id="T_8d4c1_row7_col5" class="data row7 col5" >4705.27</td>
+      <td id="T_8d4c1_row7_col6" class="data row7 col6" >6394.28</td>
+      <td id="T_8d4c1_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_8d4c1_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
