--- a/sites_data/PGD_MT/stat_matrix_static_colors.html
+++ b/sites_data/PGD_MT/stat_matrix_static_colors.html
@@ -3,22 +3,22 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_d31a2_row0_col7, #T_d31a2_row0_col8, #T_d31a2_row1_col7, #T_d31a2_row1_col8, #T_d31a2_row3_col7, #T_d31a2_row3_col8, #T_d31a2_row4_col8 {
+#T_262af_row0_col7, #T_262af_row0_col8, #T_262af_row1_col7, #T_262af_row1_col8, #T_262af_row3_col7, #T_262af_row3_col8, #T_262af_row4_col8 {
   background-color: green;
 }
-#T_d31a2_row2_col7, #T_d31a2_row2_col8, #T_d31a2_row6_col7, #T_d31a2_row6_col8, #T_d31a2_row7_col7, #T_d31a2_row7_col8 {
+#T_262af_row2_col7, #T_262af_row2_col8, #T_262af_row6_col7, #T_262af_row6_col8, #T_262af_row7_col7, #T_262af_row7_col8 {
   background-color: red;
 }
-#T_d31a2_row4_col7, #T_d31a2_row5_col7, #T_d31a2_row5_col8 {
+#T_262af_row4_col7, #T_262af_row5_col7, #T_262af_row5_col8 {
   background-color: gray;
 }
-#T_d31a2_row5_col2, #T_d31a2_row6_col2, #T_d31a2_row7_col2 {
+#T_262af_row5_col2, #T_262af_row6_col2, #T_262af_row7_col2 {
   background-color: white;
 }
 </style>
 </head>
 <body>
-<table id="T_d31a2_">
+<table id="T_262af_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -35,100 +35,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_d31a2_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_d31a2_row0_col0" class="data row0 col0" >0.76</td>
-      <td id="T_d31a2_row0_col1" class="data row0 col1" >0.04</td>
-      <td id="T_d31a2_row0_col2" class="data row0 col2" >0.77</td>
-      <td id="T_d31a2_row0_col3" class="data row0 col3" >0.79</td>
-      <td id="T_d31a2_row0_col4" class="data row0 col4" >0.90</td>
-      <td id="T_d31a2_row0_col5" class="data row0 col5" >0.78</td>
-      <td id="T_d31a2_row0_col6" class="data row0 col6" >0.90</td>
-      <td id="T_d31a2_row0_col7" class="data row0 col7" >low</td>
-      <td id="T_d31a2_row0_col8" class="data row0 col8" >low</td>
+      <th id="T_262af_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_262af_row0_col0" class="data row0 col0" >0.76</td>
+      <td id="T_262af_row0_col1" class="data row0 col1" >0.04</td>
+      <td id="T_262af_row0_col2" class="data row0 col2" >0.77</td>
+      <td id="T_262af_row0_col3" class="data row0 col3" >0.79</td>
+      <td id="T_262af_row0_col4" class="data row0 col4" >0.90</td>
+      <td id="T_262af_row0_col5" class="data row0 col5" >0.78</td>
+      <td id="T_262af_row0_col6" class="data row0 col6" >0.90</td>
+      <td id="T_262af_row0_col7" class="data row0 col7" >low</td>
+      <td id="T_262af_row0_col8" class="data row0 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_d31a2_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_d31a2_row1_col0" class="data row1 col0" >0.69</td>
-      <td id="T_d31a2_row1_col1" class="data row1 col1" >0.83</td>
-      <td id="T_d31a2_row1_col2" class="data row1 col2" >2.39</td>
-      <td id="T_d31a2_row1_col3" class="data row1 col3" >0.74</td>
-      <td id="T_d31a2_row1_col4" class="data row1 col4" >3.86</td>
-      <td id="T_d31a2_row1_col5" class="data row1 col5" >0.74</td>
-      <td id="T_d31a2_row1_col6" class="data row1 col6" >3.86</td>
-      <td id="T_d31a2_row1_col7" class="data row1 col7" >low</td>
-      <td id="T_d31a2_row1_col8" class="data row1 col8" >low</td>
+      <th id="T_262af_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_262af_row1_col0" class="data row1 col0" >0.69</td>
+      <td id="T_262af_row1_col1" class="data row1 col1" >0.83</td>
+      <td id="T_262af_row1_col2" class="data row1 col2" >2.39</td>
+      <td id="T_262af_row1_col3" class="data row1 col3" >0.74</td>
+      <td id="T_262af_row1_col4" class="data row1 col4" >3.86</td>
+      <td id="T_262af_row1_col5" class="data row1 col5" >0.74</td>
+      <td id="T_262af_row1_col6" class="data row1 col6" >3.86</td>
+      <td id="T_262af_row1_col7" class="data row1 col7" >low</td>
+      <td id="T_262af_row1_col8" class="data row1 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_d31a2_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_d31a2_row2_col0" class="data row2 col0" >13.20</td>
-      <td id="T_d31a2_row2_col1" class="data row2 col1" >0.38</td>
-      <td id="T_d31a2_row2_col2" class="data row2 col2" >13.82</td>
-      <td id="T_d31a2_row2_col3" class="data row2 col3" >15.54</td>
-      <td id="T_d31a2_row2_col4" class="data row2 col4" >17.01</td>
-      <td id="T_d31a2_row2_col5" class="data row2 col5" >16.53</td>
-      <td id="T_d31a2_row2_col6" class="data row2 col6" >20.55</td>
-      <td id="T_d31a2_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_d31a2_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_262af_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_262af_row2_col0" class="data row2 col0" >13.20</td>
+      <td id="T_262af_row2_col1" class="data row2 col1" >0.38</td>
+      <td id="T_262af_row2_col2" class="data row2 col2" >13.82</td>
+      <td id="T_262af_row2_col3" class="data row2 col3" >15.54</td>
+      <td id="T_262af_row2_col4" class="data row2 col4" >17.01</td>
+      <td id="T_262af_row2_col5" class="data row2 col5" >16.53</td>
+      <td id="T_262af_row2_col6" class="data row2 col6" >20.55</td>
+      <td id="T_262af_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_262af_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_d31a2_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_d31a2_row3_col0" class="data row3 col0" >25.00</td>
-      <td id="T_d31a2_row3_col1" class="data row3 col1" >11.02</td>
-      <td id="T_d31a2_row3_col2" class="data row3 col2" >25.84</td>
-      <td id="T_d31a2_row3_col3" class="data row3 col3" >25.82</td>
-      <td id="T_d31a2_row3_col4" class="data row3 col4" >71.83</td>
-      <td id="T_d31a2_row3_col5" class="data row3 col5" >26.29</td>
-      <td id="T_d31a2_row3_col6" class="data row3 col6" >75.62</td>
-      <td id="T_d31a2_row3_col7" class="data row3 col7" >low</td>
-      <td id="T_d31a2_row3_col8" class="data row3 col8" >low</td>
+      <th id="T_262af_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_262af_row3_col0" class="data row3 col0" >25.00</td>
+      <td id="T_262af_row3_col1" class="data row3 col1" >11.02</td>
+      <td id="T_262af_row3_col2" class="data row3 col2" >25.84</td>
+      <td id="T_262af_row3_col3" class="data row3 col3" >25.82</td>
+      <td id="T_262af_row3_col4" class="data row3 col4" >71.83</td>
+      <td id="T_262af_row3_col5" class="data row3 col5" >26.29</td>
+      <td id="T_262af_row3_col6" class="data row3 col6" >75.62</td>
+      <td id="T_262af_row3_col7" class="data row3 col7" >low</td>
+      <td id="T_262af_row3_col8" class="data row3 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_d31a2_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_d31a2_row4_col0" class="data row4 col0" >-0.01</td>
-      <td id="T_d31a2_row4_col1" class="data row4 col1" >0.30</td>
-      <td id="T_d31a2_row4_col2" class="data row4 col2" >-0.03</td>
-      <td id="T_d31a2_row4_col3" class="data row4 col3" >0.09</td>
-      <td id="T_d31a2_row4_col4" class="data row4 col4" >-0.51</td>
-      <td id="T_d31a2_row4_col5" class="data row4 col5" >-0.17</td>
-      <td id="T_d31a2_row4_col6" class="data row4 col6" >-1.44</td>
-      <td id="T_d31a2_row4_col7" class="data row4 col7" >negative</td>
-      <td id="T_d31a2_row4_col8" class="data row4 col8" >low</td>
+      <th id="T_262af_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_262af_row4_col0" class="data row4 col0" >-0.01</td>
+      <td id="T_262af_row4_col1" class="data row4 col1" >0.30</td>
+      <td id="T_262af_row4_col2" class="data row4 col2" >-0.03</td>
+      <td id="T_262af_row4_col3" class="data row4 col3" >0.09</td>
+      <td id="T_262af_row4_col4" class="data row4 col4" >-0.51</td>
+      <td id="T_262af_row4_col5" class="data row4 col5" >-0.17</td>
+      <td id="T_262af_row4_col6" class="data row4 col6" >-1.44</td>
+      <td id="T_262af_row4_col7" class="data row4 col7" >negative</td>
+      <td id="T_262af_row4_col8" class="data row4 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_d31a2_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_d31a2_row5_col0" class="data row5 col0" >8209.86</td>
-      <td id="T_d31a2_row5_col1" class="data row5 col1" >516.13</td>
-      <td id="T_d31a2_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_d31a2_row5_col3" class="data row5 col3" >7091.83</td>
-      <td id="T_d31a2_row5_col4" class="data row5 col4" >8610.65</td>
-      <td id="T_d31a2_row5_col5" class="data row5 col5" >6682.31</td>
-      <td id="T_d31a2_row5_col6" class="data row5 col6" >8591.91</td>
-      <td id="T_d31a2_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_d31a2_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_262af_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_262af_row5_col0" class="data row5 col0" >8209.86</td>
+      <td id="T_262af_row5_col1" class="data row5 col1" >516.13</td>
+      <td id="T_262af_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_262af_row5_col3" class="data row5 col3" >7091.83</td>
+      <td id="T_262af_row5_col4" class="data row5 col4" >8610.65</td>
+      <td id="T_262af_row5_col5" class="data row5 col5" >6682.31</td>
+      <td id="T_262af_row5_col6" class="data row5 col6" >8591.91</td>
+      <td id="T_262af_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_262af_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_d31a2_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_d31a2_row6_col0" class="data row6 col0" >0.00</td>
-      <td id="T_d31a2_row6_col1" class="data row6 col1" >0.00</td>
-      <td id="T_d31a2_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_d31a2_row6_col3" class="data row6 col3" >0.03</td>
-      <td id="T_d31a2_row6_col4" class="data row6 col4" >1.42</td>
-      <td id="T_d31a2_row6_col5" class="data row6 col5" >1.30</td>
-      <td id="T_d31a2_row6_col6" class="data row6 col6" >30.20</td>
-      <td id="T_d31a2_row6_col7" class="data row6 col7" >high</td>
-      <td id="T_d31a2_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_262af_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_262af_row6_col0" class="data row6 col0" >0.00</td>
+      <td id="T_262af_row6_col1" class="data row6 col1" >0.00</td>
+      <td id="T_262af_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_262af_row6_col3" class="data row6 col3" >0.03</td>
+      <td id="T_262af_row6_col4" class="data row6 col4" >1.42</td>
+      <td id="T_262af_row6_col5" class="data row6 col5" >1.30</td>
+      <td id="T_262af_row6_col6" class="data row6 col6" >30.20</td>
+      <td id="T_262af_row6_col7" class="data row6 col7" >high</td>
+      <td id="T_262af_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_d31a2_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_d31a2_row7_col0" class="data row7 col0" >427.21</td>
-      <td id="T_d31a2_row7_col1" class="data row7 col1" >128.46</td>
-      <td id="T_d31a2_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_d31a2_row7_col3" class="data row7 col3" >849.65</td>
-      <td id="T_d31a2_row7_col4" class="data row7 col4" >1405.01</td>
-      <td id="T_d31a2_row7_col5" class="data row7 col5" >1108.83</td>
-      <td id="T_d31a2_row7_col6" class="data row7 col6" >2153.54</td>
-      <td id="T_d31a2_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_d31a2_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_262af_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_262af_row7_col0" class="data row7 col0" >427.21</td>
+      <td id="T_262af_row7_col1" class="data row7 col1" >128.46</td>
+      <td id="T_262af_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_262af_row7_col3" class="data row7 col3" >849.65</td>
+      <td id="T_262af_row7_col4" class="data row7 col4" >1405.01</td>
+      <td id="T_262af_row7_col5" class="data row7 col5" >1108.83</td>
+      <td id="T_262af_row7_col6" class="data row7 col6" >2153.54</td>
+      <td id="T_262af_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_262af_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
