--- a/sites_data/RFS_CO/stat_matrix_static_colors.html
+++ b/sites_data/RFS_CO/stat_matrix_static_colors.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_707be_row0_col7, #T_707be_row4_col8 {
+#T_a9053_row0_col7, #T_a9053_row4_col8 {
   background-color: yellow;
 }
-#T_707be_row0_col8, #T_707be_row1_col7, #T_707be_row1_col8, #T_707be_row3_col7, #T_707be_row3_col8 {
+#T_a9053_row0_col8, #T_a9053_row1_col7, #T_a9053_row1_col8, #T_a9053_row3_col7, #T_a9053_row3_col8 {
   background-color: green;
 }
-#T_707be_row2_col7, #T_707be_row2_col8, #T_707be_row6_col7, #T_707be_row6_col8, #T_707be_row7_col7, #T_707be_row7_col8 {
+#T_a9053_row2_col7, #T_a9053_row2_col8, #T_a9053_row6_col7, #T_a9053_row6_col8, #T_a9053_row7_col7, #T_a9053_row7_col8 {
   background-color: red;
 }
-#T_707be_row4_col7, #T_707be_row5_col7, #T_707be_row5_col8 {
+#T_a9053_row4_col7, #T_a9053_row5_col7, #T_a9053_row5_col8 {
   background-color: gray;
 }
-#T_707be_row5_col2, #T_707be_row6_col2, #T_707be_row7_col2 {
+#T_a9053_row5_col2, #T_a9053_row6_col2, #T_a9053_row7_col2 {
   background-color: white;
 }
 </style>
 </head>
 <body>
-<table id="T_707be_">
+<table id="T_a9053_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -38,100 +38,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_707be_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_707be_row0_col0" class="data row0 col0" >1.11</td>
-      <td id="T_707be_row0_col1" class="data row0 col1" >0.05</td>
-      <td id="T_707be_row0_col2" class="data row0 col2" >1.12</td>
-      <td id="T_707be_row0_col3" class="data row0 col3" >1.20</td>
-      <td id="T_707be_row0_col4" class="data row0 col4" >1.33</td>
-      <td id="T_707be_row0_col5" class="data row0 col5" >1.16</td>
-      <td id="T_707be_row0_col6" class="data row0 col6" >1.30</td>
-      <td id="T_707be_row0_col7" class="data row0 col7" >medium</td>
-      <td id="T_707be_row0_col8" class="data row0 col8" >low</td>
+      <th id="T_a9053_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_a9053_row0_col0" class="data row0 col0" >1.11</td>
+      <td id="T_a9053_row0_col1" class="data row0 col1" >0.05</td>
+      <td id="T_a9053_row0_col2" class="data row0 col2" >1.12</td>
+      <td id="T_a9053_row0_col3" class="data row0 col3" >1.20</td>
+      <td id="T_a9053_row0_col4" class="data row0 col4" >1.33</td>
+      <td id="T_a9053_row0_col5" class="data row0 col5" >1.16</td>
+      <td id="T_a9053_row0_col6" class="data row0 col6" >1.30</td>
+      <td id="T_a9053_row0_col7" class="data row0 col7" >medium</td>
+      <td id="T_a9053_row0_col8" class="data row0 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_707be_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_707be_row1_col0" class="data row1 col0" >1.09</td>
-      <td id="T_707be_row1_col1" class="data row1 col1" >1.02</td>
-      <td id="T_707be_row1_col2" class="data row1 col2" >1.52</td>
-      <td id="T_707be_row1_col3" class="data row1 col3" >1.35</td>
-      <td id="T_707be_row1_col4" class="data row1 col4" >5.43</td>
-      <td id="T_707be_row1_col5" class="data row1 col5" >1.33</td>
-      <td id="T_707be_row1_col6" class="data row1 col6" >5.14</td>
-      <td id="T_707be_row1_col7" class="data row1 col7" >low</td>
-      <td id="T_707be_row1_col8" class="data row1 col8" >low</td>
+      <th id="T_a9053_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_a9053_row1_col0" class="data row1 col0" >1.09</td>
+      <td id="T_a9053_row1_col1" class="data row1 col1" >1.02</td>
+      <td id="T_a9053_row1_col2" class="data row1 col2" >1.52</td>
+      <td id="T_a9053_row1_col3" class="data row1 col3" >1.35</td>
+      <td id="T_a9053_row1_col4" class="data row1 col4" >5.43</td>
+      <td id="T_a9053_row1_col5" class="data row1 col5" >1.33</td>
+      <td id="T_a9053_row1_col6" class="data row1 col6" >5.14</td>
+      <td id="T_a9053_row1_col7" class="data row1 col7" >low</td>
+      <td id="T_a9053_row1_col8" class="data row1 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_707be_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_707be_row2_col0" class="data row2 col0" >17.49</td>
-      <td id="T_707be_row2_col1" class="data row2 col1" >0.34</td>
-      <td id="T_707be_row2_col2" class="data row2 col2" >18.14</td>
-      <td id="T_707be_row2_col3" class="data row2 col3" >19.76</td>
-      <td id="T_707be_row2_col4" class="data row2 col4" >20.87</td>
-      <td id="T_707be_row2_col5" class="data row2 col5" >20.80</td>
-      <td id="T_707be_row2_col6" class="data row2 col6" >24.77</td>
-      <td id="T_707be_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_707be_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_a9053_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_a9053_row2_col0" class="data row2 col0" >17.49</td>
+      <td id="T_a9053_row2_col1" class="data row2 col1" >0.34</td>
+      <td id="T_a9053_row2_col2" class="data row2 col2" >18.14</td>
+      <td id="T_a9053_row2_col3" class="data row2 col3" >19.76</td>
+      <td id="T_a9053_row2_col4" class="data row2 col4" >20.87</td>
+      <td id="T_a9053_row2_col5" class="data row2 col5" >20.80</td>
+      <td id="T_a9053_row2_col6" class="data row2 col6" >24.77</td>
+      <td id="T_a9053_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_a9053_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_707be_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_707be_row3_col0" class="data row3 col0" >29.37</td>
-      <td id="T_707be_row3_col1" class="data row3 col1" >11.66</td>
-      <td id="T_707be_row3_col2" class="data row3 col2" >30.16</td>
-      <td id="T_707be_row3_col3" class="data row3 col3" >31.38</td>
-      <td id="T_707be_row3_col4" class="data row3 col4" >78.62</td>
-      <td id="T_707be_row3_col5" class="data row3 col5" >31.72</td>
-      <td id="T_707be_row3_col6" class="data row3 col6" >88.29</td>
-      <td id="T_707be_row3_col7" class="data row3 col7" >low</td>
-      <td id="T_707be_row3_col8" class="data row3 col8" >low</td>
+      <th id="T_a9053_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_a9053_row3_col0" class="data row3 col0" >29.37</td>
+      <td id="T_a9053_row3_col1" class="data row3 col1" >11.66</td>
+      <td id="T_a9053_row3_col2" class="data row3 col2" >30.16</td>
+      <td id="T_a9053_row3_col3" class="data row3 col3" >31.38</td>
+      <td id="T_a9053_row3_col4" class="data row3 col4" >78.62</td>
+      <td id="T_a9053_row3_col5" class="data row3 col5" >31.72</td>
+      <td id="T_a9053_row3_col6" class="data row3 col6" >88.29</td>
+      <td id="T_a9053_row3_col7" class="data row3 col7" >low</td>
+      <td id="T_a9053_row3_col8" class="data row3 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_707be_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_707be_row4_col0" class="data row4 col0" >0.00</td>
-      <td id="T_707be_row4_col1" class="data row4 col1" >0.26</td>
-      <td id="T_707be_row4_col2" class="data row4 col2" >-0.03</td>
-      <td id="T_707be_row4_col3" class="data row4 col3" >0.01</td>
-      <td id="T_707be_row4_col4" class="data row4 col4" >-0.71</td>
-      <td id="T_707be_row4_col5" class="data row4 col5" >-0.34</td>
-      <td id="T_707be_row4_col6" class="data row4 col6" >-1.32</td>
-      <td id="T_707be_row4_col7" class="data row4 col7" >negative</td>
-      <td id="T_707be_row4_col8" class="data row4 col8" >medium</td>
+      <th id="T_a9053_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_a9053_row4_col0" class="data row4 col0" >0.00</td>
+      <td id="T_a9053_row4_col1" class="data row4 col1" >0.26</td>
+      <td id="T_a9053_row4_col2" class="data row4 col2" >-0.03</td>
+      <td id="T_a9053_row4_col3" class="data row4 col3" >0.01</td>
+      <td id="T_a9053_row4_col4" class="data row4 col4" >-0.71</td>
+      <td id="T_a9053_row4_col5" class="data row4 col5" >-0.34</td>
+      <td id="T_a9053_row4_col6" class="data row4 col6" >-1.32</td>
+      <td id="T_a9053_row4_col7" class="data row4 col7" >negative</td>
+      <td id="T_a9053_row4_col8" class="data row4 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_707be_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_707be_row5_col0" class="data row5 col0" >6081.25</td>
-      <td id="T_707be_row5_col1" class="data row5 col1" >360.41</td>
-      <td id="T_707be_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_707be_row5_col3" class="data row5 col3" >5042.16</td>
-      <td id="T_707be_row5_col4" class="data row5 col4" >6192.13</td>
-      <td id="T_707be_row5_col5" class="data row5 col5" >4662.46</td>
-      <td id="T_707be_row5_col6" class="data row5 col6" >6303.52</td>
-      <td id="T_707be_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_707be_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_a9053_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_a9053_row5_col0" class="data row5 col0" >6081.25</td>
+      <td id="T_a9053_row5_col1" class="data row5 col1" >360.41</td>
+      <td id="T_a9053_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_a9053_row5_col3" class="data row5 col3" >5042.16</td>
+      <td id="T_a9053_row5_col4" class="data row5 col4" >6192.13</td>
+      <td id="T_a9053_row5_col5" class="data row5 col5" >4662.46</td>
+      <td id="T_a9053_row5_col6" class="data row5 col6" >6303.52</td>
+      <td id="T_a9053_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_a9053_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_707be_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_707be_row6_col0" class="data row6 col0" >0.00</td>
-      <td id="T_707be_row6_col1" class="data row6 col1" >0.00</td>
-      <td id="T_707be_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_707be_row6_col3" class="data row6 col3" >0.00</td>
-      <td id="T_707be_row6_col4" class="data row6 col4" >0.00</td>
-      <td id="T_707be_row6_col5" class="data row6 col5" >0.02</td>
-      <td id="T_707be_row6_col6" class="data row6 col6" >1.48</td>
-      <td id="T_707be_row6_col7" class="data row6 col7" >high</td>
-      <td id="T_707be_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_a9053_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_a9053_row6_col0" class="data row6 col0" >0.00</td>
+      <td id="T_a9053_row6_col1" class="data row6 col1" >0.00</td>
+      <td id="T_a9053_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_a9053_row6_col3" class="data row6 col3" >0.00</td>
+      <td id="T_a9053_row6_col4" class="data row6 col4" >0.00</td>
+      <td id="T_a9053_row6_col5" class="data row6 col5" >0.02</td>
+      <td id="T_a9053_row6_col6" class="data row6 col6" >1.48</td>
+      <td id="T_a9053_row6_col7" class="data row6 col7" >high</td>
+      <td id="T_a9053_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_707be_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_707be_row7_col0" class="data row7 col0" >335.37</td>
-      <td id="T_707be_row7_col1" class="data row7 col1" >113.32</td>
-      <td id="T_707be_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_707be_row7_col3" class="data row7 col3" >734.23</td>
-      <td id="T_707be_row7_col4" class="data row7 col4" >1228.26</td>
-      <td id="T_707be_row7_col5" class="data row7 col5" >1003.88</td>
-      <td id="T_707be_row7_col6" class="data row7 col6" >2079.81</td>
-      <td id="T_707be_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_707be_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_a9053_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_a9053_row7_col0" class="data row7 col0" >335.37</td>
+      <td id="T_a9053_row7_col1" class="data row7 col1" >113.32</td>
+      <td id="T_a9053_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_a9053_row7_col3" class="data row7 col3" >734.23</td>
+      <td id="T_a9053_row7_col4" class="data row7 col4" >1228.26</td>
+      <td id="T_a9053_row7_col5" class="data row7 col5" >1003.88</td>
+      <td id="T_a9053_row7_col6" class="data row7 col6" >2079.81</td>
+      <td id="T_a9053_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_a9053_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
