--- a/sites_data/RUL_CO/stat_matrix_static_colors.html
+++ b/sites_data/RUL_CO/stat_matrix_static_colors.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_2ffec_row0_col7, #T_2ffec_row0_col8, #T_2ffec_row4_col8 {
+#T_070b0_row0_col7, #T_070b0_row0_col8, #T_070b0_row4_col8 {
   background-color: yellow;
 }
-#T_2ffec_row1_col7, #T_2ffec_row1_col8, #T_2ffec_row3_col7, #T_2ffec_row3_col8, #T_2ffec_row4_col7 {
+#T_070b0_row1_col7, #T_070b0_row1_col8, #T_070b0_row3_col7, #T_070b0_row3_col8, #T_070b0_row4_col7 {
   background-color: green;
 }
-#T_2ffec_row2_col7, #T_2ffec_row2_col8, #T_2ffec_row6_col7, #T_2ffec_row6_col8, #T_2ffec_row7_col7, #T_2ffec_row7_col8 {
+#T_070b0_row2_col7, #T_070b0_row2_col8, #T_070b0_row6_col7, #T_070b0_row6_col8, #T_070b0_row7_col7, #T_070b0_row7_col8 {
   background-color: red;
 }
-#T_2ffec_row5_col2, #T_2ffec_row6_col2, #T_2ffec_row7_col2 {
+#T_070b0_row5_col2, #T_070b0_row6_col2, #T_070b0_row7_col2 {
   background-color: white;
 }
-#T_2ffec_row5_col7, #T_2ffec_row5_col8 {
+#T_070b0_row5_col7, #T_070b0_row5_col8 {
   background-color: gray;
 }
 </style>
 </head>
 <body>
-<table id="T_2ffec_">
+<table id="T_070b0_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -38,100 +38,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_2ffec_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_2ffec_row0_col0" class="data row0 col0" >1.31</td>
-      <td id="T_2ffec_row0_col1" class="data row0 col1" >0.06</td>
-      <td id="T_2ffec_row0_col2" class="data row0 col2" >1.31</td>
-      <td id="T_2ffec_row0_col3" class="data row0 col3" >1.43</td>
-      <td id="T_2ffec_row0_col4" class="data row0 col4" >1.66</td>
-      <td id="T_2ffec_row0_col5" class="data row0 col5" >1.43</td>
-      <td id="T_2ffec_row0_col6" class="data row0 col6" >1.72</td>
-      <td id="T_2ffec_row0_col7" class="data row0 col7" >medium</td>
-      <td id="T_2ffec_row0_col8" class="data row0 col8" >medium</td>
+      <th id="T_070b0_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_070b0_row0_col0" class="data row0 col0" >1.31</td>
+      <td id="T_070b0_row0_col1" class="data row0 col1" >0.06</td>
+      <td id="T_070b0_row0_col2" class="data row0 col2" >1.31</td>
+      <td id="T_070b0_row0_col3" class="data row0 col3" >1.43</td>
+      <td id="T_070b0_row0_col4" class="data row0 col4" >1.66</td>
+      <td id="T_070b0_row0_col5" class="data row0 col5" >1.43</td>
+      <td id="T_070b0_row0_col6" class="data row0 col6" >1.72</td>
+      <td id="T_070b0_row0_col7" class="data row0 col7" >medium</td>
+      <td id="T_070b0_row0_col8" class="data row0 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_2ffec_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_2ffec_row1_col0" class="data row1 col0" >1.19</td>
-      <td id="T_2ffec_row1_col1" class="data row1 col1" >1.14</td>
-      <td id="T_2ffec_row1_col2" class="data row1 col2" >2.14</td>
-      <td id="T_2ffec_row1_col3" class="data row1 col3" >1.59</td>
-      <td id="T_2ffec_row1_col4" class="data row1 col4" >6.19</td>
-      <td id="T_2ffec_row1_col5" class="data row1 col5" >1.74</td>
-      <td id="T_2ffec_row1_col6" class="data row1 col6" >6.29</td>
-      <td id="T_2ffec_row1_col7" class="data row1 col7" >low</td>
-      <td id="T_2ffec_row1_col8" class="data row1 col8" >low</td>
+      <th id="T_070b0_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_070b0_row1_col0" class="data row1 col0" >1.19</td>
+      <td id="T_070b0_row1_col1" class="data row1 col1" >1.14</td>
+      <td id="T_070b0_row1_col2" class="data row1 col2" >2.14</td>
+      <td id="T_070b0_row1_col3" class="data row1 col3" >1.59</td>
+      <td id="T_070b0_row1_col4" class="data row1 col4" >6.19</td>
+      <td id="T_070b0_row1_col5" class="data row1 col5" >1.74</td>
+      <td id="T_070b0_row1_col6" class="data row1 col6" >6.29</td>
+      <td id="T_070b0_row1_col7" class="data row1 col7" >low</td>
+      <td id="T_070b0_row1_col8" class="data row1 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_2ffec_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_2ffec_row2_col0" class="data row2 col0" >13.36</td>
-      <td id="T_2ffec_row2_col1" class="data row2 col1" >0.39</td>
-      <td id="T_2ffec_row2_col2" class="data row2 col2" >14.08</td>
-      <td id="T_2ffec_row2_col3" class="data row2 col3" >15.77</td>
-      <td id="T_2ffec_row2_col4" class="data row2 col4" >16.94</td>
-      <td id="T_2ffec_row2_col5" class="data row2 col5" >16.87</td>
-      <td id="T_2ffec_row2_col6" class="data row2 col6" >21.23</td>
-      <td id="T_2ffec_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_2ffec_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_070b0_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_070b0_row2_col0" class="data row2 col0" >13.36</td>
+      <td id="T_070b0_row2_col1" class="data row2 col1" >0.39</td>
+      <td id="T_070b0_row2_col2" class="data row2 col2" >14.08</td>
+      <td id="T_070b0_row2_col3" class="data row2 col3" >15.77</td>
+      <td id="T_070b0_row2_col4" class="data row2 col4" >16.94</td>
+      <td id="T_070b0_row2_col5" class="data row2 col5" >16.87</td>
+      <td id="T_070b0_row2_col6" class="data row2 col6" >21.23</td>
+      <td id="T_070b0_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_070b0_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_2ffec_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_2ffec_row3_col0" class="data row3 col0" >32.43</td>
-      <td id="T_2ffec_row3_col1" class="data row3 col1" >13.23</td>
-      <td id="T_2ffec_row3_col2" class="data row3 col2" >33.00</td>
-      <td id="T_2ffec_row3_col3" class="data row3 col3" >34.46</td>
-      <td id="T_2ffec_row3_col4" class="data row3 col4" >79.49</td>
-      <td id="T_2ffec_row3_col5" class="data row3 col5" >35.39</td>
-      <td id="T_2ffec_row3_col6" class="data row3 col6" >78.87</td>
-      <td id="T_2ffec_row3_col7" class="data row3 col7" >low</td>
-      <td id="T_2ffec_row3_col8" class="data row3 col8" >low</td>
+      <th id="T_070b0_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_070b0_row3_col0" class="data row3 col0" >32.43</td>
+      <td id="T_070b0_row3_col1" class="data row3 col1" >13.23</td>
+      <td id="T_070b0_row3_col2" class="data row3 col2" >33.00</td>
+      <td id="T_070b0_row3_col3" class="data row3 col3" >34.46</td>
+      <td id="T_070b0_row3_col4" class="data row3 col4" >79.49</td>
+      <td id="T_070b0_row3_col5" class="data row3 col5" >35.39</td>
+      <td id="T_070b0_row3_col6" class="data row3 col6" >78.87</td>
+      <td id="T_070b0_row3_col7" class="data row3 col7" >low</td>
+      <td id="T_070b0_row3_col8" class="data row3 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_2ffec_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_2ffec_row4_col0" class="data row4 col0" >-0.00</td>
-      <td id="T_2ffec_row4_col1" class="data row4 col1" >0.25</td>
-      <td id="T_2ffec_row4_col2" class="data row4 col2" >-0.02</td>
-      <td id="T_2ffec_row4_col3" class="data row4 col3" >-0.22</td>
-      <td id="T_2ffec_row4_col4" class="data row4 col4" >-1.16</td>
-      <td id="T_2ffec_row4_col5" class="data row4 col5" >-0.48</td>
-      <td id="T_2ffec_row4_col6" class="data row4 col6" >-1.48</td>
-      <td id="T_2ffec_row4_col7" class="data row4 col7" >low</td>
-      <td id="T_2ffec_row4_col8" class="data row4 col8" >medium</td>
+      <th id="T_070b0_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_070b0_row4_col0" class="data row4 col0" >-0.00</td>
+      <td id="T_070b0_row4_col1" class="data row4 col1" >0.25</td>
+      <td id="T_070b0_row4_col2" class="data row4 col2" >-0.02</td>
+      <td id="T_070b0_row4_col3" class="data row4 col3" >-0.22</td>
+      <td id="T_070b0_row4_col4" class="data row4 col4" >-1.16</td>
+      <td id="T_070b0_row4_col5" class="data row4 col5" >-0.48</td>
+      <td id="T_070b0_row4_col6" class="data row4 col6" >-1.48</td>
+      <td id="T_070b0_row4_col7" class="data row4 col7" >low</td>
+      <td id="T_070b0_row4_col8" class="data row4 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_2ffec_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_2ffec_row5_col0" class="data row5 col0" >8929.70</td>
-      <td id="T_2ffec_row5_col1" class="data row5 col1" >444.09</td>
-      <td id="T_2ffec_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_2ffec_row5_col3" class="data row5 col3" >7487.20</td>
-      <td id="T_2ffec_row5_col4" class="data row5 col4" >8929.49</td>
-      <td id="T_2ffec_row5_col5" class="data row5 col5" >6949.47</td>
-      <td id="T_2ffec_row5_col6" class="data row5 col6" >9047.29</td>
-      <td id="T_2ffec_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_2ffec_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_070b0_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_070b0_row5_col0" class="data row5 col0" >8929.70</td>
+      <td id="T_070b0_row5_col1" class="data row5 col1" >444.09</td>
+      <td id="T_070b0_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_070b0_row5_col3" class="data row5 col3" >7487.20</td>
+      <td id="T_070b0_row5_col4" class="data row5 col4" >8929.49</td>
+      <td id="T_070b0_row5_col5" class="data row5 col5" >6949.47</td>
+      <td id="T_070b0_row5_col6" class="data row5 col6" >9047.29</td>
+      <td id="T_070b0_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_070b0_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_2ffec_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_2ffec_row6_col0" class="data row6 col0" >0.00</td>
-      <td id="T_2ffec_row6_col1" class="data row6 col1" >0.00</td>
-      <td id="T_2ffec_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_2ffec_row6_col3" class="data row6 col3" >0.00</td>
-      <td id="T_2ffec_row6_col4" class="data row6 col4" >0.00</td>
-      <td id="T_2ffec_row6_col5" class="data row6 col5" >0.00</td>
-      <td id="T_2ffec_row6_col6" class="data row6 col6" >0.00</td>
-      <td id="T_2ffec_row6_col7" class="data row6 col7" >high</td>
-      <td id="T_2ffec_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_070b0_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_070b0_row6_col0" class="data row6 col0" >0.00</td>
+      <td id="T_070b0_row6_col1" class="data row6 col1" >0.00</td>
+      <td id="T_070b0_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_070b0_row6_col3" class="data row6 col3" >0.00</td>
+      <td id="T_070b0_row6_col4" class="data row6 col4" >0.00</td>
+      <td id="T_070b0_row6_col5" class="data row6 col5" >0.00</td>
+      <td id="T_070b0_row6_col6" class="data row6 col6" >0.00</td>
+      <td id="T_070b0_row6_col7" class="data row6 col7" >high</td>
+      <td id="T_070b0_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_2ffec_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_2ffec_row7_col0" class="data row7 col0" >14.91</td>
-      <td id="T_2ffec_row7_col1" class="data row7 col1" >20.31</td>
-      <td id="T_2ffec_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_2ffec_row7_col3" class="data row7 col3" >133.07</td>
-      <td id="T_2ffec_row7_col4" class="data row7 col4" >413.88</td>
-      <td id="T_2ffec_row7_col5" class="data row7 col5" >293.95</td>
-      <td id="T_2ffec_row7_col6" class="data row7 col6" >998.86</td>
-      <td id="T_2ffec_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_2ffec_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_070b0_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_070b0_row7_col0" class="data row7 col0" >14.91</td>
+      <td id="T_070b0_row7_col1" class="data row7 col1" >20.31</td>
+      <td id="T_070b0_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_070b0_row7_col3" class="data row7 col3" >133.07</td>
+      <td id="T_070b0_row7_col4" class="data row7 col4" >413.88</td>
+      <td id="T_070b0_row7_col5" class="data row7 col5" >293.95</td>
+      <td id="T_070b0_row7_col6" class="data row7 col6" >998.86</td>
+      <td id="T_070b0_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_070b0_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
