--- a/sites_data/SBS_WY/stat_matrix_static_colors.html
+++ b/sites_data/SBS_WY/stat_matrix_static_colors.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_f3a24_row0_col7, #T_f3a24_row0_col8, #T_f3a24_row2_col7, #T_f3a24_row2_col8, #T_f3a24_row6_col7, #T_f3a24_row6_col8, #T_f3a24_row7_col7, #T_f3a24_row7_col8 {
+#T_29d1e_row0_col7, #T_29d1e_row0_col8, #T_29d1e_row2_col7, #T_29d1e_row2_col8, #T_29d1e_row6_col7, #T_29d1e_row6_col8, #T_29d1e_row7_col7, #T_29d1e_row7_col8 {
   background-color: red;
 }
-#T_f3a24_row1_col7, #T_f3a24_row1_col8, #T_f3a24_row3_col7, #T_f3a24_row3_col8, #T_f3a24_row4_col7 {
+#T_29d1e_row1_col7, #T_29d1e_row1_col8, #T_29d1e_row3_col7, #T_29d1e_row3_col8, #T_29d1e_row4_col7 {
   background-color: green;
 }
-#T_f3a24_row4_col8 {
+#T_29d1e_row4_col8 {
   background-color: yellow;
 }
-#T_f3a24_row5_col2, #T_f3a24_row6_col2, #T_f3a24_row7_col2 {
+#T_29d1e_row5_col2, #T_29d1e_row6_col2, #T_29d1e_row7_col2 {
   background-color: white;
 }
-#T_f3a24_row5_col7, #T_f3a24_row5_col8 {
+#T_29d1e_row5_col7, #T_29d1e_row5_col8 {
   background-color: gray;
 }
 </style>
 </head>
 <body>
-<table id="T_f3a24_">
+<table id="T_29d1e_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -38,100 +38,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_f3a24_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_f3a24_row0_col0" class="data row0 col0" >0.84</td>
-      <td id="T_f3a24_row0_col1" class="data row0 col1" >0.04</td>
-      <td id="T_f3a24_row0_col2" class="data row0 col2" >0.85</td>
-      <td id="T_f3a24_row0_col3" class="data row0 col3" >0.92</td>
-      <td id="T_f3a24_row0_col4" class="data row0 col4" >1.04</td>
-      <td id="T_f3a24_row0_col5" class="data row0 col5" >0.92</td>
-      <td id="T_f3a24_row0_col6" class="data row0 col6" >1.11</td>
-      <td id="T_f3a24_row0_col7" class="data row0 col7" >high</td>
-      <td id="T_f3a24_row0_col8" class="data row0 col8" >high</td>
+      <th id="T_29d1e_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_29d1e_row0_col0" class="data row0 col0" >0.84</td>
+      <td id="T_29d1e_row0_col1" class="data row0 col1" >0.04</td>
+      <td id="T_29d1e_row0_col2" class="data row0 col2" >0.85</td>
+      <td id="T_29d1e_row0_col3" class="data row0 col3" >0.92</td>
+      <td id="T_29d1e_row0_col4" class="data row0 col4" >1.04</td>
+      <td id="T_29d1e_row0_col5" class="data row0 col5" >0.92</td>
+      <td id="T_29d1e_row0_col6" class="data row0 col6" >1.11</td>
+      <td id="T_29d1e_row0_col7" class="data row0 col7" >high</td>
+      <td id="T_29d1e_row0_col8" class="data row0 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_f3a24_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_f3a24_row1_col0" class="data row1 col0" >0.62</td>
-      <td id="T_f3a24_row1_col1" class="data row1 col1" >0.77</td>
-      <td id="T_f3a24_row1_col2" class="data row1 col2" >0.02</td>
-      <td id="T_f3a24_row1_col3" class="data row1 col3" >0.72</td>
-      <td id="T_f3a24_row1_col4" class="data row1 col4" >3.90</td>
-      <td id="T_f3a24_row1_col5" class="data row1 col5" >0.77</td>
-      <td id="T_f3a24_row1_col6" class="data row1 col6" >3.90</td>
-      <td id="T_f3a24_row1_col7" class="data row1 col7" >low</td>
-      <td id="T_f3a24_row1_col8" class="data row1 col8" >low</td>
+      <th id="T_29d1e_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_29d1e_row1_col0" class="data row1 col0" >0.62</td>
+      <td id="T_29d1e_row1_col1" class="data row1 col1" >0.77</td>
+      <td id="T_29d1e_row1_col2" class="data row1 col2" >0.02</td>
+      <td id="T_29d1e_row1_col3" class="data row1 col3" >0.72</td>
+      <td id="T_29d1e_row1_col4" class="data row1 col4" >3.90</td>
+      <td id="T_29d1e_row1_col5" class="data row1 col5" >0.77</td>
+      <td id="T_29d1e_row1_col6" class="data row1 col6" >3.90</td>
+      <td id="T_29d1e_row1_col7" class="data row1 col7" >low</td>
+      <td id="T_29d1e_row1_col8" class="data row1 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_f3a24_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_f3a24_row2_col0" class="data row2 col0" >13.20</td>
-      <td id="T_f3a24_row2_col1" class="data row2 col1" >0.37</td>
-      <td id="T_f3a24_row2_col2" class="data row2 col2" >13.86</td>
-      <td id="T_f3a24_row2_col3" class="data row2 col3" >15.48</td>
-      <td id="T_f3a24_row2_col4" class="data row2 col4" >17.34</td>
-      <td id="T_f3a24_row2_col5" class="data row2 col5" >16.55</td>
-      <td id="T_f3a24_row2_col6" class="data row2 col6" >20.53</td>
-      <td id="T_f3a24_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_f3a24_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_29d1e_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_29d1e_row2_col0" class="data row2 col0" >13.20</td>
+      <td id="T_29d1e_row2_col1" class="data row2 col1" >0.37</td>
+      <td id="T_29d1e_row2_col2" class="data row2 col2" >13.86</td>
+      <td id="T_29d1e_row2_col3" class="data row2 col3" >15.48</td>
+      <td id="T_29d1e_row2_col4" class="data row2 col4" >17.34</td>
+      <td id="T_29d1e_row2_col5" class="data row2 col5" >16.55</td>
+      <td id="T_29d1e_row2_col6" class="data row2 col6" >20.53</td>
+      <td id="T_29d1e_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_29d1e_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_f3a24_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_f3a24_row3_col0" class="data row3 col0" >22.18</td>
-      <td id="T_f3a24_row3_col1" class="data row3 col1" >8.95</td>
-      <td id="T_f3a24_row3_col2" class="data row3 col2" >21.96</td>
-      <td id="T_f3a24_row3_col3" class="data row3 col3" >23.01</td>
-      <td id="T_f3a24_row3_col4" class="data row3 col4" >58.70</td>
-      <td id="T_f3a24_row3_col5" class="data row3 col5" >23.53</td>
-      <td id="T_f3a24_row3_col6" class="data row3 col6" >59.51</td>
-      <td id="T_f3a24_row3_col7" class="data row3 col7" >low</td>
-      <td id="T_f3a24_row3_col8" class="data row3 col8" >low</td>
+      <th id="T_29d1e_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_29d1e_row3_col0" class="data row3 col0" >22.18</td>
+      <td id="T_29d1e_row3_col1" class="data row3 col1" >8.95</td>
+      <td id="T_29d1e_row3_col2" class="data row3 col2" >21.96</td>
+      <td id="T_29d1e_row3_col3" class="data row3 col3" >23.01</td>
+      <td id="T_29d1e_row3_col4" class="data row3 col4" >58.70</td>
+      <td id="T_29d1e_row3_col5" class="data row3 col5" >23.53</td>
+      <td id="T_29d1e_row3_col6" class="data row3 col6" >59.51</td>
+      <td id="T_29d1e_row3_col7" class="data row3 col7" >low</td>
+      <td id="T_29d1e_row3_col8" class="data row3 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_f3a24_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_f3a24_row4_col0" class="data row4 col0" >-0.00</td>
-      <td id="T_f3a24_row4_col1" class="data row4 col1" >0.24</td>
-      <td id="T_f3a24_row4_col2" class="data row4 col2" >-0.04</td>
-      <td id="T_f3a24_row4_col3" class="data row4 col3" >-0.06</td>
-      <td id="T_f3a24_row4_col4" class="data row4 col4" >-0.70</td>
-      <td id="T_f3a24_row4_col5" class="data row4 col5" >-0.37</td>
-      <td id="T_f3a24_row4_col6" class="data row4 col6" >-1.10</td>
-      <td id="T_f3a24_row4_col7" class="data row4 col7" >low</td>
-      <td id="T_f3a24_row4_col8" class="data row4 col8" >medium</td>
+      <th id="T_29d1e_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_29d1e_row4_col0" class="data row4 col0" >-0.00</td>
+      <td id="T_29d1e_row4_col1" class="data row4 col1" >0.24</td>
+      <td id="T_29d1e_row4_col2" class="data row4 col2" >-0.04</td>
+      <td id="T_29d1e_row4_col3" class="data row4 col3" >-0.06</td>
+      <td id="T_29d1e_row4_col4" class="data row4 col4" >-0.70</td>
+      <td id="T_29d1e_row4_col5" class="data row4 col5" >-0.37</td>
+      <td id="T_29d1e_row4_col6" class="data row4 col6" >-1.10</td>
+      <td id="T_29d1e_row4_col7" class="data row4 col7" >low</td>
+      <td id="T_29d1e_row4_col8" class="data row4 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_f3a24_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_f3a24_row5_col0" class="data row5 col0" >8516.74</td>
-      <td id="T_f3a24_row5_col1" class="data row5 col1" >425.02</td>
-      <td id="T_f3a24_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_f3a24_row5_col3" class="data row5 col3" >7216.38</td>
-      <td id="T_f3a24_row5_col4" class="data row5 col4" >8547.46</td>
-      <td id="T_f3a24_row5_col5" class="data row5 col5" >6732.13</td>
-      <td id="T_f3a24_row5_col6" class="data row5 col6" >8647.17</td>
-      <td id="T_f3a24_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_f3a24_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_29d1e_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_29d1e_row5_col0" class="data row5 col0" >8516.74</td>
+      <td id="T_29d1e_row5_col1" class="data row5 col1" >425.02</td>
+      <td id="T_29d1e_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_29d1e_row5_col3" class="data row5 col3" >7216.38</td>
+      <td id="T_29d1e_row5_col4" class="data row5 col4" >8547.46</td>
+      <td id="T_29d1e_row5_col5" class="data row5 col5" >6732.13</td>
+      <td id="T_29d1e_row5_col6" class="data row5 col6" >8647.17</td>
+      <td id="T_29d1e_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_29d1e_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_f3a24_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_f3a24_row6_col0" class="data row6 col0" >0.00</td>
-      <td id="T_f3a24_row6_col1" class="data row6 col1" >0.00</td>
-      <td id="T_f3a24_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_f3a24_row6_col3" class="data row6 col3" >0.00</td>
-      <td id="T_f3a24_row6_col4" class="data row6 col4" >0.00</td>
-      <td id="T_f3a24_row6_col5" class="data row6 col5" >0.00</td>
-      <td id="T_f3a24_row6_col6" class="data row6 col6" >0.01</td>
-      <td id="T_f3a24_row6_col7" class="data row6 col7" >high</td>
-      <td id="T_f3a24_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_29d1e_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_29d1e_row6_col0" class="data row6 col0" >0.00</td>
+      <td id="T_29d1e_row6_col1" class="data row6 col1" >0.00</td>
+      <td id="T_29d1e_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_29d1e_row6_col3" class="data row6 col3" >0.00</td>
+      <td id="T_29d1e_row6_col4" class="data row6 col4" >0.00</td>
+      <td id="T_29d1e_row6_col5" class="data row6 col5" >0.00</td>
+      <td id="T_29d1e_row6_col6" class="data row6 col6" >0.01</td>
+      <td id="T_29d1e_row6_col7" class="data row6 col7" >high</td>
+      <td id="T_29d1e_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_f3a24_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_f3a24_row7_col0" class="data row7 col0" >56.66</td>
-      <td id="T_f3a24_row7_col1" class="data row7 col1" >43.40</td>
-      <td id="T_f3a24_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_f3a24_row7_col3" class="data row7 col3" >260.25</td>
-      <td id="T_f3a24_row7_col4" class="data row7 col4" >609.41</td>
-      <td id="T_f3a24_row7_col5" class="data row7 col5" >461.88</td>
-      <td id="T_f3a24_row7_col6" class="data row7 col6" >1259.41</td>
-      <td id="T_f3a24_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_f3a24_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_29d1e_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_29d1e_row7_col0" class="data row7 col0" >56.66</td>
+      <td id="T_29d1e_row7_col1" class="data row7 col1" >43.40</td>
+      <td id="T_29d1e_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_29d1e_row7_col3" class="data row7 col3" >260.25</td>
+      <td id="T_29d1e_row7_col4" class="data row7 col4" >609.41</td>
+      <td id="T_29d1e_row7_col5" class="data row7 col5" >461.88</td>
+      <td id="T_29d1e_row7_col6" class="data row7 col6" >1259.41</td>
+      <td id="T_29d1e_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_29d1e_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
