--- a/sites_data/UTA_UT/stat_matrix_static_colors.html
+++ b/sites_data/UTA_UT/stat_matrix_static_colors.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_7d073_row0_col7, #T_7d073_row0_col8, #T_7d073_row4_col7 {
+#T_9003a_row0_col7, #T_9003a_row0_col8, #T_9003a_row4_col7 {
   background-color: yellow;
 }
-#T_7d073_row1_col7, #T_7d073_row1_col8, #T_7d073_row3_col7, #T_7d073_row3_col8 {
+#T_9003a_row1_col7, #T_9003a_row1_col8, #T_9003a_row3_col7, #T_9003a_row3_col8 {
   background-color: green;
 }
-#T_7d073_row2_col7, #T_7d073_row2_col8, #T_7d073_row4_col8, #T_7d073_row6_col7, #T_7d073_row6_col8, #T_7d073_row7_col7, #T_7d073_row7_col8 {
+#T_9003a_row2_col7, #T_9003a_row2_col8, #T_9003a_row4_col8, #T_9003a_row6_col7, #T_9003a_row6_col8, #T_9003a_row7_col7, #T_9003a_row7_col8 {
   background-color: red;
 }
-#T_7d073_row5_col2, #T_7d073_row6_col2, #T_7d073_row7_col2 {
+#T_9003a_row5_col2, #T_9003a_row6_col2, #T_9003a_row7_col2 {
   background-color: white;
 }
-#T_7d073_row5_col7, #T_7d073_row5_col8 {
+#T_9003a_row5_col7, #T_9003a_row5_col8 {
   background-color: gray;
 }
 </style>
 </head>
 <body>
-<table id="T_7d073_">
+<table id="T_9003a_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -38,100 +38,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_7d073_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_7d073_row0_col0" class="data row0 col0" >0.58</td>
-      <td id="T_7d073_row0_col1" class="data row0 col1" >0.03</td>
-      <td id="T_7d073_row0_col2" class="data row0 col2" >0.57</td>
-      <td id="T_7d073_row0_col3" class="data row0 col3" >0.63</td>
-      <td id="T_7d073_row0_col4" class="data row0 col4" >0.72</td>
-      <td id="T_7d073_row0_col5" class="data row0 col5" >0.63</td>
-      <td id="T_7d073_row0_col6" class="data row0 col6" >0.76</td>
-      <td id="T_7d073_row0_col7" class="data row0 col7" >medium</td>
-      <td id="T_7d073_row0_col8" class="data row0 col8" >medium</td>
+      <th id="T_9003a_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_9003a_row0_col0" class="data row0 col0" >0.58</td>
+      <td id="T_9003a_row0_col1" class="data row0 col1" >0.03</td>
+      <td id="T_9003a_row0_col2" class="data row0 col2" >0.57</td>
+      <td id="T_9003a_row0_col3" class="data row0 col3" >0.63</td>
+      <td id="T_9003a_row0_col4" class="data row0 col4" >0.72</td>
+      <td id="T_9003a_row0_col5" class="data row0 col5" >0.63</td>
+      <td id="T_9003a_row0_col6" class="data row0 col6" >0.76</td>
+      <td id="T_9003a_row0_col7" class="data row0 col7" >medium</td>
+      <td id="T_9003a_row0_col8" class="data row0 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_7d073_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_7d073_row1_col0" class="data row1 col0" >1.01</td>
-      <td id="T_7d073_row1_col1" class="data row1 col1" >1.01</td>
-      <td id="T_7d073_row1_col2" class="data row1 col2" >0.04</td>
-      <td id="T_7d073_row1_col3" class="data row1 col3" >1.29</td>
-      <td id="T_7d073_row1_col4" class="data row1 col4" >5.43</td>
-      <td id="T_7d073_row1_col5" class="data row1 col5" >1.43</td>
-      <td id="T_7d073_row1_col6" class="data row1 col6" >5.52</td>
-      <td id="T_7d073_row1_col7" class="data row1 col7" >low</td>
-      <td id="T_7d073_row1_col8" class="data row1 col8" >low</td>
+      <th id="T_9003a_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_9003a_row1_col0" class="data row1 col0" >1.01</td>
+      <td id="T_9003a_row1_col1" class="data row1 col1" >1.01</td>
+      <td id="T_9003a_row1_col2" class="data row1 col2" >0.04</td>
+      <td id="T_9003a_row1_col3" class="data row1 col3" >1.29</td>
+      <td id="T_9003a_row1_col4" class="data row1 col4" >5.43</td>
+      <td id="T_9003a_row1_col5" class="data row1 col5" >1.43</td>
+      <td id="T_9003a_row1_col6" class="data row1 col6" >5.52</td>
+      <td id="T_9003a_row1_col7" class="data row1 col7" >low</td>
+      <td id="T_9003a_row1_col8" class="data row1 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_7d073_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_7d073_row2_col0" class="data row2 col0" >16.29</td>
-      <td id="T_7d073_row2_col1" class="data row2 col1" >0.38</td>
-      <td id="T_7d073_row2_col2" class="data row2 col2" >17.04</td>
-      <td id="T_7d073_row2_col3" class="data row2 col3" >18.86</td>
-      <td id="T_7d073_row2_col4" class="data row2 col4" >21.06</td>
-      <td id="T_7d073_row2_col5" class="data row2 col5" >19.99</td>
-      <td id="T_7d073_row2_col6" class="data row2 col6" >23.52</td>
-      <td id="T_7d073_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_7d073_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_9003a_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_9003a_row2_col0" class="data row2 col0" >16.29</td>
+      <td id="T_9003a_row2_col1" class="data row2 col1" >0.38</td>
+      <td id="T_9003a_row2_col2" class="data row2 col2" >17.04</td>
+      <td id="T_9003a_row2_col3" class="data row2 col3" >18.86</td>
+      <td id="T_9003a_row2_col4" class="data row2 col4" >21.06</td>
+      <td id="T_9003a_row2_col5" class="data row2 col5" >19.99</td>
+      <td id="T_9003a_row2_col6" class="data row2 col6" >23.52</td>
+      <td id="T_9003a_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_9003a_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_7d073_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_7d073_row3_col0" class="data row3 col0" >16.15</td>
-      <td id="T_7d073_row3_col1" class="data row3 col1" >6.45</td>
-      <td id="T_7d073_row3_col2" class="data row3 col2" >16.25</td>
-      <td id="T_7d073_row3_col3" class="data row3 col3" >17.12</td>
-      <td id="T_7d073_row3_col4" class="data row3 col4" >40.39</td>
-      <td id="T_7d073_row3_col5" class="data row3 col5" >17.79</td>
-      <td id="T_7d073_row3_col6" class="data row3 col6" >42.66</td>
-      <td id="T_7d073_row3_col7" class="data row3 col7" >low</td>
-      <td id="T_7d073_row3_col8" class="data row3 col8" >low</td>
+      <th id="T_9003a_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_9003a_row3_col0" class="data row3 col0" >16.15</td>
+      <td id="T_9003a_row3_col1" class="data row3 col1" >6.45</td>
+      <td id="T_9003a_row3_col2" class="data row3 col2" >16.25</td>
+      <td id="T_9003a_row3_col3" class="data row3 col3" >17.12</td>
+      <td id="T_9003a_row3_col4" class="data row3 col4" >40.39</td>
+      <td id="T_9003a_row3_col5" class="data row3 col5" >17.79</td>
+      <td id="T_9003a_row3_col6" class="data row3 col6" >42.66</td>
+      <td id="T_9003a_row3_col7" class="data row3 col7" >low</td>
+      <td id="T_9003a_row3_col8" class="data row3 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_7d073_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_7d073_row4_col0" class="data row4 col0" >0.00</td>
-      <td id="T_7d073_row4_col1" class="data row4 col1" >0.27</td>
-      <td id="T_7d073_row4_col2" class="data row4 col2" >-0.06</td>
-      <td id="T_7d073_row4_col3" class="data row4 col3" >-0.34</td>
-      <td id="T_7d073_row4_col4" class="data row4 col4" >-1.26</td>
-      <td id="T_7d073_row4_col5" class="data row4 col5" >-0.64</td>
-      <td id="T_7d073_row4_col6" class="data row4 col6" >-1.48</td>
-      <td id="T_7d073_row4_col7" class="data row4 col7" >medium</td>
-      <td id="T_7d073_row4_col8" class="data row4 col8" >high</td>
+      <th id="T_9003a_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_9003a_row4_col0" class="data row4 col0" >0.00</td>
+      <td id="T_9003a_row4_col1" class="data row4 col1" >0.27</td>
+      <td id="T_9003a_row4_col2" class="data row4 col2" >-0.06</td>
+      <td id="T_9003a_row4_col3" class="data row4 col3" >-0.34</td>
+      <td id="T_9003a_row4_col4" class="data row4 col4" >-1.26</td>
+      <td id="T_9003a_row4_col5" class="data row4 col5" >-0.64</td>
+      <td id="T_9003a_row4_col6" class="data row4 col6" >-1.48</td>
+      <td id="T_9003a_row4_col7" class="data row4 col7" >medium</td>
+      <td id="T_9003a_row4_col8" class="data row4 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_7d073_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_7d073_row5_col0" class="data row5 col0" >6875.53</td>
-      <td id="T_7d073_row5_col1" class="data row5 col1" >423.06</td>
-      <td id="T_7d073_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_7d073_row5_col3" class="data row5 col3" >5691.49</td>
-      <td id="T_7d073_row5_col4" class="data row5 col4" >7066.37</td>
-      <td id="T_7d073_row5_col5" class="data row5 col5" >5268.53</td>
-      <td id="T_7d073_row5_col6" class="data row5 col6" >7130.44</td>
-      <td id="T_7d073_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_7d073_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_9003a_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_9003a_row5_col0" class="data row5 col0" >6875.53</td>
+      <td id="T_9003a_row5_col1" class="data row5 col1" >423.06</td>
+      <td id="T_9003a_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_9003a_row5_col3" class="data row5 col3" >5691.49</td>
+      <td id="T_9003a_row5_col4" class="data row5 col4" >7066.37</td>
+      <td id="T_9003a_row5_col5" class="data row5 col5" >5268.53</td>
+      <td id="T_9003a_row5_col6" class="data row5 col6" >7130.44</td>
+      <td id="T_9003a_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_9003a_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_7d073_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_7d073_row6_col0" class="data row6 col0" >0.00</td>
-      <td id="T_7d073_row6_col1" class="data row6 col1" >0.00</td>
-      <td id="T_7d073_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_7d073_row6_col3" class="data row6 col3" >0.00</td>
-      <td id="T_7d073_row6_col4" class="data row6 col4" >0.00</td>
-      <td id="T_7d073_row6_col5" class="data row6 col5" >0.69</td>
-      <td id="T_7d073_row6_col6" class="data row6 col6" >12.44</td>
-      <td id="T_7d073_row6_col7" class="data row6 col7" >high</td>
-      <td id="T_7d073_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_9003a_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_9003a_row6_col0" class="data row6 col0" >0.00</td>
+      <td id="T_9003a_row6_col1" class="data row6 col1" >0.00</td>
+      <td id="T_9003a_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_9003a_row6_col3" class="data row6 col3" >0.00</td>
+      <td id="T_9003a_row6_col4" class="data row6 col4" >0.00</td>
+      <td id="T_9003a_row6_col5" class="data row6 col5" >0.69</td>
+      <td id="T_9003a_row6_col6" class="data row6 col6" >12.44</td>
+      <td id="T_9003a_row6_col7" class="data row6 col7" >high</td>
+      <td id="T_9003a_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_7d073_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_7d073_row7_col0" class="data row7 col0" >478.73</td>
-      <td id="T_7d073_row7_col1" class="data row7 col1" >118.04</td>
-      <td id="T_7d073_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_7d073_row7_col3" class="data row7 col3" >960.08</td>
-      <td id="T_7d073_row7_col4" class="data row7 col4" >1505.41</td>
-      <td id="T_7d073_row7_col5" class="data row7 col5" >1262.48</td>
-      <td id="T_7d073_row7_col6" class="data row7 col6" >2424.81</td>
-      <td id="T_7d073_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_7d073_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_9003a_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_9003a_row7_col0" class="data row7 col0" >478.73</td>
+      <td id="T_9003a_row7_col1" class="data row7 col1" >118.04</td>
+      <td id="T_9003a_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_9003a_row7_col3" class="data row7 col3" >960.08</td>
+      <td id="T_9003a_row7_col4" class="data row7 col4" >1505.41</td>
+      <td id="T_9003a_row7_col5" class="data row7 col5" >1262.48</td>
+      <td id="T_9003a_row7_col6" class="data row7 col6" >2424.81</td>
+      <td id="T_9003a_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_9003a_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
