update SPEI again

--- a/sites_data/CAN_PA/stat_matrix_static_colors.html
+++ b/sites_data/CAN_PA/stat_matrix_static_colors.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_8019f_row0_col7, #T_8019f_row0_col8, #T_8019f_row2_col7, #T_8019f_row2_col8, #T_8019f_row6_col8, #T_8019f_row7_col7, #T_8019f_row7_col8 {
+#T_3978d_row0_col7, #T_3978d_row0_col8, #T_3978d_row2_col7, #T_3978d_row2_col8, #T_3978d_row6_col8, #T_3978d_row7_col7, #T_3978d_row7_col8 {
   background-color: red;
 }
-#T_8019f_row1_col7, #T_8019f_row3_col7 {
+#T_3978d_row1_col7, #T_3978d_row3_col7 {
   background-color: green;
 }
-#T_8019f_row1_col8, #T_8019f_row3_col8, #T_8019f_row6_col7 {
+#T_3978d_row1_col8, #T_3978d_row3_col8, #T_3978d_row6_col7 {
   background-color: yellow;
 }
-#T_8019f_row4_col7, #T_8019f_row4_col8, #T_8019f_row5_col7, #T_8019f_row5_col8 {
+#T_3978d_row4_col7, #T_3978d_row4_col8, #T_3978d_row5_col7, #T_3978d_row5_col8 {
   background-color: gray;
 }
-#T_8019f_row5_col2, #T_8019f_row6_col2, #T_8019f_row7_col2 {
+#T_3978d_row5_col2, #T_3978d_row6_col2, #T_3978d_row7_col2 {
   background-color: white;
 }
 </style>
 </head>
 <body>
-<table id="T_8019f_">
+<table id="T_3978d_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -38,100 +38,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_8019f_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_8019f_row0_col0" class="data row0 col0" >2.84</td>
-      <td id="T_8019f_row0_col1" class="data row0 col1" >0.08</td>
-      <td id="T_8019f_row0_col2" class="data row0 col2" >2.92</td>
-      <td id="T_8019f_row0_col3" class="data row0 col3" >3.02</td>
-      <td id="T_8019f_row0_col4" class="data row0 col4" >3.29</td>
-      <td id="T_8019f_row0_col5" class="data row0 col5" >3.12</td>
-      <td id="T_8019f_row0_col6" class="data row0 col6" >3.41</td>
-      <td id="T_8019f_row0_col7" class="data row0 col7" >high</td>
-      <td id="T_8019f_row0_col8" class="data row0 col8" >high</td>
+      <th id="T_3978d_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_3978d_row0_col0" class="data row0 col0" >2.84</td>
+      <td id="T_3978d_row0_col1" class="data row0 col1" >0.08</td>
+      <td id="T_3978d_row0_col2" class="data row0 col2" >2.92</td>
+      <td id="T_3978d_row0_col3" class="data row0 col3" >3.02</td>
+      <td id="T_3978d_row0_col4" class="data row0 col4" >3.29</td>
+      <td id="T_3978d_row0_col5" class="data row0 col5" >3.12</td>
+      <td id="T_3978d_row0_col6" class="data row0 col6" >3.41</td>
+      <td id="T_3978d_row0_col7" class="data row0 col7" >high</td>
+      <td id="T_3978d_row0_col8" class="data row0 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_8019f_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_8019f_row1_col0" class="data row1 col0" >2.60</td>
-      <td id="T_8019f_row1_col1" class="data row1 col1" >1.58</td>
-      <td id="T_8019f_row1_col2" class="data row1 col2" >7.86</td>
-      <td id="T_8019f_row1_col3" class="data row1 col3" >3.44</td>
-      <td id="T_8019f_row1_col4" class="data row1 col4" >9.05</td>
-      <td id="T_8019f_row1_col5" class="data row1 col5" >4.14</td>
-      <td id="T_8019f_row1_col6" class="data row1 col6" >10.86</td>
-      <td id="T_8019f_row1_col7" class="data row1 col7" >low</td>
-      <td id="T_8019f_row1_col8" class="data row1 col8" >medium</td>
+      <th id="T_3978d_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_3978d_row1_col0" class="data row1 col0" >2.60</td>
+      <td id="T_3978d_row1_col1" class="data row1 col1" >1.58</td>
+      <td id="T_3978d_row1_col2" class="data row1 col2" >7.86</td>
+      <td id="T_3978d_row1_col3" class="data row1 col3" >3.44</td>
+      <td id="T_3978d_row1_col4" class="data row1 col4" >9.05</td>
+      <td id="T_3978d_row1_col5" class="data row1 col5" >4.14</td>
+      <td id="T_3978d_row1_col6" class="data row1 col6" >10.86</td>
+      <td id="T_3978d_row1_col7" class="data row1 col7" >low</td>
+      <td id="T_3978d_row1_col8" class="data row1 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_8019f_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_8019f_row2_col0" class="data row2 col0" >16.72</td>
-      <td id="T_8019f_row2_col1" class="data row2 col1" >0.37</td>
-      <td id="T_8019f_row2_col2" class="data row2 col2" >17.41</td>
-      <td id="T_8019f_row2_col3" class="data row2 col3" >18.93</td>
-      <td id="T_8019f_row2_col4" class="data row2 col4" >20.71</td>
-      <td id="T_8019f_row2_col5" class="data row2 col5" >19.90</td>
-      <td id="T_8019f_row2_col6" class="data row2 col6" >22.82</td>
-      <td id="T_8019f_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_8019f_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_3978d_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_3978d_row2_col0" class="data row2 col0" >16.72</td>
+      <td id="T_3978d_row2_col1" class="data row2 col1" >0.37</td>
+      <td id="T_3978d_row2_col2" class="data row2 col2" >17.41</td>
+      <td id="T_3978d_row2_col3" class="data row2 col3" >18.93</td>
+      <td id="T_3978d_row2_col4" class="data row2 col4" >20.71</td>
+      <td id="T_3978d_row2_col5" class="data row2 col5" >19.90</td>
+      <td id="T_3978d_row2_col6" class="data row2 col6" >22.82</td>
+      <td id="T_3978d_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_3978d_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_8019f_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_8019f_row3_col0" class="data row3 col0" >46.07</td>
-      <td id="T_8019f_row3_col1" class="data row3 col1" >13.25</td>
-      <td id="T_8019f_row3_col2" class="data row3 col2" >48.26</td>
-      <td id="T_8019f_row3_col3" class="data row3 col3" >49.55</td>
-      <td id="T_8019f_row3_col4" class="data row3 col4" >97.15</td>
-      <td id="T_8019f_row3_col5" class="data row3 col5" >54.84</td>
-      <td id="T_8019f_row3_col6" class="data row3 col6" >112.44</td>
-      <td id="T_8019f_row3_col7" class="data row3 col7" >low</td>
-      <td id="T_8019f_row3_col8" class="data row3 col8" >medium</td>
+      <th id="T_3978d_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_3978d_row3_col0" class="data row3 col0" >46.07</td>
+      <td id="T_3978d_row3_col1" class="data row3 col1" >13.25</td>
+      <td id="T_3978d_row3_col2" class="data row3 col2" >48.26</td>
+      <td id="T_3978d_row3_col3" class="data row3 col3" >49.55</td>
+      <td id="T_3978d_row3_col4" class="data row3 col4" >97.15</td>
+      <td id="T_3978d_row3_col5" class="data row3 col5" >54.84</td>
+      <td id="T_3978d_row3_col6" class="data row3 col6" >112.44</td>
+      <td id="T_3978d_row3_col7" class="data row3 col7" >low</td>
+      <td id="T_3978d_row3_col8" class="data row3 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_8019f_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_8019f_row4_col0" class="data row4 col0" >0.00</td>
-      <td id="T_8019f_row4_col1" class="data row4 col1" >0.21</td>
-      <td id="T_8019f_row4_col2" class="data row4 col2" >0.01</td>
-      <td id="T_8019f_row4_col3" class="data row4 col3" >0.29</td>
-      <td id="T_8019f_row4_col4" class="data row4 col4" >-0.59</td>
-      <td id="T_8019f_row4_col5" class="data row4 col5" >0.24</td>
-      <td id="T_8019f_row4_col6" class="data row4 col6" >-0.64</td>
-      <td id="T_8019f_row4_col7" class="data row4 col7" >negative</td>
-      <td id="T_8019f_row4_col8" class="data row4 col8" >negative</td>
+      <th id="T_3978d_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_3978d_row4_col0" class="data row4 col0" >0.00</td>
+      <td id="T_3978d_row4_col1" class="data row4 col1" >0.21</td>
+      <td id="T_3978d_row4_col2" class="data row4 col2" >0.01</td>
+      <td id="T_3978d_row4_col3" class="data row4 col3" >0.29</td>
+      <td id="T_3978d_row4_col4" class="data row4 col4" >-0.59</td>
+      <td id="T_3978d_row4_col5" class="data row4 col5" >0.24</td>
+      <td id="T_3978d_row4_col6" class="data row4 col6" >-0.64</td>
+      <td id="T_3978d_row4_col7" class="data row4 col7" >negative</td>
+      <td id="T_3978d_row4_col8" class="data row4 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_8019f_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_8019f_row5_col0" class="data row5 col0" >5569.58</td>
-      <td id="T_8019f_row5_col1" class="data row5 col1" >415.08</td>
-      <td id="T_8019f_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_8019f_row5_col3" class="data row5 col3" >4635.79</td>
-      <td id="T_8019f_row5_col4" class="data row5 col4" >5838.80</td>
-      <td id="T_8019f_row5_col5" class="data row5 col5" >4304.40</td>
-      <td id="T_8019f_row5_col6" class="data row5 col6" >5812.10</td>
-      <td id="T_8019f_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_8019f_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_3978d_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_3978d_row5_col0" class="data row5 col0" >5569.58</td>
+      <td id="T_3978d_row5_col1" class="data row5 col1" >415.08</td>
+      <td id="T_3978d_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_3978d_row5_col3" class="data row5 col3" >4635.79</td>
+      <td id="T_3978d_row5_col4" class="data row5 col4" >5838.80</td>
+      <td id="T_3978d_row5_col5" class="data row5 col5" >4304.40</td>
+      <td id="T_3978d_row5_col6" class="data row5 col6" >5812.10</td>
+      <td id="T_3978d_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_3978d_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_8019f_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_8019f_row6_col0" class="data row6 col0" >0.02</td>
-      <td id="T_8019f_row6_col1" class="data row6 col1" >0.11</td>
-      <td id="T_8019f_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_8019f_row6_col3" class="data row6 col3" >0.15</td>
-      <td id="T_8019f_row6_col4" class="data row6 col4" >4.28</td>
-      <td id="T_8019f_row6_col5" class="data row6 col5" >1.67</td>
-      <td id="T_8019f_row6_col6" class="data row6 col6" >31.00</td>
-      <td id="T_8019f_row6_col7" class="data row6 col7" >medium</td>
-      <td id="T_8019f_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_3978d_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_3978d_row6_col0" class="data row6 col0" >0.02</td>
+      <td id="T_3978d_row6_col1" class="data row6 col1" >0.11</td>
+      <td id="T_3978d_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_3978d_row6_col3" class="data row6 col3" >0.15</td>
+      <td id="T_3978d_row6_col4" class="data row6 col4" >4.28</td>
+      <td id="T_3978d_row6_col5" class="data row6 col5" >1.67</td>
+      <td id="T_3978d_row6_col6" class="data row6 col6" >31.00</td>
+      <td id="T_3978d_row6_col7" class="data row6 col7" >medium</td>
+      <td id="T_3978d_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_8019f_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_8019f_row7_col0" class="data row7 col0" >695.53</td>
-      <td id="T_8019f_row7_col1" class="data row7 col1" >128.15</td>
-      <td id="T_8019f_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_8019f_row7_col3" class="data row7 col3" >1196.94</td>
-      <td id="T_8019f_row7_col4" class="data row7 col4" >1742.68</td>
-      <td id="T_8019f_row7_col5" class="data row7 col5" >1506.82</td>
-      <td id="T_8019f_row7_col6" class="data row7 col6" >2608.19</td>
-      <td id="T_8019f_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_8019f_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_3978d_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_3978d_row7_col0" class="data row7 col0" >695.53</td>
+      <td id="T_3978d_row7_col1" class="data row7 col1" >128.15</td>
+      <td id="T_3978d_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_3978d_row7_col3" class="data row7 col3" >1196.94</td>
+      <td id="T_3978d_row7_col4" class="data row7 col4" >1742.68</td>
+      <td id="T_3978d_row7_col5" class="data row7 col5" >1506.82</td>
+      <td id="T_3978d_row7_col6" class="data row7 col6" >2608.19</td>
+      <td id="T_3978d_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_3978d_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
