--- a/sites_data/RVT_WY/stat_matrix_static_colors.html
+++ b/sites_data/RVT_WY/stat_matrix_static_colors.html
@@ -3,22 +3,22 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_69057_row0_col7, #T_69057_row0_col8, #T_69057_row2_col7, #T_69057_row2_col8, #T_69057_row4_col8, #T_69057_row6_col7, #T_69057_row6_col8, #T_69057_row7_col7, #T_69057_row7_col8 {
+#T_5603f_row0_col7, #T_5603f_row0_col8, #T_5603f_row2_col7, #T_5603f_row2_col8, #T_5603f_row4_col8, #T_5603f_row6_col7, #T_5603f_row6_col8, #T_5603f_row7_col7, #T_5603f_row7_col8 {
   background-color: red;
 }
-#T_69057_row1_col7, #T_69057_row1_col8, #T_69057_row3_col7, #T_69057_row3_col8, #T_69057_row4_col7 {
+#T_5603f_row1_col7, #T_5603f_row1_col8, #T_5603f_row3_col7, #T_5603f_row3_col8, #T_5603f_row4_col7 {
   background-color: green;
 }
-#T_69057_row5_col2, #T_69057_row6_col2, #T_69057_row7_col2 {
+#T_5603f_row5_col2, #T_5603f_row6_col2, #T_5603f_row7_col2 {
   background-color: white;
 }
-#T_69057_row5_col7, #T_69057_row5_col8 {
+#T_5603f_row5_col7, #T_5603f_row5_col8 {
   background-color: gray;
 }
 </style>
 </head>
 <body>
-<table id="T_69057_">
+<table id="T_5603f_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -35,100 +35,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_69057_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_69057_row0_col0" class="data row0 col0" >0.72</td>
-      <td id="T_69057_row0_col1" class="data row0 col1" >0.03</td>
-      <td id="T_69057_row0_col2" class="data row0 col2" >0.73</td>
-      <td id="T_69057_row0_col3" class="data row0 col3" >0.82</td>
-      <td id="T_69057_row0_col4" class="data row0 col4" >0.93</td>
-      <td id="T_69057_row0_col5" class="data row0 col5" >0.82</td>
-      <td id="T_69057_row0_col6" class="data row0 col6" >0.96</td>
-      <td id="T_69057_row0_col7" class="data row0 col7" >high</td>
-      <td id="T_69057_row0_col8" class="data row0 col8" >high</td>
+      <th id="T_5603f_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_5603f_row0_col0" class="data row0 col0" >0.72</td>
+      <td id="T_5603f_row0_col1" class="data row0 col1" >0.03</td>
+      <td id="T_5603f_row0_col2" class="data row0 col2" >0.73</td>
+      <td id="T_5603f_row0_col3" class="data row0 col3" >0.82</td>
+      <td id="T_5603f_row0_col4" class="data row0 col4" >0.93</td>
+      <td id="T_5603f_row0_col5" class="data row0 col5" >0.82</td>
+      <td id="T_5603f_row0_col6" class="data row0 col6" >0.96</td>
+      <td id="T_5603f_row0_col7" class="data row0 col7" >high</td>
+      <td id="T_5603f_row0_col8" class="data row0 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_69057_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_69057_row1_col0" class="data row1 col0" >1.35</td>
-      <td id="T_69057_row1_col1" class="data row1 col1" >1.18</td>
-      <td id="T_69057_row1_col2" class="data row1 col2" >0.52</td>
-      <td id="T_69057_row1_col3" class="data row1 col3" >1.73</td>
-      <td id="T_69057_row1_col4" class="data row1 col4" >6.10</td>
-      <td id="T_69057_row1_col5" class="data row1 col5" >1.83</td>
-      <td id="T_69057_row1_col6" class="data row1 col6" >6.86</td>
-      <td id="T_69057_row1_col7" class="data row1 col7" >low</td>
-      <td id="T_69057_row1_col8" class="data row1 col8" >low</td>
+      <th id="T_5603f_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_5603f_row1_col0" class="data row1 col0" >1.35</td>
+      <td id="T_5603f_row1_col1" class="data row1 col1" >1.18</td>
+      <td id="T_5603f_row1_col2" class="data row1 col2" >0.52</td>
+      <td id="T_5603f_row1_col3" class="data row1 col3" >1.73</td>
+      <td id="T_5603f_row1_col4" class="data row1 col4" >6.10</td>
+      <td id="T_5603f_row1_col5" class="data row1 col5" >1.83</td>
+      <td id="T_5603f_row1_col6" class="data row1 col6" >6.86</td>
+      <td id="T_5603f_row1_col7" class="data row1 col7" >low</td>
+      <td id="T_5603f_row1_col8" class="data row1 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_69057_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_69057_row2_col0" class="data row2 col0" >15.41</td>
-      <td id="T_69057_row2_col1" class="data row2 col1" >0.36</td>
-      <td id="T_69057_row2_col2" class="data row2 col2" >16.08</td>
-      <td id="T_69057_row2_col3" class="data row2 col3" >17.73</td>
-      <td id="T_69057_row2_col4" class="data row2 col4" >19.74</td>
-      <td id="T_69057_row2_col5" class="data row2 col5" >18.80</td>
-      <td id="T_69057_row2_col6" class="data row2 col6" >21.92</td>
-      <td id="T_69057_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_69057_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_5603f_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_5603f_row2_col0" class="data row2 col0" >15.41</td>
+      <td id="T_5603f_row2_col1" class="data row2 col1" >0.36</td>
+      <td id="T_5603f_row2_col2" class="data row2 col2" >16.08</td>
+      <td id="T_5603f_row2_col3" class="data row2 col3" >17.73</td>
+      <td id="T_5603f_row2_col4" class="data row2 col4" >19.74</td>
+      <td id="T_5603f_row2_col5" class="data row2 col5" >18.80</td>
+      <td id="T_5603f_row2_col6" class="data row2 col6" >21.92</td>
+      <td id="T_5603f_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_5603f_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_69057_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_69057_row3_col0" class="data row3 col0" >19.67</td>
-      <td id="T_69057_row3_col1" class="data row3 col1" >7.59</td>
-      <td id="T_69057_row3_col2" class="data row3 col2" >19.92</td>
-      <td id="T_69057_row3_col3" class="data row3 col3" >21.41</td>
-      <td id="T_69057_row3_col4" class="data row3 col4" >53.24</td>
-      <td id="T_69057_row3_col5" class="data row3 col5" >21.63</td>
-      <td id="T_69057_row3_col6" class="data row3 col6" >54.30</td>
-      <td id="T_69057_row3_col7" class="data row3 col7" >low</td>
-      <td id="T_69057_row3_col8" class="data row3 col8" >low</td>
+      <th id="T_5603f_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_5603f_row3_col0" class="data row3 col0" >19.67</td>
+      <td id="T_5603f_row3_col1" class="data row3 col1" >7.59</td>
+      <td id="T_5603f_row3_col2" class="data row3 col2" >19.92</td>
+      <td id="T_5603f_row3_col3" class="data row3 col3" >21.41</td>
+      <td id="T_5603f_row3_col4" class="data row3 col4" >53.24</td>
+      <td id="T_5603f_row3_col5" class="data row3 col5" >21.63</td>
+      <td id="T_5603f_row3_col6" class="data row3 col6" >54.30</td>
+      <td id="T_5603f_row3_col7" class="data row3 col7" >low</td>
+      <td id="T_5603f_row3_col8" class="data row3 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_69057_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_69057_row4_col0" class="data row4 col0" >0.01</td>
-      <td id="T_69057_row4_col1" class="data row4 col1" >0.26</td>
-      <td id="T_69057_row4_col2" class="data row4 col2" >-0.02</td>
-      <td id="T_69057_row4_col3" class="data row4 col3" >-0.23</td>
-      <td id="T_69057_row4_col4" class="data row4 col4" >-1.12</td>
-      <td id="T_69057_row4_col5" class="data row4 col5" >-0.56</td>
-      <td id="T_69057_row4_col6" class="data row4 col6" >-1.14</td>
-      <td id="T_69057_row4_col7" class="data row4 col7" >low</td>
-      <td id="T_69057_row4_col8" class="data row4 col8" >high</td>
+      <th id="T_5603f_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_5603f_row4_col0" class="data row4 col0" >0.01</td>
+      <td id="T_5603f_row4_col1" class="data row4 col1" >0.26</td>
+      <td id="T_5603f_row4_col2" class="data row4 col2" >-0.02</td>
+      <td id="T_5603f_row4_col3" class="data row4 col3" >-0.23</td>
+      <td id="T_5603f_row4_col4" class="data row4 col4" >-1.12</td>
+      <td id="T_5603f_row4_col5" class="data row4 col5" >-0.56</td>
+      <td id="T_5603f_row4_col6" class="data row4 col6" >-1.14</td>
+      <td id="T_5603f_row4_col7" class="data row4 col7" >low</td>
+      <td id="T_5603f_row4_col8" class="data row4 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_69057_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_69057_row5_col0" class="data row5 col0" >7137.77</td>
-      <td id="T_69057_row5_col1" class="data row5 col1" >393.15</td>
-      <td id="T_69057_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_69057_row5_col3" class="data row5 col3" >5983.77</td>
-      <td id="T_69057_row5_col4" class="data row5 col4" >7269.02</td>
-      <td id="T_69057_row5_col5" class="data row5 col5" >5556.98</td>
-      <td id="T_69057_row5_col6" class="data row5 col6" >7372.01</td>
-      <td id="T_69057_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_69057_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_5603f_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_5603f_row5_col0" class="data row5 col0" >7137.77</td>
+      <td id="T_5603f_row5_col1" class="data row5 col1" >393.15</td>
+      <td id="T_5603f_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_5603f_row5_col3" class="data row5 col3" >5983.77</td>
+      <td id="T_5603f_row5_col4" class="data row5 col4" >7269.02</td>
+      <td id="T_5603f_row5_col5" class="data row5 col5" >5556.98</td>
+      <td id="T_5603f_row5_col6" class="data row5 col6" >7372.01</td>
+      <td id="T_5603f_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_5603f_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_69057_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_69057_row6_col0" class="data row6 col0" >0.00</td>
-      <td id="T_69057_row6_col1" class="data row6 col1" >0.00</td>
-      <td id="T_69057_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_69057_row6_col3" class="data row6 col3" >0.00</td>
-      <td id="T_69057_row6_col4" class="data row6 col4" >0.00</td>
-      <td id="T_69057_row6_col5" class="data row6 col5" >0.09</td>
-      <td id="T_69057_row6_col6" class="data row6 col6" >5.24</td>
-      <td id="T_69057_row6_col7" class="data row6 col7" >high</td>
-      <td id="T_69057_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_5603f_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_5603f_row6_col0" class="data row6 col0" >0.00</td>
+      <td id="T_5603f_row6_col1" class="data row6 col1" >0.00</td>
+      <td id="T_5603f_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_5603f_row6_col3" class="data row6 col3" >0.00</td>
+      <td id="T_5603f_row6_col4" class="data row6 col4" >0.00</td>
+      <td id="T_5603f_row6_col5" class="data row6 col5" >0.09</td>
+      <td id="T_5603f_row6_col6" class="data row6 col6" >5.24</td>
+      <td id="T_5603f_row6_col7" class="data row6 col7" >high</td>
+      <td id="T_5603f_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_69057_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_69057_row7_col0" class="data row7 col0" >351.88</td>
-      <td id="T_69057_row7_col1" class="data row7 col1" >108.35</td>
-      <td id="T_69057_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_69057_row7_col3" class="data row7 col3" >744.67</td>
-      <td id="T_69057_row7_col4" class="data row7 col4" >1235.54</td>
-      <td id="T_69057_row7_col5" class="data row7 col5" >1022.32</td>
-      <td id="T_69057_row7_col6" class="data row7 col6" >2053.37</td>
-      <td id="T_69057_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_69057_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_5603f_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_5603f_row7_col0" class="data row7 col0" >351.88</td>
+      <td id="T_5603f_row7_col1" class="data row7 col1" >108.35</td>
+      <td id="T_5603f_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_5603f_row7_col3" class="data row7 col3" >744.67</td>
+      <td id="T_5603f_row7_col4" class="data row7 col4" >1235.54</td>
+      <td id="T_5603f_row7_col5" class="data row7 col5" >1022.32</td>
+      <td id="T_5603f_row7_col6" class="data row7 col6" >2053.37</td>
+      <td id="T_5603f_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_5603f_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
