--- a/sites_data/CLN_NY/stat_matrix_static_colors.html
+++ b/sites_data/CLN_NY/stat_matrix_static_colors.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_28114_row0_col7, #T_28114_row0_col8, #T_28114_row2_col7, #T_28114_row2_col8, #T_28114_row6_col7, #T_28114_row6_col8, #T_28114_row7_col7, #T_28114_row7_col8 {
+#T_b9d30_row0_col7, #T_b9d30_row0_col8, #T_b9d30_row2_col7, #T_b9d30_row2_col8, #T_b9d30_row6_col7, #T_b9d30_row6_col8, #T_b9d30_row7_col7, #T_b9d30_row7_col8 {
   background-color: red;
 }
-#T_28114_row1_col7, #T_28114_row3_col7 {
+#T_b9d30_row1_col7, #T_b9d30_row3_col7 {
   background-color: green;
 }
-#T_28114_row1_col8, #T_28114_row3_col8 {
+#T_b9d30_row1_col8, #T_b9d30_row3_col8 {
   background-color: yellow;
 }
-#T_28114_row4_col7, #T_28114_row4_col8, #T_28114_row5_col7, #T_28114_row5_col8 {
+#T_b9d30_row4_col7, #T_b9d30_row4_col8, #T_b9d30_row5_col7, #T_b9d30_row5_col8 {
   background-color: gray;
 }
-#T_28114_row5_col2, #T_28114_row6_col2, #T_28114_row7_col2 {
+#T_b9d30_row5_col2, #T_b9d30_row6_col2, #T_b9d30_row7_col2 {
   background-color: white;
 }
 </style>
 </head>
 <body>
-<table id="T_28114_">
+<table id="T_b9d30_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -38,100 +38,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_28114_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_28114_row0_col0" class="data row0 col0" >2.83</td>
-      <td id="T_28114_row0_col1" class="data row0 col1" >0.08</td>
-      <td id="T_28114_row0_col2" class="data row0 col2" >2.89</td>
-      <td id="T_28114_row0_col3" class="data row0 col3" >3.00</td>
-      <td id="T_28114_row0_col4" class="data row0 col4" >3.23</td>
-      <td id="T_28114_row0_col5" class="data row0 col5" >3.04</td>
-      <td id="T_28114_row0_col6" class="data row0 col6" >3.27</td>
-      <td id="T_28114_row0_col7" class="data row0 col7" >high</td>
-      <td id="T_28114_row0_col8" class="data row0 col8" >high</td>
+      <th id="T_b9d30_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_b9d30_row0_col0" class="data row0 col0" >2.83</td>
+      <td id="T_b9d30_row0_col1" class="data row0 col1" >0.08</td>
+      <td id="T_b9d30_row0_col2" class="data row0 col2" >2.89</td>
+      <td id="T_b9d30_row0_col3" class="data row0 col3" >3.00</td>
+      <td id="T_b9d30_row0_col4" class="data row0 col4" >3.23</td>
+      <td id="T_b9d30_row0_col5" class="data row0 col5" >3.04</td>
+      <td id="T_b9d30_row0_col6" class="data row0 col6" >3.27</td>
+      <td id="T_b9d30_row0_col7" class="data row0 col7" >high</td>
+      <td id="T_b9d30_row0_col8" class="data row0 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_28114_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_28114_row1_col0" class="data row1 col0" >1.37</td>
-      <td id="T_28114_row1_col1" class="data row1 col1" >1.12</td>
-      <td id="T_28114_row1_col2" class="data row1 col2" >6.14</td>
-      <td id="T_28114_row1_col3" class="data row1 col3" >1.93</td>
-      <td id="T_28114_row1_col4" class="data row1 col4" >6.33</td>
-      <td id="T_28114_row1_col5" class="data row1 col5" >2.43</td>
-      <td id="T_28114_row1_col6" class="data row1 col6" >7.43</td>
-      <td id="T_28114_row1_col7" class="data row1 col7" >low</td>
-      <td id="T_28114_row1_col8" class="data row1 col8" >medium</td>
+      <th id="T_b9d30_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_b9d30_row1_col0" class="data row1 col0" >1.37</td>
+      <td id="T_b9d30_row1_col1" class="data row1 col1" >1.12</td>
+      <td id="T_b9d30_row1_col2" class="data row1 col2" >6.14</td>
+      <td id="T_b9d30_row1_col3" class="data row1 col3" >1.93</td>
+      <td id="T_b9d30_row1_col4" class="data row1 col4" >6.33</td>
+      <td id="T_b9d30_row1_col5" class="data row1 col5" >2.43</td>
+      <td id="T_b9d30_row1_col6" class="data row1 col6" >7.43</td>
+      <td id="T_b9d30_row1_col7" class="data row1 col7" >low</td>
+      <td id="T_b9d30_row1_col8" class="data row1 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_28114_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_28114_row2_col0" class="data row2 col0" >15.23</td>
-      <td id="T_28114_row2_col1" class="data row2 col1" >0.32</td>
-      <td id="T_28114_row2_col2" class="data row2 col2" >15.93</td>
-      <td id="T_28114_row2_col3" class="data row2 col3" >17.56</td>
-      <td id="T_28114_row2_col4" class="data row2 col4" >19.43</td>
-      <td id="T_28114_row2_col5" class="data row2 col5" >18.60</td>
-      <td id="T_28114_row2_col6" class="data row2 col6" >22.61</td>
-      <td id="T_28114_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_28114_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_b9d30_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_b9d30_row2_col0" class="data row2 col0" >15.23</td>
+      <td id="T_b9d30_row2_col1" class="data row2 col1" >0.32</td>
+      <td id="T_b9d30_row2_col2" class="data row2 col2" >15.93</td>
+      <td id="T_b9d30_row2_col3" class="data row2 col3" >17.56</td>
+      <td id="T_b9d30_row2_col4" class="data row2 col4" >19.43</td>
+      <td id="T_b9d30_row2_col5" class="data row2 col5" >18.60</td>
+      <td id="T_b9d30_row2_col6" class="data row2 col6" >22.61</td>
+      <td id="T_b9d30_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_b9d30_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_28114_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_28114_row3_col0" class="data row3 col0" >41.39</td>
-      <td id="T_28114_row3_col1" class="data row3 col1" >12.67</td>
-      <td id="T_28114_row3_col2" class="data row3 col2" >44.55</td>
-      <td id="T_28114_row3_col3" class="data row3 col3" >44.52</td>
-      <td id="T_28114_row3_col4" class="data row3 col4" >93.92</td>
-      <td id="T_28114_row3_col5" class="data row3 col5" >50.81</td>
-      <td id="T_28114_row3_col6" class="data row3 col6" >113.12</td>
-      <td id="T_28114_row3_col7" class="data row3 col7" >low</td>
-      <td id="T_28114_row3_col8" class="data row3 col8" >medium</td>
+      <th id="T_b9d30_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_b9d30_row3_col0" class="data row3 col0" >41.39</td>
+      <td id="T_b9d30_row3_col1" class="data row3 col1" >12.67</td>
+      <td id="T_b9d30_row3_col2" class="data row3 col2" >44.55</td>
+      <td id="T_b9d30_row3_col3" class="data row3 col3" >44.52</td>
+      <td id="T_b9d30_row3_col4" class="data row3 col4" >93.92</td>
+      <td id="T_b9d30_row3_col5" class="data row3 col5" >50.81</td>
+      <td id="T_b9d30_row3_col6" class="data row3 col6" >113.12</td>
+      <td id="T_b9d30_row3_col7" class="data row3 col7" >low</td>
+      <td id="T_b9d30_row3_col8" class="data row3 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_28114_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_28114_row4_col0" class="data row4 col0" >0.00</td>
-      <td id="T_28114_row4_col1" class="data row4 col1" >0.25</td>
-      <td id="T_28114_row4_col2" class="data row4 col2" >0.02</td>
-      <td id="T_28114_row4_col3" class="data row4 col3" >0.26</td>
-      <td id="T_28114_row4_col4" class="data row4 col4" >-0.41</td>
-      <td id="T_28114_row4_col5" class="data row4 col5" >0.34</td>
-      <td id="T_28114_row4_col6" class="data row4 col6" >-0.48</td>
-      <td id="T_28114_row4_col7" class="data row4 col7" >negative</td>
-      <td id="T_28114_row4_col8" class="data row4 col8" >negative</td>
+      <th id="T_b9d30_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_b9d30_row4_col0" class="data row4 col0" >0.00</td>
+      <td id="T_b9d30_row4_col1" class="data row4 col1" >0.25</td>
+      <td id="T_b9d30_row4_col2" class="data row4 col2" >0.02</td>
+      <td id="T_b9d30_row4_col3" class="data row4 col3" >0.26</td>
+      <td id="T_b9d30_row4_col4" class="data row4 col4" >-0.41</td>
+      <td id="T_b9d30_row4_col5" class="data row4 col5" >0.34</td>
+      <td id="T_b9d30_row4_col6" class="data row4 col6" >-0.48</td>
+      <td id="T_b9d30_row4_col7" class="data row4 col7" >negative</td>
+      <td id="T_b9d30_row4_col8" class="data row4 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_28114_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_28114_row5_col0" class="data row5 col0" >6552.75</td>
-      <td id="T_28114_row5_col1" class="data row5 col1" >365.18</td>
-      <td id="T_28114_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_28114_row5_col3" class="data row5 col3" >5473.68</td>
-      <td id="T_28114_row5_col4" class="data row5 col4" >6630.60</td>
-      <td id="T_28114_row5_col5" class="data row5 col5" >5080.41</td>
-      <td id="T_28114_row5_col6" class="data row5 col6" >6562.16</td>
-      <td id="T_28114_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_28114_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_b9d30_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_b9d30_row5_col0" class="data row5 col0" >6552.75</td>
+      <td id="T_b9d30_row5_col1" class="data row5 col1" >365.18</td>
+      <td id="T_b9d30_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_b9d30_row5_col3" class="data row5 col3" >5473.68</td>
+      <td id="T_b9d30_row5_col4" class="data row5 col4" >6630.60</td>
+      <td id="T_b9d30_row5_col5" class="data row5 col5" >5080.41</td>
+      <td id="T_b9d30_row5_col6" class="data row5 col6" >6562.16</td>
+      <td id="T_b9d30_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_b9d30_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_28114_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_28114_row6_col0" class="data row6 col0" >0.00</td>
-      <td id="T_28114_row6_col1" class="data row6 col1" >0.00</td>
-      <td id="T_28114_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_28114_row6_col3" class="data row6 col3" >0.01</td>
-      <td id="T_28114_row6_col4" class="data row6 col4" >0.59</td>
-      <td id="T_28114_row6_col5" class="data row6 col5" >0.75</td>
-      <td id="T_28114_row6_col6" class="data row6 col6" >17.75</td>
-      <td id="T_28114_row6_col7" class="data row6 col7" >high</td>
-      <td id="T_28114_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_b9d30_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_b9d30_row6_col0" class="data row6 col0" >0.00</td>
+      <td id="T_b9d30_row6_col1" class="data row6 col1" >0.00</td>
+      <td id="T_b9d30_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_b9d30_row6_col3" class="data row6 col3" >0.01</td>
+      <td id="T_b9d30_row6_col4" class="data row6 col4" >0.59</td>
+      <td id="T_b9d30_row6_col5" class="data row6 col5" >0.75</td>
+      <td id="T_b9d30_row6_col6" class="data row6 col6" >17.75</td>
+      <td id="T_b9d30_row6_col7" class="data row6 col7" >high</td>
+      <td id="T_b9d30_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_28114_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_28114_row7_col0" class="data row7 col0" >611.24</td>
-      <td id="T_28114_row7_col1" class="data row7 col1" >117.55</td>
-      <td id="T_28114_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_28114_row7_col3" class="data row7 col3" >1071.38</td>
-      <td id="T_28114_row7_col4" class="data row7 col4" >1540.97</td>
-      <td id="T_28114_row7_col5" class="data row7 col5" >1360.53</td>
-      <td id="T_28114_row7_col6" class="data row7 col6" >2370.63</td>
-      <td id="T_28114_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_28114_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_b9d30_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_b9d30_row7_col0" class="data row7 col0" >611.24</td>
+      <td id="T_b9d30_row7_col1" class="data row7 col1" >117.55</td>
+      <td id="T_b9d30_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_b9d30_row7_col3" class="data row7 col3" >1071.38</td>
+      <td id="T_b9d30_row7_col4" class="data row7 col4" >1540.97</td>
+      <td id="T_b9d30_row7_col5" class="data row7 col5" >1360.53</td>
+      <td id="T_b9d30_row7_col6" class="data row7 col6" >2370.63</td>
+      <td id="T_b9d30_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_b9d30_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
