--- a/sites_data/GNO_NM/stat_matrix_static_colors.html
+++ b/sites_data/GNO_NM/stat_matrix_static_colors.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_b31f5_row0_col7, #T_b31f5_row0_col8, #T_b31f5_row1_col7, #T_b31f5_row1_col8, #T_b31f5_row3_col7, #T_b31f5_row5_col7, #T_b31f5_row5_col8 {
+#T_0b4bc_row0_col7, #T_0b4bc_row0_col8, #T_0b4bc_row1_col7, #T_0b4bc_row1_col8, #T_0b4bc_row3_col7, #T_0b4bc_row5_col7, #T_0b4bc_row5_col8 {
   background-color: gray;
 }
-#T_b31f5_row2_col7, #T_b31f5_row2_col8, #T_b31f5_row6_col7, #T_b31f5_row6_col8, #T_b31f5_row7_col7, #T_b31f5_row7_col8 {
+#T_0b4bc_row2_col7, #T_0b4bc_row2_col8, #T_0b4bc_row6_col7, #T_0b4bc_row6_col8, #T_0b4bc_row7_col7, #T_0b4bc_row7_col8 {
   background-color: red;
 }
-#T_b31f5_row3_col8 {
+#T_0b4bc_row3_col8 {
   background-color: green;
 }
-#T_b31f5_row4_col7, #T_b31f5_row4_col8 {
+#T_0b4bc_row4_col7, #T_0b4bc_row4_col8 {
   background-color: yellow;
 }
-#T_b31f5_row5_col2, #T_b31f5_row6_col2, #T_b31f5_row7_col2 {
+#T_0b4bc_row5_col2, #T_0b4bc_row6_col2, #T_0b4bc_row7_col2 {
   background-color: white;
 }
 </style>
 </head>
 <body>
-<table id="T_b31f5_">
+<table id="T_0b4bc_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -38,100 +38,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_b31f5_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_b31f5_row0_col0" class="data row0 col0" >0.79</td>
-      <td id="T_b31f5_row0_col1" class="data row0 col1" >0.05</td>
-      <td id="T_b31f5_row0_col2" class="data row0 col2" >0.79</td>
-      <td id="T_b31f5_row0_col3" class="data row0 col3" >0.77</td>
-      <td id="T_b31f5_row0_col4" class="data row0 col4" >0.94</td>
-      <td id="T_b31f5_row0_col5" class="data row0 col5" >0.75</td>
-      <td id="T_b31f5_row0_col6" class="data row0 col6" >0.90</td>
-      <td id="T_b31f5_row0_col7" class="data row0 col7" >negative</td>
-      <td id="T_b31f5_row0_col8" class="data row0 col8" >negative</td>
+      <th id="T_0b4bc_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_0b4bc_row0_col0" class="data row0 col0" >0.79</td>
+      <td id="T_0b4bc_row0_col1" class="data row0 col1" >0.05</td>
+      <td id="T_0b4bc_row0_col2" class="data row0 col2" >0.79</td>
+      <td id="T_0b4bc_row0_col3" class="data row0 col3" >0.77</td>
+      <td id="T_0b4bc_row0_col4" class="data row0 col4" >0.94</td>
+      <td id="T_0b4bc_row0_col5" class="data row0 col5" >0.75</td>
+      <td id="T_0b4bc_row0_col6" class="data row0 col6" >0.90</td>
+      <td id="T_0b4bc_row0_col7" class="data row0 col7" >negative</td>
+      <td id="T_0b4bc_row0_col8" class="data row0 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_b31f5_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_b31f5_row1_col0" class="data row1 col0" >0.44</td>
-      <td id="T_b31f5_row1_col1" class="data row1 col1" >0.66</td>
-      <td id="T_b31f5_row1_col2" class="data row1 col2" >1.88</td>
-      <td id="T_b31f5_row1_col3" class="data row1 col3" >0.43</td>
-      <td id="T_b31f5_row1_col4" class="data row1 col4" >2.86</td>
-      <td id="T_b31f5_row1_col5" class="data row1 col5" >0.46</td>
-      <td id="T_b31f5_row1_col6" class="data row1 col6" >3.19</td>
-      <td id="T_b31f5_row1_col7" class="data row1 col7" >negative</td>
-      <td id="T_b31f5_row1_col8" class="data row1 col8" >negative</td>
+      <th id="T_0b4bc_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_0b4bc_row1_col0" class="data row1 col0" >0.44</td>
+      <td id="T_0b4bc_row1_col1" class="data row1 col1" >0.66</td>
+      <td id="T_0b4bc_row1_col2" class="data row1 col2" >1.88</td>
+      <td id="T_0b4bc_row1_col3" class="data row1 col3" >0.43</td>
+      <td id="T_0b4bc_row1_col4" class="data row1 col4" >2.86</td>
+      <td id="T_0b4bc_row1_col5" class="data row1 col5" >0.46</td>
+      <td id="T_0b4bc_row1_col6" class="data row1 col6" >3.19</td>
+      <td id="T_0b4bc_row1_col7" class="data row1 col7" >negative</td>
+      <td id="T_0b4bc_row1_col8" class="data row1 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_b31f5_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_b31f5_row2_col0" class="data row2 col0" >25.39</td>
-      <td id="T_b31f5_row2_col1" class="data row2 col1" >0.30</td>
-      <td id="T_b31f5_row2_col2" class="data row2 col2" >25.98</td>
-      <td id="T_b31f5_row2_col3" class="data row2 col3" >27.66</td>
-      <td id="T_b31f5_row2_col4" class="data row2 col4" >29.03</td>
-      <td id="T_b31f5_row2_col5" class="data row2 col5" >28.67</td>
-      <td id="T_b31f5_row2_col6" class="data row2 col6" >32.39</td>
-      <td id="T_b31f5_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_b31f5_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_0b4bc_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_0b4bc_row2_col0" class="data row2 col0" >25.39</td>
+      <td id="T_0b4bc_row2_col1" class="data row2 col1" >0.30</td>
+      <td id="T_0b4bc_row2_col2" class="data row2 col2" >25.98</td>
+      <td id="T_0b4bc_row2_col3" class="data row2 col3" >27.66</td>
+      <td id="T_0b4bc_row2_col4" class="data row2 col4" >29.03</td>
+      <td id="T_0b4bc_row2_col5" class="data row2 col5" >28.67</td>
+      <td id="T_0b4bc_row2_col6" class="data row2 col6" >32.39</td>
+      <td id="T_0b4bc_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_0b4bc_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_b31f5_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_b31f5_row3_col0" class="data row3 col0" >37.59</td>
-      <td id="T_b31f5_row3_col1" class="data row3 col1" >20.38</td>
-      <td id="T_b31f5_row3_col2" class="data row3 col2" >38.84</td>
-      <td id="T_b31f5_row3_col3" class="data row3 col3" >37.02</td>
-      <td id="T_b31f5_row3_col4" class="data row3 col4" >137.69</td>
-      <td id="T_b31f5_row3_col5" class="data row3 col5" >37.83</td>
-      <td id="T_b31f5_row3_col6" class="data row3 col6" >131.00</td>
-      <td id="T_b31f5_row3_col7" class="data row3 col7" >negative</td>
-      <td id="T_b31f5_row3_col8" class="data row3 col8" >low</td>
+      <th id="T_0b4bc_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_0b4bc_row3_col0" class="data row3 col0" >37.59</td>
+      <td id="T_0b4bc_row3_col1" class="data row3 col1" >20.38</td>
+      <td id="T_0b4bc_row3_col2" class="data row3 col2" >38.84</td>
+      <td id="T_0b4bc_row3_col3" class="data row3 col3" >37.02</td>
+      <td id="T_0b4bc_row3_col4" class="data row3 col4" >137.69</td>
+      <td id="T_0b4bc_row3_col5" class="data row3 col5" >37.83</td>
+      <td id="T_0b4bc_row3_col6" class="data row3 col6" >131.00</td>
+      <td id="T_0b4bc_row3_col7" class="data row3 col7" >negative</td>
+      <td id="T_0b4bc_row3_col8" class="data row3 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_b31f5_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_b31f5_row4_col0" class="data row4 col0" >-0.01</td>
-      <td id="T_b31f5_row4_col1" class="data row4 col1" >0.29</td>
-      <td id="T_b31f5_row4_col2" class="data row4 col2" >-0.06</td>
-      <td id="T_b31f5_row4_col3" class="data row4 col3" >-0.36</td>
-      <td id="T_b31f5_row4_col4" class="data row4 col4" >-0.96</td>
-      <td id="T_b31f5_row4_col5" class="data row4 col5" >-0.57</td>
-      <td id="T_b31f5_row4_col6" class="data row4 col6" >-1.45</td>
-      <td id="T_b31f5_row4_col7" class="data row4 col7" >medium</td>
-      <td id="T_b31f5_row4_col8" class="data row4 col8" >medium</td>
+      <th id="T_0b4bc_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_0b4bc_row4_col0" class="data row4 col0" >-0.01</td>
+      <td id="T_0b4bc_row4_col1" class="data row4 col1" >0.29</td>
+      <td id="T_0b4bc_row4_col2" class="data row4 col2" >-0.06</td>
+      <td id="T_0b4bc_row4_col3" class="data row4 col3" >-0.36</td>
+      <td id="T_0b4bc_row4_col4" class="data row4 col4" >-0.96</td>
+      <td id="T_0b4bc_row4_col5" class="data row4 col5" >-0.57</td>
+      <td id="T_0b4bc_row4_col6" class="data row4 col6" >-1.45</td>
+      <td id="T_0b4bc_row4_col7" class="data row4 col7" >medium</td>
+      <td id="T_0b4bc_row4_col8" class="data row4 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_b31f5_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_b31f5_row5_col0" class="data row5 col0" >2549.14</td>
-      <td id="T_b31f5_row5_col1" class="data row5 col1" >207.71</td>
-      <td id="T_b31f5_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_b31f5_row5_col3" class="data row5 col3" >1959.99</td>
-      <td id="T_b31f5_row5_col4" class="data row5 col4" >2614.46</td>
-      <td id="T_b31f5_row5_col5" class="data row5 col5" >1737.69</td>
-      <td id="T_b31f5_row5_col6" class="data row5 col6" >2680.99</td>
-      <td id="T_b31f5_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_b31f5_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_0b4bc_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_0b4bc_row5_col0" class="data row5 col0" >2549.14</td>
+      <td id="T_0b4bc_row5_col1" class="data row5 col1" >207.71</td>
+      <td id="T_0b4bc_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_0b4bc_row5_col3" class="data row5 col3" >1959.99</td>
+      <td id="T_0b4bc_row5_col4" class="data row5 col4" >2614.46</td>
+      <td id="T_0b4bc_row5_col5" class="data row5 col5" >1737.69</td>
+      <td id="T_0b4bc_row5_col6" class="data row5 col6" >2680.99</td>
+      <td id="T_0b4bc_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_0b4bc_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_b31f5_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_b31f5_row6_col0" class="data row6 col0" >0.01</td>
-      <td id="T_b31f5_row6_col1" class="data row6 col1" >0.05</td>
-      <td id="T_b31f5_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_b31f5_row6_col3" class="data row6 col3" >1.84</td>
-      <td id="T_b31f5_row6_col4" class="data row6 col4" >27.14</td>
-      <td id="T_b31f5_row6_col5" class="data row6 col5" >22.46</td>
-      <td id="T_b31f5_row6_col6" class="data row6 col6" >195.43</td>
-      <td id="T_b31f5_row6_col7" class="data row6 col7" >high</td>
-      <td id="T_b31f5_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_0b4bc_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_0b4bc_row6_col0" class="data row6 col0" >0.01</td>
+      <td id="T_0b4bc_row6_col1" class="data row6 col1" >0.05</td>
+      <td id="T_0b4bc_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_0b4bc_row6_col3" class="data row6 col3" >1.84</td>
+      <td id="T_0b4bc_row6_col4" class="data row6 col4" >27.14</td>
+      <td id="T_0b4bc_row6_col5" class="data row6 col5" >22.46</td>
+      <td id="T_0b4bc_row6_col6" class="data row6 col6" >195.43</td>
+      <td id="T_0b4bc_row6_col7" class="data row6 col7" >high</td>
+      <td id="T_0b4bc_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_b31f5_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_b31f5_row7_col0" class="data row7 col0" >1951.11</td>
-      <td id="T_b31f5_row7_col1" class="data row7 col1" >196.26</td>
-      <td id="T_b31f5_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_b31f5_row7_col3" class="data row7 col3" >2731.33</td>
-      <td id="T_b31f5_row7_col4" class="data row7 col4" >3467.77</td>
-      <td id="T_b31f5_row7_col5" class="data row7 col5" >3142.57</td>
-      <td id="T_b31f5_row7_col6" class="data row7 col6" >4714.78</td>
-      <td id="T_b31f5_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_b31f5_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_0b4bc_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_0b4bc_row7_col0" class="data row7 col0" >1951.11</td>
+      <td id="T_0b4bc_row7_col1" class="data row7 col1" >196.26</td>
+      <td id="T_0b4bc_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_0b4bc_row7_col3" class="data row7 col3" >2731.33</td>
+      <td id="T_0b4bc_row7_col4" class="data row7 col4" >3467.77</td>
+      <td id="T_0b4bc_row7_col5" class="data row7 col5" >3142.57</td>
+      <td id="T_0b4bc_row7_col6" class="data row7 col6" >4714.78</td>
+      <td id="T_0b4bc_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_0b4bc_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
