--- a/sites_data/HAT_UT/stat_matrix_static_colors.html
+++ b/sites_data/HAT_UT/stat_matrix_static_colors.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_73ef5_row0_col7, #T_73ef5_row4_col7 {
+#T_43a02_row0_col7, #T_43a02_row4_col7 {
   background-color: yellow;
 }
-#T_73ef5_row0_col8, #T_73ef5_row1_col7, #T_73ef5_row1_col8, #T_73ef5_row3_col7, #T_73ef5_row3_col8 {
+#T_43a02_row0_col8, #T_43a02_row1_col7, #T_43a02_row1_col8, #T_43a02_row3_col7, #T_43a02_row3_col8 {
   background-color: green;
 }
-#T_73ef5_row2_col7, #T_73ef5_row2_col8, #T_73ef5_row4_col8, #T_73ef5_row6_col7, #T_73ef5_row6_col8, #T_73ef5_row7_col7, #T_73ef5_row7_col8 {
+#T_43a02_row2_col7, #T_43a02_row2_col8, #T_43a02_row4_col8, #T_43a02_row6_col7, #T_43a02_row6_col8, #T_43a02_row7_col7, #T_43a02_row7_col8 {
   background-color: red;
 }
-#T_73ef5_row5_col2, #T_73ef5_row6_col2, #T_73ef5_row7_col2 {
+#T_43a02_row5_col2, #T_43a02_row6_col2, #T_43a02_row7_col2 {
   background-color: white;
 }
-#T_73ef5_row5_col7, #T_73ef5_row5_col8 {
+#T_43a02_row5_col7, #T_43a02_row5_col8 {
   background-color: gray;
 }
 </style>
 </head>
 <body>
-<table id="T_73ef5_">
+<table id="T_43a02_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -38,100 +38,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_73ef5_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_73ef5_row0_col0" class="data row0 col0" >0.54</td>
-      <td id="T_73ef5_row0_col1" class="data row0 col1" >0.03</td>
-      <td id="T_73ef5_row0_col2" class="data row0 col2" >0.54</td>
-      <td id="T_73ef5_row0_col3" class="data row0 col3" >0.58</td>
-      <td id="T_73ef5_row0_col4" class="data row0 col4" >0.71</td>
-      <td id="T_73ef5_row0_col5" class="data row0 col5" >0.57</td>
-      <td id="T_73ef5_row0_col6" class="data row0 col6" >0.70</td>
-      <td id="T_73ef5_row0_col7" class="data row0 col7" >medium</td>
-      <td id="T_73ef5_row0_col8" class="data row0 col8" >low</td>
+      <th id="T_43a02_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_43a02_row0_col0" class="data row0 col0" >0.54</td>
+      <td id="T_43a02_row0_col1" class="data row0 col1" >0.03</td>
+      <td id="T_43a02_row0_col2" class="data row0 col2" >0.54</td>
+      <td id="T_43a02_row0_col3" class="data row0 col3" >0.58</td>
+      <td id="T_43a02_row0_col4" class="data row0 col4" >0.71</td>
+      <td id="T_43a02_row0_col5" class="data row0 col5" >0.57</td>
+      <td id="T_43a02_row0_col6" class="data row0 col6" >0.70</td>
+      <td id="T_43a02_row0_col7" class="data row0 col7" >medium</td>
+      <td id="T_43a02_row0_col8" class="data row0 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_73ef5_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_73ef5_row1_col0" class="data row1 col0" >0.78</td>
-      <td id="T_73ef5_row1_col1" class="data row1 col1" >0.91</td>
-      <td id="T_73ef5_row1_col2" class="data row1 col2" >0.50</td>
-      <td id="T_73ef5_row1_col3" class="data row1 col3" >1.02</td>
-      <td id="T_73ef5_row1_col4" class="data row1 col4" >4.67</td>
-      <td id="T_73ef5_row1_col5" class="data row1 col5" >1.07</td>
-      <td id="T_73ef5_row1_col6" class="data row1 col6" >4.86</td>
-      <td id="T_73ef5_row1_col7" class="data row1 col7" >low</td>
-      <td id="T_73ef5_row1_col8" class="data row1 col8" >low</td>
+      <th id="T_43a02_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_43a02_row1_col0" class="data row1 col0" >0.78</td>
+      <td id="T_43a02_row1_col1" class="data row1 col1" >0.91</td>
+      <td id="T_43a02_row1_col2" class="data row1 col2" >0.50</td>
+      <td id="T_43a02_row1_col3" class="data row1 col3" >1.02</td>
+      <td id="T_43a02_row1_col4" class="data row1 col4" >4.67</td>
+      <td id="T_43a02_row1_col5" class="data row1 col5" >1.07</td>
+      <td id="T_43a02_row1_col6" class="data row1 col6" >4.86</td>
+      <td id="T_43a02_row1_col7" class="data row1 col7" >low</td>
+      <td id="T_43a02_row1_col8" class="data row1 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_73ef5_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_73ef5_row2_col0" class="data row2 col0" >20.96</td>
-      <td id="T_73ef5_row2_col1" class="data row2 col1" >0.39</td>
-      <td id="T_73ef5_row2_col2" class="data row2 col2" >21.70</td>
-      <td id="T_73ef5_row2_col3" class="data row2 col3" >23.46</td>
-      <td id="T_73ef5_row2_col4" class="data row2 col4" >25.39</td>
-      <td id="T_73ef5_row2_col5" class="data row2 col5" >24.54</td>
-      <td id="T_73ef5_row2_col6" class="data row2 col6" >27.95</td>
-      <td id="T_73ef5_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_73ef5_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_43a02_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_43a02_row2_col0" class="data row2 col0" >20.96</td>
+      <td id="T_43a02_row2_col1" class="data row2 col1" >0.39</td>
+      <td id="T_43a02_row2_col2" class="data row2 col2" >21.70</td>
+      <td id="T_43a02_row2_col3" class="data row2 col3" >23.46</td>
+      <td id="T_43a02_row2_col4" class="data row2 col4" >25.39</td>
+      <td id="T_43a02_row2_col5" class="data row2 col5" >24.54</td>
+      <td id="T_43a02_row2_col6" class="data row2 col6" >27.95</td>
+      <td id="T_43a02_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_43a02_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_73ef5_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_73ef5_row3_col0" class="data row3 col0" >20.25</td>
-      <td id="T_73ef5_row3_col1" class="data row3 col1" >9.10</td>
-      <td id="T_73ef5_row3_col2" class="data row3 col2" >20.15</td>
-      <td id="T_73ef5_row3_col3" class="data row3 col3" >21.95</td>
-      <td id="T_73ef5_row3_col4" class="data row3 col4" >56.84</td>
-      <td id="T_73ef5_row3_col5" class="data row3 col5" >22.32</td>
-      <td id="T_73ef5_row3_col6" class="data row3 col6" >58.63</td>
-      <td id="T_73ef5_row3_col7" class="data row3 col7" >low</td>
-      <td id="T_73ef5_row3_col8" class="data row3 col8" >low</td>
+      <th id="T_43a02_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_43a02_row3_col0" class="data row3 col0" >20.25</td>
+      <td id="T_43a02_row3_col1" class="data row3 col1" >9.10</td>
+      <td id="T_43a02_row3_col2" class="data row3 col2" >20.15</td>
+      <td id="T_43a02_row3_col3" class="data row3 col3" >21.95</td>
+      <td id="T_43a02_row3_col4" class="data row3 col4" >56.84</td>
+      <td id="T_43a02_row3_col5" class="data row3 col5" >22.32</td>
+      <td id="T_43a02_row3_col6" class="data row3 col6" >58.63</td>
+      <td id="T_43a02_row3_col7" class="data row3 col7" >low</td>
+      <td id="T_43a02_row3_col8" class="data row3 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_73ef5_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_73ef5_row4_col0" class="data row4 col0" >-0.01</td>
-      <td id="T_73ef5_row4_col1" class="data row4 col1" >0.29</td>
-      <td id="T_73ef5_row4_col2" class="data row4 col2" >-0.08</td>
-      <td id="T_73ef5_row4_col3" class="data row4 col3" >-0.37</td>
-      <td id="T_73ef5_row4_col4" class="data row4 col4" >-1.22</td>
-      <td id="T_73ef5_row4_col5" class="data row4 col5" >-0.61</td>
-      <td id="T_73ef5_row4_col6" class="data row4 col6" >-1.66</td>
-      <td id="T_73ef5_row4_col7" class="data row4 col7" >medium</td>
-      <td id="T_73ef5_row4_col8" class="data row4 col8" >high</td>
+      <th id="T_43a02_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_43a02_row4_col0" class="data row4 col0" >-0.01</td>
+      <td id="T_43a02_row4_col1" class="data row4 col1" >0.29</td>
+      <td id="T_43a02_row4_col2" class="data row4 col2" >-0.08</td>
+      <td id="T_43a02_row4_col3" class="data row4 col3" >-0.37</td>
+      <td id="T_43a02_row4_col4" class="data row4 col4" >-1.22</td>
+      <td id="T_43a02_row4_col5" class="data row4 col5" >-0.61</td>
+      <td id="T_43a02_row4_col6" class="data row4 col6" >-1.66</td>
+      <td id="T_43a02_row4_col7" class="data row4 col7" >medium</td>
+      <td id="T_43a02_row4_col8" class="data row4 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_73ef5_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_73ef5_row5_col0" class="data row5 col0" >4766.12</td>
-      <td id="T_73ef5_row5_col1" class="data row5 col1" >345.22</td>
-      <td id="T_73ef5_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_73ef5_row5_col3" class="data row5 col3" >3845.62</td>
-      <td id="T_73ef5_row5_col4" class="data row5 col4" >4897.88</td>
-      <td id="T_73ef5_row5_col5" class="data row5 col5" >3517.95</td>
-      <td id="T_73ef5_row5_col6" class="data row5 col6" >5017.64</td>
-      <td id="T_73ef5_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_73ef5_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_43a02_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_43a02_row5_col0" class="data row5 col0" >4766.12</td>
+      <td id="T_43a02_row5_col1" class="data row5 col1" >345.22</td>
+      <td id="T_43a02_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_43a02_row5_col3" class="data row5 col3" >3845.62</td>
+      <td id="T_43a02_row5_col4" class="data row5 col4" >4897.88</td>
+      <td id="T_43a02_row5_col5" class="data row5 col5" >3517.95</td>
+      <td id="T_43a02_row5_col6" class="data row5 col6" >5017.64</td>
+      <td id="T_43a02_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_43a02_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_73ef5_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_73ef5_row6_col0" class="data row6 col0" >0.00</td>
-      <td id="T_73ef5_row6_col1" class="data row6 col1" >0.00</td>
-      <td id="T_73ef5_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_73ef5_row6_col3" class="data row6 col3" >0.19</td>
-      <td id="T_73ef5_row6_col4" class="data row6 col4" >4.75</td>
-      <td id="T_73ef5_row6_col5" class="data row6 col5" >7.78</td>
-      <td id="T_73ef5_row6_col6" class="data row6 col6" >77.81</td>
-      <td id="T_73ef5_row6_col7" class="data row6 col7" >high</td>
-      <td id="T_73ef5_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_43a02_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_43a02_row6_col0" class="data row6 col0" >0.00</td>
+      <td id="T_43a02_row6_col1" class="data row6 col1" >0.00</td>
+      <td id="T_43a02_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_43a02_row6_col3" class="data row6 col3" >0.19</td>
+      <td id="T_43a02_row6_col4" class="data row6 col4" >4.75</td>
+      <td id="T_43a02_row6_col5" class="data row6 col5" >7.78</td>
+      <td id="T_43a02_row6_col6" class="data row6 col6" >77.81</td>
+      <td id="T_43a02_row6_col7" class="data row6 col7" >high</td>
+      <td id="T_43a02_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_73ef5_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_73ef5_row7_col0" class="data row7 col0" >1076.54</td>
-      <td id="T_73ef5_row7_col1" class="data row7 col1" >154.96</td>
-      <td id="T_73ef5_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_73ef5_row7_col3" class="data row7 col3" >1713.62</td>
-      <td id="T_73ef5_row7_col4" class="data row7 col4" >2366.75</td>
-      <td id="T_73ef5_row7_col5" class="data row7 col5" >2066.89</td>
-      <td id="T_73ef5_row7_col6" class="data row7 col6" >3373.03</td>
-      <td id="T_73ef5_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_73ef5_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_43a02_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_43a02_row7_col0" class="data row7 col0" >1076.54</td>
+      <td id="T_43a02_row7_col1" class="data row7 col1" >154.96</td>
+      <td id="T_43a02_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_43a02_row7_col3" class="data row7 col3" >1713.62</td>
+      <td id="T_43a02_row7_col4" class="data row7 col4" >2366.75</td>
+      <td id="T_43a02_row7_col5" class="data row7 col5" >2066.89</td>
+      <td id="T_43a02_row7_col6" class="data row7 col6" >3373.03</td>
+      <td id="T_43a02_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_43a02_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
