--- a/sites_data/MAX_KY/stat_matrix_static_colors.html
+++ b/sites_data/MAX_KY/stat_matrix_static_colors.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_23e36_row0_col7, #T_23e36_row0_col8, #T_23e36_row2_col7, #T_23e36_row2_col8, #T_23e36_row6_col7, #T_23e36_row6_col8, #T_23e36_row7_col7, #T_23e36_row7_col8 {
+#T_6c532_row0_col7, #T_6c532_row0_col8, #T_6c532_row2_col7, #T_6c532_row2_col8, #T_6c532_row6_col7, #T_6c532_row6_col8, #T_6c532_row7_col7, #T_6c532_row7_col8 {
   background-color: red;
 }
-#T_23e36_row1_col7, #T_23e36_row3_col7 {
+#T_6c532_row1_col7, #T_6c532_row3_col7 {
   background-color: green;
 }
-#T_23e36_row1_col8, #T_23e36_row3_col8 {
+#T_6c532_row1_col8, #T_6c532_row3_col8 {
   background-color: yellow;
 }
-#T_23e36_row4_col7, #T_23e36_row4_col8, #T_23e36_row5_col7, #T_23e36_row5_col8 {
+#T_6c532_row4_col7, #T_6c532_row4_col8, #T_6c532_row5_col7, #T_6c532_row5_col8 {
   background-color: gray;
 }
-#T_23e36_row5_col2, #T_23e36_row6_col2, #T_23e36_row7_col2 {
+#T_6c532_row5_col2, #T_6c532_row6_col2, #T_6c532_row7_col2 {
   background-color: white;
 }
 </style>
 </head>
 <body>
-<table id="T_23e36_">
+<table id="T_6c532_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -38,100 +38,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_23e36_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_23e36_row0_col0" class="data row0 col0" >3.17</td>
-      <td id="T_23e36_row0_col1" class="data row0 col1" >0.10</td>
-      <td id="T_23e36_row0_col2" class="data row0 col2" >3.23</td>
-      <td id="T_23e36_row0_col3" class="data row0 col3" >3.37</td>
-      <td id="T_23e36_row0_col4" class="data row0 col4" >3.84</td>
-      <td id="T_23e36_row0_col5" class="data row0 col5" >3.43</td>
-      <td id="T_23e36_row0_col6" class="data row0 col6" >3.81</td>
-      <td id="T_23e36_row0_col7" class="data row0 col7" >high</td>
-      <td id="T_23e36_row0_col8" class="data row0 col8" >high</td>
+      <th id="T_6c532_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_6c532_row0_col0" class="data row0 col0" >3.17</td>
+      <td id="T_6c532_row0_col1" class="data row0 col1" >0.10</td>
+      <td id="T_6c532_row0_col2" class="data row0 col2" >3.23</td>
+      <td id="T_6c532_row0_col3" class="data row0 col3" >3.37</td>
+      <td id="T_6c532_row0_col4" class="data row0 col4" >3.84</td>
+      <td id="T_6c532_row0_col5" class="data row0 col5" >3.43</td>
+      <td id="T_6c532_row0_col6" class="data row0 col6" >3.81</td>
+      <td id="T_6c532_row0_col7" class="data row0 col7" >high</td>
+      <td id="T_6c532_row0_col8" class="data row0 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_23e36_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_23e36_row1_col0" class="data row1 col0" >1.71</td>
-      <td id="T_23e36_row1_col1" class="data row1 col1" >1.30</td>
-      <td id="T_23e36_row1_col2" class="data row1 col2" >4.61</td>
-      <td id="T_23e36_row1_col3" class="data row1 col3" >2.36</td>
-      <td id="T_23e36_row1_col4" class="data row1 col4" >7.10</td>
-      <td id="T_23e36_row1_col5" class="data row1 col5" >2.82</td>
-      <td id="T_23e36_row1_col6" class="data row1 col6" >8.52</td>
-      <td id="T_23e36_row1_col7" class="data row1 col7" >low</td>
-      <td id="T_23e36_row1_col8" class="data row1 col8" >medium</td>
+      <th id="T_6c532_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_6c532_row1_col0" class="data row1 col0" >1.71</td>
+      <td id="T_6c532_row1_col1" class="data row1 col1" >1.30</td>
+      <td id="T_6c532_row1_col2" class="data row1 col2" >4.61</td>
+      <td id="T_6c532_row1_col3" class="data row1 col3" >2.36</td>
+      <td id="T_6c532_row1_col4" class="data row1 col4" >7.10</td>
+      <td id="T_6c532_row1_col5" class="data row1 col5" >2.82</td>
+      <td id="T_6c532_row1_col6" class="data row1 col6" >8.52</td>
+      <td id="T_6c532_row1_col7" class="data row1 col7" >low</td>
+      <td id="T_6c532_row1_col8" class="data row1 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_23e36_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_23e36_row2_col0" class="data row2 col0" >19.32</td>
-      <td id="T_23e36_row2_col1" class="data row2 col1" >0.34</td>
-      <td id="T_23e36_row2_col2" class="data row2 col2" >19.95</td>
-      <td id="T_23e36_row2_col3" class="data row2 col3" >21.46</td>
-      <td id="T_23e36_row2_col4" class="data row2 col4" >23.11</td>
-      <td id="T_23e36_row2_col5" class="data row2 col5" >22.41</td>
-      <td id="T_23e36_row2_col6" class="data row2 col6" >26.16</td>
-      <td id="T_23e36_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_23e36_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_6c532_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_6c532_row2_col0" class="data row2 col0" >19.32</td>
+      <td id="T_6c532_row2_col1" class="data row2 col1" >0.34</td>
+      <td id="T_6c532_row2_col2" class="data row2 col2" >19.95</td>
+      <td id="T_6c532_row2_col3" class="data row2 col3" >21.46</td>
+      <td id="T_6c532_row2_col4" class="data row2 col4" >23.11</td>
+      <td id="T_6c532_row2_col5" class="data row2 col5" >22.41</td>
+      <td id="T_6c532_row2_col6" class="data row2 col6" >26.16</td>
+      <td id="T_6c532_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_6c532_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_23e36_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_23e36_row3_col0" class="data row3 col0" >56.07</td>
-      <td id="T_23e36_row3_col1" class="data row3 col1" >17.49</td>
-      <td id="T_23e36_row3_col2" class="data row3 col2" >60.06</td>
-      <td id="T_23e36_row3_col3" class="data row3 col3" >60.26</td>
-      <td id="T_23e36_row3_col4" class="data row3 col4" >121.82</td>
-      <td id="T_23e36_row3_col5" class="data row3 col5" >66.90</td>
-      <td id="T_23e36_row3_col6" class="data row3 col6" >139.40</td>
-      <td id="T_23e36_row3_col7" class="data row3 col7" >low</td>
-      <td id="T_23e36_row3_col8" class="data row3 col8" >medium</td>
+      <th id="T_6c532_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_6c532_row3_col0" class="data row3 col0" >56.07</td>
+      <td id="T_6c532_row3_col1" class="data row3 col1" >17.49</td>
+      <td id="T_6c532_row3_col2" class="data row3 col2" >60.06</td>
+      <td id="T_6c532_row3_col3" class="data row3 col3" >60.26</td>
+      <td id="T_6c532_row3_col4" class="data row3 col4" >121.82</td>
+      <td id="T_6c532_row3_col5" class="data row3 col5" >66.90</td>
+      <td id="T_6c532_row3_col6" class="data row3 col6" >139.40</td>
+      <td id="T_6c532_row3_col7" class="data row3 col7" >low</td>
+      <td id="T_6c532_row3_col8" class="data row3 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_23e36_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_23e36_row4_col0" class="data row4 col0" >-0.00</td>
-      <td id="T_23e36_row4_col1" class="data row4 col1" >0.27</td>
-      <td id="T_23e36_row4_col2" class="data row4 col2" >-0.01</td>
-      <td id="T_23e36_row4_col3" class="data row4 col3" >0.18</td>
-      <td id="T_23e36_row4_col4" class="data row4 col4" >-0.68</td>
-      <td id="T_23e36_row4_col5" class="data row4 col5" >0.29</td>
-      <td id="T_23e36_row4_col6" class="data row4 col6" >-0.65</td>
-      <td id="T_23e36_row4_col7" class="data row4 col7" >negative</td>
-      <td id="T_23e36_row4_col8" class="data row4 col8" >negative</td>
+      <th id="T_6c532_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_6c532_row4_col0" class="data row4 col0" >-0.00</td>
+      <td id="T_6c532_row4_col1" class="data row4 col1" >0.27</td>
+      <td id="T_6c532_row4_col2" class="data row4 col2" >-0.01</td>
+      <td id="T_6c532_row4_col3" class="data row4 col3" >0.18</td>
+      <td id="T_6c532_row4_col4" class="data row4 col4" >-0.68</td>
+      <td id="T_6c532_row4_col5" class="data row4 col5" >0.29</td>
+      <td id="T_6c532_row4_col6" class="data row4 col6" >-0.65</td>
+      <td id="T_6c532_row4_col7" class="data row4 col7" >negative</td>
+      <td id="T_6c532_row4_col8" class="data row4 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_23e36_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_23e36_row5_col0" class="data row5 col0" >4577.75</td>
-      <td id="T_23e36_row5_col1" class="data row5 col1" >378.63</td>
-      <td id="T_23e36_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_23e36_row5_col3" class="data row5 col3" >3800.06</td>
-      <td id="T_23e36_row5_col4" class="data row5 col4" >4894.17</td>
-      <td id="T_23e36_row5_col5" class="data row5 col5" >3531.42</td>
-      <td id="T_23e36_row5_col6" class="data row5 col6" >4901.98</td>
-      <td id="T_23e36_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_23e36_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_6c532_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_6c532_row5_col0" class="data row5 col0" >4577.75</td>
+      <td id="T_6c532_row5_col1" class="data row5 col1" >378.63</td>
+      <td id="T_6c532_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_6c532_row5_col3" class="data row5 col3" >3800.06</td>
+      <td id="T_6c532_row5_col4" class="data row5 col4" >4894.17</td>
+      <td id="T_6c532_row5_col5" class="data row5 col5" >3531.42</td>
+      <td id="T_6c532_row5_col6" class="data row5 col6" >4901.98</td>
+      <td id="T_6c532_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_6c532_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_23e36_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_23e36_row6_col0" class="data row6 col0" >0.01</td>
-      <td id="T_23e36_row6_col1" class="data row6 col1" >0.08</td>
-      <td id="T_23e36_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_23e36_row6_col3" class="data row6 col3" >0.19</td>
-      <td id="T_23e36_row6_col4" class="data row6 col4" >4.47</td>
-      <td id="T_23e36_row6_col5" class="data row6 col5" >3.61</td>
-      <td id="T_23e36_row6_col6" class="data row6 col6" >51.02</td>
-      <td id="T_23e36_row6_col7" class="data row6 col7" >high</td>
-      <td id="T_23e36_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_6c532_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_6c532_row6_col0" class="data row6 col0" >0.01</td>
+      <td id="T_6c532_row6_col1" class="data row6 col1" >0.08</td>
+      <td id="T_6c532_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_6c532_row6_col3" class="data row6 col3" >0.19</td>
+      <td id="T_6c532_row6_col4" class="data row6 col4" >4.47</td>
+      <td id="T_6c532_row6_col5" class="data row6 col5" >3.61</td>
+      <td id="T_6c532_row6_col6" class="data row6 col6" >51.02</td>
+      <td id="T_6c532_row6_col7" class="data row6 col7" >high</td>
+      <td id="T_6c532_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_23e36_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_23e36_row7_col0" class="data row7 col0" >1084.18</td>
-      <td id="T_23e36_row7_col1" class="data row7 col1" >147.63</td>
-      <td id="T_23e36_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_23e36_row7_col3" class="data row7 col3" >1681.55</td>
-      <td id="T_23e36_row7_col4" class="data row7 col4" >2274.00</td>
-      <td id="T_23e36_row7_col5" class="data row7 col5" >2027.64</td>
-      <td id="T_23e36_row7_col6" class="data row7 col6" >3270.73</td>
-      <td id="T_23e36_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_23e36_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_6c532_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_6c532_row7_col0" class="data row7 col0" >1084.18</td>
+      <td id="T_6c532_row7_col1" class="data row7 col1" >147.63</td>
+      <td id="T_6c532_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_6c532_row7_col3" class="data row7 col3" >1681.55</td>
+      <td id="T_6c532_row7_col4" class="data row7 col4" >2274.00</td>
+      <td id="T_6c532_row7_col5" class="data row7 col5" >2027.64</td>
+      <td id="T_6c532_row7_col6" class="data row7 col6" >3270.73</td>
+      <td id="T_6c532_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_6c532_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
