--- a/sites_data/MNT_UT/stat_matrix_static_colors.html
+++ b/sites_data/MNT_UT/stat_matrix_static_colors.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_fed0e_row0_col7, #T_fed0e_row0_col8, #T_fed0e_row4_col7 {
+#T_f496e_row0_col7, #T_f496e_row0_col8, #T_f496e_row4_col7 {
   background-color: yellow;
 }
-#T_fed0e_row1_col7, #T_fed0e_row1_col8, #T_fed0e_row3_col7, #T_fed0e_row3_col8 {
+#T_f496e_row1_col7, #T_f496e_row1_col8, #T_f496e_row3_col7, #T_f496e_row3_col8 {
   background-color: green;
 }
-#T_fed0e_row2_col7, #T_fed0e_row2_col8, #T_fed0e_row4_col8, #T_fed0e_row6_col7, #T_fed0e_row6_col8, #T_fed0e_row7_col7, #T_fed0e_row7_col8 {
+#T_f496e_row2_col7, #T_f496e_row2_col8, #T_f496e_row4_col8, #T_f496e_row6_col7, #T_f496e_row6_col8, #T_f496e_row7_col7, #T_f496e_row7_col8 {
   background-color: red;
 }
-#T_fed0e_row5_col2, #T_fed0e_row6_col2, #T_fed0e_row7_col2 {
+#T_f496e_row5_col2, #T_f496e_row6_col2, #T_f496e_row7_col2 {
   background-color: white;
 }
-#T_fed0e_row5_col7, #T_fed0e_row5_col8 {
+#T_f496e_row5_col7, #T_f496e_row5_col8 {
   background-color: gray;
 }
 </style>
 </head>
 <body>
-<table id="T_fed0e_">
+<table id="T_f496e_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -38,100 +38,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_fed0e_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_fed0e_row0_col0" class="data row0 col0" >0.80</td>
-      <td id="T_fed0e_row0_col1" class="data row0 col1" >0.04</td>
-      <td id="T_fed0e_row0_col2" class="data row0 col2" >0.79</td>
-      <td id="T_fed0e_row0_col3" class="data row0 col3" >0.86</td>
-      <td id="T_fed0e_row0_col4" class="data row0 col4" >1.03</td>
-      <td id="T_fed0e_row0_col5" class="data row0 col5" >0.85</td>
-      <td id="T_fed0e_row0_col6" class="data row0 col6" >1.03</td>
-      <td id="T_fed0e_row0_col7" class="data row0 col7" >medium</td>
-      <td id="T_fed0e_row0_col8" class="data row0 col8" >medium</td>
+      <th id="T_f496e_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_f496e_row0_col0" class="data row0 col0" >0.80</td>
+      <td id="T_f496e_row0_col1" class="data row0 col1" >0.04</td>
+      <td id="T_f496e_row0_col2" class="data row0 col2" >0.79</td>
+      <td id="T_f496e_row0_col3" class="data row0 col3" >0.86</td>
+      <td id="T_f496e_row0_col4" class="data row0 col4" >1.03</td>
+      <td id="T_f496e_row0_col5" class="data row0 col5" >0.85</td>
+      <td id="T_f496e_row0_col6" class="data row0 col6" >1.03</td>
+      <td id="T_f496e_row0_col7" class="data row0 col7" >medium</td>
+      <td id="T_f496e_row0_col8" class="data row0 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_fed0e_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_fed0e_row1_col0" class="data row1 col0" >0.94</td>
-      <td id="T_fed0e_row1_col1" class="data row1 col1" >1.03</td>
-      <td id="T_fed0e_row1_col2" class="data row1 col2" >1.11</td>
-      <td id="T_fed0e_row1_col3" class="data row1 col3" >1.26</td>
-      <td id="T_fed0e_row1_col4" class="data row1 col4" >5.10</td>
-      <td id="T_fed0e_row1_col5" class="data row1 col5" >1.33</td>
-      <td id="T_fed0e_row1_col6" class="data row1 col6" >5.33</td>
-      <td id="T_fed0e_row1_col7" class="data row1 col7" >low</td>
-      <td id="T_fed0e_row1_col8" class="data row1 col8" >low</td>
+      <th id="T_f496e_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_f496e_row1_col0" class="data row1 col0" >0.94</td>
+      <td id="T_f496e_row1_col1" class="data row1 col1" >1.03</td>
+      <td id="T_f496e_row1_col2" class="data row1 col2" >1.11</td>
+      <td id="T_f496e_row1_col3" class="data row1 col3" >1.26</td>
+      <td id="T_f496e_row1_col4" class="data row1 col4" >5.10</td>
+      <td id="T_f496e_row1_col5" class="data row1 col5" >1.33</td>
+      <td id="T_f496e_row1_col6" class="data row1 col6" >5.33</td>
+      <td id="T_f496e_row1_col7" class="data row1 col7" >low</td>
+      <td id="T_f496e_row1_col8" class="data row1 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_fed0e_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_fed0e_row2_col0" class="data row2 col0" >16.43</td>
-      <td id="T_fed0e_row2_col1" class="data row2 col1" >0.37</td>
-      <td id="T_fed0e_row2_col2" class="data row2 col2" >17.17</td>
-      <td id="T_fed0e_row2_col3" class="data row2 col3" >18.95</td>
-      <td id="T_fed0e_row2_col4" class="data row2 col4" >20.13</td>
-      <td id="T_fed0e_row2_col5" class="data row2 col5" >20.05</td>
-      <td id="T_fed0e_row2_col6" class="data row2 col6" >23.52</td>
-      <td id="T_fed0e_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_fed0e_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_f496e_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_f496e_row2_col0" class="data row2 col0" >16.43</td>
+      <td id="T_f496e_row2_col1" class="data row2 col1" >0.37</td>
+      <td id="T_f496e_row2_col2" class="data row2 col2" >17.17</td>
+      <td id="T_f496e_row2_col3" class="data row2 col3" >18.95</td>
+      <td id="T_f496e_row2_col4" class="data row2 col4" >20.13</td>
+      <td id="T_f496e_row2_col5" class="data row2 col5" >20.05</td>
+      <td id="T_f496e_row2_col6" class="data row2 col6" >23.52</td>
+      <td id="T_f496e_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_f496e_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_fed0e_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_fed0e_row3_col0" class="data row3 col0" >26.51</td>
-      <td id="T_fed0e_row3_col1" class="data row3 col1" >12.16</td>
-      <td id="T_fed0e_row3_col2" class="data row3 col2" >26.97</td>
-      <td id="T_fed0e_row3_col3" class="data row3 col3" >28.89</td>
-      <td id="T_fed0e_row3_col4" class="data row3 col4" >77.23</td>
-      <td id="T_fed0e_row3_col5" class="data row3 col5" >29.16</td>
-      <td id="T_fed0e_row3_col6" class="data row3 col6" >72.52</td>
-      <td id="T_fed0e_row3_col7" class="data row3 col7" >low</td>
-      <td id="T_fed0e_row3_col8" class="data row3 col8" >low</td>
+      <th id="T_f496e_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_f496e_row3_col0" class="data row3 col0" >26.51</td>
+      <td id="T_f496e_row3_col1" class="data row3 col1" >12.16</td>
+      <td id="T_f496e_row3_col2" class="data row3 col2" >26.97</td>
+      <td id="T_f496e_row3_col3" class="data row3 col3" >28.89</td>
+      <td id="T_f496e_row3_col4" class="data row3 col4" >77.23</td>
+      <td id="T_f496e_row3_col5" class="data row3 col5" >29.16</td>
+      <td id="T_f496e_row3_col6" class="data row3 col6" >72.52</td>
+      <td id="T_f496e_row3_col7" class="data row3 col7" >low</td>
+      <td id="T_f496e_row3_col8" class="data row3 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_fed0e_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_fed0e_row4_col0" class="data row4 col0" >-0.01</td>
-      <td id="T_fed0e_row4_col1" class="data row4 col1" >0.28</td>
-      <td id="T_fed0e_row4_col2" class="data row4 col2" >-0.08</td>
-      <td id="T_fed0e_row4_col3" class="data row4 col3" >-0.34</td>
-      <td id="T_fed0e_row4_col4" class="data row4 col4" >-1.16</td>
-      <td id="T_fed0e_row4_col5" class="data row4 col5" >-0.58</td>
-      <td id="T_fed0e_row4_col6" class="data row4 col6" >-1.57</td>
-      <td id="T_fed0e_row4_col7" class="data row4 col7" >medium</td>
-      <td id="T_fed0e_row4_col8" class="data row4 col8" >high</td>
+      <th id="T_f496e_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_f496e_row4_col0" class="data row4 col0" >-0.01</td>
+      <td id="T_f496e_row4_col1" class="data row4 col1" >0.28</td>
+      <td id="T_f496e_row4_col2" class="data row4 col2" >-0.08</td>
+      <td id="T_f496e_row4_col3" class="data row4 col3" >-0.34</td>
+      <td id="T_f496e_row4_col4" class="data row4 col4" >-1.16</td>
+      <td id="T_f496e_row4_col5" class="data row4 col5" >-0.58</td>
+      <td id="T_f496e_row4_col6" class="data row4 col6" >-1.57</td>
+      <td id="T_f496e_row4_col7" class="data row4 col7" >medium</td>
+      <td id="T_f496e_row4_col8" class="data row4 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_fed0e_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_fed0e_row5_col0" class="data row5 col0" >6899.69</td>
-      <td id="T_fed0e_row5_col1" class="data row5 col1" >402.22</td>
-      <td id="T_fed0e_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_fed0e_row5_col3" class="data row5 col3" >5712.07</td>
-      <td id="T_fed0e_row5_col4" class="data row5 col4" >6967.34</td>
-      <td id="T_fed0e_row5_col5" class="data row5 col5" >5289.04</td>
-      <td id="T_fed0e_row5_col6" class="data row5 col6" >7110.51</td>
-      <td id="T_fed0e_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_fed0e_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_f496e_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_f496e_row5_col0" class="data row5 col0" >6899.69</td>
+      <td id="T_f496e_row5_col1" class="data row5 col1" >402.22</td>
+      <td id="T_f496e_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_f496e_row5_col3" class="data row5 col3" >5712.07</td>
+      <td id="T_f496e_row5_col4" class="data row5 col4" >6967.34</td>
+      <td id="T_f496e_row5_col5" class="data row5 col5" >5289.04</td>
+      <td id="T_f496e_row5_col6" class="data row5 col6" >7110.51</td>
+      <td id="T_f496e_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_f496e_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_fed0e_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_fed0e_row6_col0" class="data row6 col0" >0.00</td>
-      <td id="T_fed0e_row6_col1" class="data row6 col1" >0.00</td>
-      <td id="T_fed0e_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_fed0e_row6_col3" class="data row6 col3" >0.00</td>
-      <td id="T_fed0e_row6_col4" class="data row6 col4" >0.00</td>
-      <td id="T_fed0e_row6_col5" class="data row6 col5" >0.14</td>
-      <td id="T_fed0e_row6_col6" class="data row6 col6" >3.06</td>
-      <td id="T_fed0e_row6_col7" class="data row6 col7" >high</td>
-      <td id="T_fed0e_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_f496e_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_f496e_row6_col0" class="data row6 col0" >0.00</td>
+      <td id="T_f496e_row6_col1" class="data row6 col1" >0.00</td>
+      <td id="T_f496e_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_f496e_row6_col3" class="data row6 col3" >0.00</td>
+      <td id="T_f496e_row6_col4" class="data row6 col4" >0.00</td>
+      <td id="T_f496e_row6_col5" class="data row6 col5" >0.14</td>
+      <td id="T_f496e_row6_col6" class="data row6 col6" >3.06</td>
+      <td id="T_f496e_row6_col7" class="data row6 col7" >high</td>
+      <td id="T_f496e_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_fed0e_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_fed0e_row7_col0" class="data row7 col0" >284.29</td>
-      <td id="T_fed0e_row7_col1" class="data row7 col1" >95.60</td>
-      <td id="T_fed0e_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_fed0e_row7_col3" class="data row7 col3" >690.53</td>
-      <td id="T_fed0e_row7_col4" class="data row7 col4" >1173.69</td>
-      <td id="T_fed0e_row7_col5" class="data row7 col5" >958.87</td>
-      <td id="T_fed0e_row7_col6" class="data row7 col6" >1980.64</td>
-      <td id="T_fed0e_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_fed0e_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_f496e_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_f496e_row7_col0" class="data row7 col0" >284.29</td>
+      <td id="T_f496e_row7_col1" class="data row7 col1" >95.60</td>
+      <td id="T_f496e_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_f496e_row7_col3" class="data row7 col3" >690.53</td>
+      <td id="T_f496e_row7_col4" class="data row7 col4" >1173.69</td>
+      <td id="T_f496e_row7_col5" class="data row7 col5" >958.87</td>
+      <td id="T_f496e_row7_col6" class="data row7 col6" >1980.64</td>
+      <td id="T_f496e_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_f496e_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
