--- a/sites_data/SAM_IL/stat_matrix_static_colors.html
+++ b/sites_data/SAM_IL/stat_matrix_static_colors.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_20558_row0_col7, #T_20558_row3_col8 {
+#T_70a93_row0_col7, #T_70a93_row3_col8 {
   background-color: yellow;
 }
-#T_20558_row0_col8, #T_20558_row2_col7, #T_20558_row2_col8, #T_20558_row6_col7, #T_20558_row6_col8, #T_20558_row7_col7, #T_20558_row7_col8 {
+#T_70a93_row0_col8, #T_70a93_row2_col7, #T_70a93_row2_col8, #T_70a93_row6_col7, #T_70a93_row6_col8, #T_70a93_row7_col7, #T_70a93_row7_col8 {
   background-color: red;
 }
-#T_20558_row1_col7, #T_20558_row1_col8, #T_20558_row3_col7 {
+#T_70a93_row1_col7, #T_70a93_row1_col8, #T_70a93_row3_col7 {
   background-color: green;
 }
-#T_20558_row4_col7, #T_20558_row4_col8, #T_20558_row5_col7, #T_20558_row5_col8 {
+#T_70a93_row4_col7, #T_70a93_row4_col8, #T_70a93_row5_col7, #T_70a93_row5_col8 {
   background-color: gray;
 }
-#T_20558_row5_col2, #T_20558_row6_col2, #T_20558_row7_col2 {
+#T_70a93_row5_col2, #T_70a93_row6_col2, #T_70a93_row7_col2 {
   background-color: white;
 }
 </style>
 </head>
 <body>
-<table id="T_20558_">
+<table id="T_70a93_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -38,100 +38,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_20558_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_20558_row0_col0" class="data row0 col0" >2.53</td>
-      <td id="T_20558_row0_col1" class="data row0 col1" >0.08</td>
-      <td id="T_20558_row0_col2" class="data row0 col2" >2.59</td>
-      <td id="T_20558_row0_col3" class="data row0 col3" >2.67</td>
-      <td id="T_20558_row0_col4" class="data row0 col4" >2.92</td>
-      <td id="T_20558_row0_col5" class="data row0 col5" >2.69</td>
-      <td id="T_20558_row0_col6" class="data row0 col6" >2.97</td>
-      <td id="T_20558_row0_col7" class="data row0 col7" >medium</td>
-      <td id="T_20558_row0_col8" class="data row0 col8" >high</td>
+      <th id="T_70a93_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_70a93_row0_col0" class="data row0 col0" >2.53</td>
+      <td id="T_70a93_row0_col1" class="data row0 col1" >0.08</td>
+      <td id="T_70a93_row0_col2" class="data row0 col2" >2.59</td>
+      <td id="T_70a93_row0_col3" class="data row0 col3" >2.67</td>
+      <td id="T_70a93_row0_col4" class="data row0 col4" >2.92</td>
+      <td id="T_70a93_row0_col5" class="data row0 col5" >2.69</td>
+      <td id="T_70a93_row0_col6" class="data row0 col6" >2.97</td>
+      <td id="T_70a93_row0_col7" class="data row0 col7" >medium</td>
+      <td id="T_70a93_row0_col8" class="data row0 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_20558_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_20558_row1_col0" class="data row1 col0" >1.49</td>
-      <td id="T_20558_row1_col1" class="data row1 col1" >1.17</td>
-      <td id="T_20558_row1_col2" class="data row1 col2" >5.92</td>
-      <td id="T_20558_row1_col3" class="data row1 col3" >1.87</td>
-      <td id="T_20558_row1_col4" class="data row1 col4" >5.86</td>
-      <td id="T_20558_row1_col5" class="data row1 col5" >2.18</td>
-      <td id="T_20558_row1_col6" class="data row1 col6" >6.71</td>
-      <td id="T_20558_row1_col7" class="data row1 col7" >low</td>
-      <td id="T_20558_row1_col8" class="data row1 col8" >low</td>
+      <th id="T_70a93_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_70a93_row1_col0" class="data row1 col0" >1.49</td>
+      <td id="T_70a93_row1_col1" class="data row1 col1" >1.17</td>
+      <td id="T_70a93_row1_col2" class="data row1 col2" >5.92</td>
+      <td id="T_70a93_row1_col3" class="data row1 col3" >1.87</td>
+      <td id="T_70a93_row1_col4" class="data row1 col4" >5.86</td>
+      <td id="T_70a93_row1_col5" class="data row1 col5" >2.18</td>
+      <td id="T_70a93_row1_col6" class="data row1 col6" >6.71</td>
+      <td id="T_70a93_row1_col7" class="data row1 col7" >low</td>
+      <td id="T_70a93_row1_col8" class="data row1 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_20558_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_20558_row2_col0" class="data row2 col0" >15.29</td>
-      <td id="T_20558_row2_col1" class="data row2 col1" >0.35</td>
-      <td id="T_20558_row2_col2" class="data row2 col2" >15.99</td>
-      <td id="T_20558_row2_col3" class="data row2 col3" >17.73</td>
-      <td id="T_20558_row2_col4" class="data row2 col4" >19.69</td>
-      <td id="T_20558_row2_col5" class="data row2 col5" >18.77</td>
-      <td id="T_20558_row2_col6" class="data row2 col6" >22.74</td>
-      <td id="T_20558_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_20558_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_70a93_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_70a93_row2_col0" class="data row2 col0" >15.29</td>
+      <td id="T_70a93_row2_col1" class="data row2 col1" >0.35</td>
+      <td id="T_70a93_row2_col2" class="data row2 col2" >15.99</td>
+      <td id="T_70a93_row2_col3" class="data row2 col3" >17.73</td>
+      <td id="T_70a93_row2_col4" class="data row2 col4" >19.69</td>
+      <td id="T_70a93_row2_col5" class="data row2 col5" >18.77</td>
+      <td id="T_70a93_row2_col6" class="data row2 col6" >22.74</td>
+      <td id="T_70a93_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_70a93_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_20558_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_20558_row3_col0" class="data row3 col0" >49.00</td>
-      <td id="T_20558_row3_col1" class="data row3 col1" >16.92</td>
-      <td id="T_20558_row3_col2" class="data row3 col2" >52.34</td>
-      <td id="T_20558_row3_col3" class="data row3 col3" >52.49</td>
-      <td id="T_20558_row3_col4" class="data row3 col4" >122.62</td>
-      <td id="T_20558_row3_col5" class="data row3 col5" >58.09</td>
-      <td id="T_20558_row3_col6" class="data row3 col6" >132.15</td>
-      <td id="T_20558_row3_col7" class="data row3 col7" >low</td>
-      <td id="T_20558_row3_col8" class="data row3 col8" >medium</td>
+      <th id="T_70a93_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_70a93_row3_col0" class="data row3 col0" >49.00</td>
+      <td id="T_70a93_row3_col1" class="data row3 col1" >16.92</td>
+      <td id="T_70a93_row3_col2" class="data row3 col2" >52.34</td>
+      <td id="T_70a93_row3_col3" class="data row3 col3" >52.49</td>
+      <td id="T_70a93_row3_col4" class="data row3 col4" >122.62</td>
+      <td id="T_70a93_row3_col5" class="data row3 col5" >58.09</td>
+      <td id="T_70a93_row3_col6" class="data row3 col6" >132.15</td>
+      <td id="T_70a93_row3_col7" class="data row3 col7" >low</td>
+      <td id="T_70a93_row3_col8" class="data row3 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_20558_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_20558_row4_col0" class="data row4 col0" >-0.01</td>
-      <td id="T_20558_row4_col1" class="data row4 col1" >0.24</td>
-      <td id="T_20558_row4_col2" class="data row4 col2" >-0.05</td>
-      <td id="T_20558_row4_col3" class="data row4 col3" >0.15</td>
-      <td id="T_20558_row4_col4" class="data row4 col4" >-0.63</td>
-      <td id="T_20558_row4_col5" class="data row4 col5" >0.09</td>
-      <td id="T_20558_row4_col6" class="data row4 col6" >-0.90</td>
-      <td id="T_20558_row4_col7" class="data row4 col7" >negative</td>
-      <td id="T_20558_row4_col8" class="data row4 col8" >negative</td>
+      <th id="T_70a93_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_70a93_row4_col0" class="data row4 col0" >-0.01</td>
+      <td id="T_70a93_row4_col1" class="data row4 col1" >0.24</td>
+      <td id="T_70a93_row4_col2" class="data row4 col2" >-0.05</td>
+      <td id="T_70a93_row4_col3" class="data row4 col3" >0.15</td>
+      <td id="T_70a93_row4_col4" class="data row4 col4" >-0.63</td>
+      <td id="T_70a93_row4_col5" class="data row4 col5" >0.09</td>
+      <td id="T_70a93_row4_col6" class="data row4 col6" >-0.90</td>
+      <td id="T_70a93_row4_col7" class="data row4 col7" >negative</td>
+      <td id="T_70a93_row4_col8" class="data row4 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_20558_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_20558_row5_col0" class="data row5 col0" >6212.03</td>
-      <td id="T_20558_row5_col1" class="data row5 col1" >392.43</td>
-      <td id="T_20558_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_20558_row5_col3" class="data row5 col3" >5207.25</td>
-      <td id="T_20558_row5_col4" class="data row5 col4" >6425.09</td>
-      <td id="T_20558_row5_col5" class="data row5 col5" >4842.99</td>
-      <td id="T_20558_row5_col6" class="data row5 col6" >6412.50</td>
-      <td id="T_20558_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_20558_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_70a93_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_70a93_row5_col0" class="data row5 col0" >6212.03</td>
+      <td id="T_70a93_row5_col1" class="data row5 col1" >392.43</td>
+      <td id="T_70a93_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_70a93_row5_col3" class="data row5 col3" >5207.25</td>
+      <td id="T_70a93_row5_col4" class="data row5 col4" >6425.09</td>
+      <td id="T_70a93_row5_col5" class="data row5 col5" >4842.99</td>
+      <td id="T_70a93_row5_col6" class="data row5 col6" >6412.50</td>
+      <td id="T_70a93_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_70a93_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_20558_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_20558_row6_col0" class="data row6 col0" >0.00</td>
-      <td id="T_20558_row6_col1" class="data row6 col1" >0.00</td>
-      <td id="T_20558_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_20558_row6_col3" class="data row6 col3" >0.02</td>
-      <td id="T_20558_row6_col4" class="data row6 col4" >0.90</td>
-      <td id="T_20558_row6_col5" class="data row6 col5" >0.85</td>
-      <td id="T_20558_row6_col6" class="data row6 col6" >16.69</td>
-      <td id="T_20558_row6_col7" class="data row6 col7" >high</td>
-      <td id="T_20558_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_70a93_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_70a93_row6_col0" class="data row6 col0" >0.00</td>
+      <td id="T_70a93_row6_col1" class="data row6 col1" >0.00</td>
+      <td id="T_70a93_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_70a93_row6_col3" class="data row6 col3" >0.02</td>
+      <td id="T_70a93_row6_col4" class="data row6 col4" >0.90</td>
+      <td id="T_70a93_row6_col5" class="data row6 col5" >0.85</td>
+      <td id="T_70a93_row6_col6" class="data row6 col6" >16.69</td>
+      <td id="T_70a93_row6_col7" class="data row6 col7" >high</td>
+      <td id="T_70a93_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_20558_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_20558_row7_col0" class="data row7 col0" >696.66</td>
-      <td id="T_20558_row7_col1" class="data row7 col1" >119.60</td>
-      <td id="T_20558_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_20558_row7_col3" class="data row7 col3" >1235.81</td>
-      <td id="T_20558_row7_col4" class="data row7 col4" >1764.69</td>
-      <td id="T_20558_row7_col5" class="data row7 col5" >1544.81</td>
-      <td id="T_20558_row7_col6" class="data row7 col6" >2652.98</td>
-      <td id="T_20558_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_20558_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_70a93_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_70a93_row7_col0" class="data row7 col0" >696.66</td>
+      <td id="T_70a93_row7_col1" class="data row7 col1" >119.60</td>
+      <td id="T_70a93_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_70a93_row7_col3" class="data row7 col3" >1235.81</td>
+      <td id="T_70a93_row7_col4" class="data row7 col4" >1764.69</td>
+      <td id="T_70a93_row7_col5" class="data row7 col5" >1544.81</td>
+      <td id="T_70a93_row7_col6" class="data row7 col6" >2652.98</td>
+      <td id="T_70a93_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_70a93_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
