--- a/sites_data/SHE_WA/stat_matrix_static_colors.html
+++ b/sites_data/SHE_WA/stat_matrix_static_colors.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_a933c_row0_col7, #T_a933c_row0_col8, #T_a933c_row2_col7, #T_a933c_row2_col8, #T_a933c_row6_col7, #T_a933c_row6_col8, #T_a933c_row7_col7, #T_a933c_row7_col8 {
+#T_b9236_row0_col7, #T_b9236_row0_col8, #T_b9236_row2_col7, #T_b9236_row2_col8, #T_b9236_row6_col7, #T_b9236_row6_col8, #T_b9236_row7_col7, #T_b9236_row7_col8 {
   background-color: red;
 }
-#T_a933c_row1_col7, #T_a933c_row3_col7 {
+#T_b9236_row1_col7, #T_b9236_row3_col7 {
   background-color: green;
 }
-#T_a933c_row1_col8, #T_a933c_row3_col8 {
+#T_b9236_row1_col8, #T_b9236_row3_col8 {
   background-color: yellow;
 }
-#T_a933c_row4_col7, #T_a933c_row4_col8, #T_a933c_row5_col7, #T_a933c_row5_col8 {
+#T_b9236_row4_col7, #T_b9236_row4_col8, #T_b9236_row5_col7, #T_b9236_row5_col8 {
   background-color: gray;
 }
-#T_a933c_row5_col2, #T_a933c_row6_col2, #T_a933c_row7_col2 {
+#T_b9236_row5_col2, #T_b9236_row6_col2, #T_b9236_row7_col2 {
   background-color: white;
 }
 </style>
 </head>
 <body>
-<table id="T_a933c_">
+<table id="T_b9236_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -38,100 +38,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_a933c_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_a933c_row0_col0" class="data row0 col0" >0.97</td>
-      <td id="T_a933c_row0_col1" class="data row0 col1" >0.04</td>
-      <td id="T_a933c_row0_col2" class="data row0 col2" >0.98</td>
-      <td id="T_a933c_row0_col3" class="data row0 col3" >1.06</td>
-      <td id="T_a933c_row0_col4" class="data row0 col4" >1.18</td>
-      <td id="T_a933c_row0_col5" class="data row0 col5" >1.07</td>
-      <td id="T_a933c_row0_col6" class="data row0 col6" >1.23</td>
-      <td id="T_a933c_row0_col7" class="data row0 col7" >high</td>
-      <td id="T_a933c_row0_col8" class="data row0 col8" >high</td>
+      <th id="T_b9236_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_b9236_row0_col0" class="data row0 col0" >0.97</td>
+      <td id="T_b9236_row0_col1" class="data row0 col1" >0.04</td>
+      <td id="T_b9236_row0_col2" class="data row0 col2" >0.98</td>
+      <td id="T_b9236_row0_col3" class="data row0 col3" >1.06</td>
+      <td id="T_b9236_row0_col4" class="data row0 col4" >1.18</td>
+      <td id="T_b9236_row0_col5" class="data row0 col5" >1.07</td>
+      <td id="T_b9236_row0_col6" class="data row0 col6" >1.23</td>
+      <td id="T_b9236_row0_col7" class="data row0 col7" >high</td>
+      <td id="T_b9236_row0_col8" class="data row0 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_a933c_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_a933c_row1_col0" class="data row1 col0" >1.27</td>
-      <td id="T_a933c_row1_col1" class="data row1 col1" >1.17</td>
-      <td id="T_a933c_row1_col2" class="data row1 col2" >0.22</td>
-      <td id="T_a933c_row1_col3" class="data row1 col3" >1.81</td>
-      <td id="T_a933c_row1_col4" class="data row1 col4" >6.19</td>
-      <td id="T_a933c_row1_col5" class="data row1 col5" >2.13</td>
-      <td id="T_a933c_row1_col6" class="data row1 col6" >7.43</td>
-      <td id="T_a933c_row1_col7" class="data row1 col7" >low</td>
-      <td id="T_a933c_row1_col8" class="data row1 col8" >medium</td>
+      <th id="T_b9236_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_b9236_row1_col0" class="data row1 col0" >1.27</td>
+      <td id="T_b9236_row1_col1" class="data row1 col1" >1.17</td>
+      <td id="T_b9236_row1_col2" class="data row1 col2" >0.22</td>
+      <td id="T_b9236_row1_col3" class="data row1 col3" >1.81</td>
+      <td id="T_b9236_row1_col4" class="data row1 col4" >6.19</td>
+      <td id="T_b9236_row1_col5" class="data row1 col5" >2.13</td>
+      <td id="T_b9236_row1_col6" class="data row1 col6" >7.43</td>
+      <td id="T_b9236_row1_col7" class="data row1 col7" >low</td>
+      <td id="T_b9236_row1_col8" class="data row1 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_a933c_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_a933c_row2_col0" class="data row2 col0" >15.80</td>
-      <td id="T_a933c_row2_col1" class="data row2 col1" >0.30</td>
-      <td id="T_a933c_row2_col2" class="data row2 col2" >16.43</td>
-      <td id="T_a933c_row2_col3" class="data row2 col3" >18.02</td>
-      <td id="T_a933c_row2_col4" class="data row2 col4" >19.26</td>
-      <td id="T_a933c_row2_col5" class="data row2 col5" >18.95</td>
-      <td id="T_a933c_row2_col6" class="data row2 col6" >21.87</td>
-      <td id="T_a933c_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_a933c_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_b9236_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_b9236_row2_col0" class="data row2 col0" >15.80</td>
+      <td id="T_b9236_row2_col1" class="data row2 col1" >0.30</td>
+      <td id="T_b9236_row2_col2" class="data row2 col2" >16.43</td>
+      <td id="T_b9236_row2_col3" class="data row2 col3" >18.02</td>
+      <td id="T_b9236_row2_col4" class="data row2 col4" >19.26</td>
+      <td id="T_b9236_row2_col5" class="data row2 col5" >18.95</td>
+      <td id="T_b9236_row2_col6" class="data row2 col6" >21.87</td>
+      <td id="T_b9236_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_b9236_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_a933c_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_a933c_row3_col0" class="data row3 col0" >20.03</td>
-      <td id="T_a933c_row3_col1" class="data row3 col1" >7.00</td>
-      <td id="T_a933c_row3_col2" class="data row3 col2" >21.19</td>
-      <td id="T_a933c_row3_col3" class="data row3 col3" >22.67</td>
-      <td id="T_a933c_row3_col4" class="data row3 col4" >55.99</td>
-      <td id="T_a933c_row3_col5" class="data row3 col5" >24.20</td>
-      <td id="T_a933c_row3_col6" class="data row3 col6" >55.55</td>
-      <td id="T_a933c_row3_col7" class="data row3 col7" >low</td>
-      <td id="T_a933c_row3_col8" class="data row3 col8" >medium</td>
+      <th id="T_b9236_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_b9236_row3_col0" class="data row3 col0" >20.03</td>
+      <td id="T_b9236_row3_col1" class="data row3 col1" >7.00</td>
+      <td id="T_b9236_row3_col2" class="data row3 col2" >21.19</td>
+      <td id="T_b9236_row3_col3" class="data row3 col3" >22.67</td>
+      <td id="T_b9236_row3_col4" class="data row3 col4" >55.99</td>
+      <td id="T_b9236_row3_col5" class="data row3 col5" >24.20</td>
+      <td id="T_b9236_row3_col6" class="data row3 col6" >55.55</td>
+      <td id="T_b9236_row3_col7" class="data row3 col7" >low</td>
+      <td id="T_b9236_row3_col8" class="data row3 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_a933c_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_a933c_row4_col0" class="data row4 col0" >-0.01</td>
-      <td id="T_a933c_row4_col1" class="data row4 col1" >0.23</td>
-      <td id="T_a933c_row4_col2" class="data row4 col2" >-0.01</td>
-      <td id="T_a933c_row4_col3" class="data row4 col3" >0.04</td>
-      <td id="T_a933c_row4_col4" class="data row4 col4" >-1.11</td>
-      <td id="T_a933c_row4_col5" class="data row4 col5" >0.01</td>
-      <td id="T_a933c_row4_col6" class="data row4 col6" >-0.77</td>
-      <td id="T_a933c_row4_col7" class="data row4 col7" >negative</td>
-      <td id="T_a933c_row4_col8" class="data row4 col8" >negative</td>
+      <th id="T_b9236_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_b9236_row4_col0" class="data row4 col0" >-0.01</td>
+      <td id="T_b9236_row4_col1" class="data row4 col1" >0.23</td>
+      <td id="T_b9236_row4_col2" class="data row4 col2" >-0.01</td>
+      <td id="T_b9236_row4_col3" class="data row4 col3" >0.04</td>
+      <td id="T_b9236_row4_col4" class="data row4 col4" >-1.11</td>
+      <td id="T_b9236_row4_col5" class="data row4 col5" >0.01</td>
+      <td id="T_b9236_row4_col6" class="data row4 col6" >-0.77</td>
+      <td id="T_b9236_row4_col7" class="data row4 col7" >negative</td>
+      <td id="T_b9236_row4_col8" class="data row4 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_a933c_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_a933c_row5_col0" class="data row5 col0" >6111.12</td>
-      <td id="T_a933c_row5_col1" class="data row5 col1" >397.28</td>
-      <td id="T_a933c_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_a933c_row5_col3" class="data row5 col3" >5077.16</td>
-      <td id="T_a933c_row5_col4" class="data row5 col4" >6386.18</td>
-      <td id="T_a933c_row5_col5" class="data row5 col5" >4729.73</td>
-      <td id="T_a933c_row5_col6" class="data row5 col6" >6379.33</td>
-      <td id="T_a933c_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_a933c_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_b9236_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_b9236_row5_col0" class="data row5 col0" >6111.12</td>
+      <td id="T_b9236_row5_col1" class="data row5 col1" >397.28</td>
+      <td id="T_b9236_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_b9236_row5_col3" class="data row5 col3" >5077.16</td>
+      <td id="T_b9236_row5_col4" class="data row5 col4" >6386.18</td>
+      <td id="T_b9236_row5_col5" class="data row5 col5" >4729.73</td>
+      <td id="T_b9236_row5_col6" class="data row5 col6" >6379.33</td>
+      <td id="T_b9236_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_b9236_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_a933c_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_a933c_row6_col0" class="data row6 col0" >0.00</td>
-      <td id="T_a933c_row6_col1" class="data row6 col1" >0.00</td>
-      <td id="T_a933c_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_a933c_row6_col3" class="data row6 col3" >0.03</td>
-      <td id="T_a933c_row6_col4" class="data row6 col4" >1.74</td>
-      <td id="T_a933c_row6_col5" class="data row6 col5" >1.41</td>
-      <td id="T_a933c_row6_col6" class="data row6 col6" >29.67</td>
-      <td id="T_a933c_row6_col7" class="data row6 col7" >high</td>
-      <td id="T_a933c_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_b9236_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_b9236_row6_col0" class="data row6 col0" >0.00</td>
+      <td id="T_b9236_row6_col1" class="data row6 col1" >0.00</td>
+      <td id="T_b9236_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_b9236_row6_col3" class="data row6 col3" >0.03</td>
+      <td id="T_b9236_row6_col4" class="data row6 col4" >1.74</td>
+      <td id="T_b9236_row6_col5" class="data row6 col5" >1.41</td>
+      <td id="T_b9236_row6_col6" class="data row6 col6" >29.67</td>
+      <td id="T_b9236_row6_col7" class="data row6 col7" >high</td>
+      <td id="T_b9236_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_a933c_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_a933c_row7_col0" class="data row7 col0" >373.23</td>
-      <td id="T_a933c_row7_col1" class="data row7 col1" >111.15</td>
-      <td id="T_a933c_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_a933c_row7_col3" class="data row7 col3" >787.35</td>
-      <td id="T_a933c_row7_col4" class="data row7 col4" >1314.14</td>
-      <td id="T_a933c_row7_col5" class="data row7 col5" >1064.47</td>
-      <td id="T_a933c_row7_col6" class="data row7 col6" >2127.15</td>
-      <td id="T_a933c_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_a933c_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_b9236_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_b9236_row7_col0" class="data row7 col0" >373.23</td>
+      <td id="T_b9236_row7_col1" class="data row7 col1" >111.15</td>
+      <td id="T_b9236_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_b9236_row7_col3" class="data row7 col3" >787.35</td>
+      <td id="T_b9236_row7_col4" class="data row7 col4" >1314.14</td>
+      <td id="T_b9236_row7_col5" class="data row7 col5" >1064.47</td>
+      <td id="T_b9236_row7_col6" class="data row7 col6" >2127.15</td>
+      <td id="T_b9236_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_b9236_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
