--- a/sites_data/SLP_UT/stat_matrix_static_colors.html
+++ b/sites_data/SLP_UT/stat_matrix_static_colors.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#T_66f01_row0_col7, #T_66f01_row0_col8, #T_66f01_row1_col8, #T_66f01_row4_col8 {
+#T_76914_row0_col7, #T_76914_row0_col8, #T_76914_row1_col8, #T_76914_row4_col8 {
   background-color: yellow;
 }
-#T_66f01_row1_col7, #T_66f01_row3_col7, #T_66f01_row3_col8, #T_66f01_row4_col7 {
+#T_76914_row1_col7, #T_76914_row3_col7, #T_76914_row3_col8, #T_76914_row4_col7 {
   background-color: green;
 }
-#T_66f01_row2_col7, #T_66f01_row2_col8, #T_66f01_row6_col7, #T_66f01_row6_col8, #T_66f01_row7_col7, #T_66f01_row7_col8 {
+#T_76914_row2_col7, #T_76914_row2_col8, #T_76914_row6_col7, #T_76914_row6_col8, #T_76914_row7_col7, #T_76914_row7_col8 {
   background-color: red;
 }
-#T_66f01_row5_col2, #T_66f01_row6_col2, #T_66f01_row7_col2 {
+#T_76914_row5_col2, #T_76914_row6_col2, #T_76914_row7_col2 {
   background-color: white;
 }
-#T_66f01_row5_col7, #T_66f01_row5_col8 {
+#T_76914_row5_col7, #T_76914_row5_col8 {
   background-color: gray;
 }
 </style>
 </head>
 <body>
-<table id="T_66f01_">
+<table id="T_76914_">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
@@ -38,100 +38,100 @@
   </thead>
   <tbody>
     <tr>
-      <th id="T_66f01_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
-      <td id="T_66f01_row0_col0" class="data row0 col0" >1.44</td>
-      <td id="T_66f01_row0_col1" class="data row0 col1" >0.08</td>
-      <td id="T_66f01_row0_col2" class="data row0 col2" >1.45</td>
-      <td id="T_66f01_row0_col3" class="data row0 col3" >1.59</td>
-      <td id="T_66f01_row0_col4" class="data row0 col4" >1.84</td>
-      <td id="T_66f01_row0_col5" class="data row0 col5" >1.59</td>
-      <td id="T_66f01_row0_col6" class="data row0 col6" >1.95</td>
-      <td id="T_66f01_row0_col7" class="data row0 col7" >medium</td>
-      <td id="T_66f01_row0_col8" class="data row0 col8" >medium</td>
+      <th id="T_76914_level0_row0" class="row_heading level0 row0" >Annual precipitation (mm/day)</th>
+      <td id="T_76914_row0_col0" class="data row0 col0" >1.44</td>
+      <td id="T_76914_row0_col1" class="data row0 col1" >0.08</td>
+      <td id="T_76914_row0_col2" class="data row0 col2" >1.45</td>
+      <td id="T_76914_row0_col3" class="data row0 col3" >1.59</td>
+      <td id="T_76914_row0_col4" class="data row0 col4" >1.84</td>
+      <td id="T_76914_row0_col5" class="data row0 col5" >1.59</td>
+      <td id="T_76914_row0_col6" class="data row0 col6" >1.95</td>
+      <td id="T_76914_row0_col7" class="data row0 col7" >medium</td>
+      <td id="T_76914_row0_col8" class="data row0 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_66f01_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
-      <td id="T_66f01_row1_col0" class="data row1 col0" >1.36</td>
-      <td id="T_66f01_row1_col1" class="data row1 col1" >1.24</td>
-      <td id="T_66f01_row1_col2" class="data row1 col2" >0.66</td>
-      <td id="T_66f01_row1_col3" class="data row1 col3" >1.94</td>
-      <td id="T_66f01_row1_col4" class="data row1 col4" >6.90</td>
-      <td id="T_66f01_row1_col5" class="data row1 col5" >2.20</td>
-      <td id="T_66f01_row1_col6" class="data row1 col6" >7.67</td>
-      <td id="T_66f01_row1_col7" class="data row1 col7" >low</td>
-      <td id="T_66f01_row1_col8" class="data row1 col8" >medium</td>
+      <th id="T_76914_level0_row1" class="row_heading level0 row1" >Extreme precipitation day</th>
+      <td id="T_76914_row1_col0" class="data row1 col0" >1.36</td>
+      <td id="T_76914_row1_col1" class="data row1 col1" >1.24</td>
+      <td id="T_76914_row1_col2" class="data row1 col2" >0.66</td>
+      <td id="T_76914_row1_col3" class="data row1 col3" >1.94</td>
+      <td id="T_76914_row1_col4" class="data row1 col4" >6.90</td>
+      <td id="T_76914_row1_col5" class="data row1 col5" >2.20</td>
+      <td id="T_76914_row1_col6" class="data row1 col6" >7.67</td>
+      <td id="T_76914_row1_col7" class="data row1 col7" >low</td>
+      <td id="T_76914_row1_col8" class="data row1 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_66f01_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
-      <td id="T_66f01_row2_col0" class="data row2 col0" >17.06</td>
-      <td id="T_66f01_row2_col1" class="data row2 col1" >0.37</td>
-      <td id="T_66f01_row2_col2" class="data row2 col2" >17.81</td>
-      <td id="T_66f01_row2_col3" class="data row2 col3" >19.65</td>
-      <td id="T_66f01_row2_col4" class="data row2 col4" >21.67</td>
-      <td id="T_66f01_row2_col5" class="data row2 col5" >20.73</td>
-      <td id="T_66f01_row2_col6" class="data row2 col6" >25.00</td>
-      <td id="T_66f01_row2_col7" class="data row2 col7" >high</td>
-      <td id="T_66f01_row2_col8" class="data row2 col8" >high</td>
+      <th id="T_76914_level0_row2" class="row_heading level0 row2" >Annual avg Tmax (C)</th>
+      <td id="T_76914_row2_col0" class="data row2 col0" >17.06</td>
+      <td id="T_76914_row2_col1" class="data row2 col1" >0.37</td>
+      <td id="T_76914_row2_col2" class="data row2 col2" >17.81</td>
+      <td id="T_76914_row2_col3" class="data row2 col3" >19.65</td>
+      <td id="T_76914_row2_col4" class="data row2 col4" >21.67</td>
+      <td id="T_76914_row2_col5" class="data row2 col5" >20.73</td>
+      <td id="T_76914_row2_col6" class="data row2 col6" >25.00</td>
+      <td id="T_76914_row2_col7" class="data row2 col7" >high</td>
+      <td id="T_76914_row2_col8" class="data row2 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_66f01_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
-      <td id="T_66f01_row3_col0" class="data row3 col0" >36.95</td>
-      <td id="T_66f01_row3_col1" class="data row3 col1" >13.95</td>
-      <td id="T_66f01_row3_col2" class="data row3 col2" >38.05</td>
-      <td id="T_66f01_row3_col3" class="data row3 col3" >40.04</td>
-      <td id="T_66f01_row3_col4" class="data row3 col4" >92.49</td>
-      <td id="T_66f01_row3_col5" class="data row3 col5" >42.10</td>
-      <td id="T_66f01_row3_col6" class="data row3 col6" >94.67</td>
-      <td id="T_66f01_row3_col7" class="data row3 col7" >low</td>
-      <td id="T_66f01_row3_col8" class="data row3 col8" >low</td>
+      <th id="T_76914_level0_row3" class="row_heading level0 row3" >Maximum Daily Precipitation (mm/day)</th>
+      <td id="T_76914_row3_col0" class="data row3 col0" >36.95</td>
+      <td id="T_76914_row3_col1" class="data row3 col1" >13.95</td>
+      <td id="T_76914_row3_col2" class="data row3 col2" >38.05</td>
+      <td id="T_76914_row3_col3" class="data row3 col3" >40.04</td>
+      <td id="T_76914_row3_col4" class="data row3 col4" >92.49</td>
+      <td id="T_76914_row3_col5" class="data row3 col5" >42.10</td>
+      <td id="T_76914_row3_col6" class="data row3 col6" >94.67</td>
+      <td id="T_76914_row3_col7" class="data row3 col7" >low</td>
+      <td id="T_76914_row3_col8" class="data row3 col8" >low</td>
     </tr>
     <tr>
-      <th id="T_66f01_level0_row4" class="row_heading level0 row4" >SPEI</th>
-      <td id="T_66f01_row4_col0" class="data row4 col0" >0.01</td>
-      <td id="T_66f01_row4_col1" class="data row4 col1" >0.27</td>
-      <td id="T_66f01_row4_col2" class="data row4 col2" >0.00</td>
-      <td id="T_66f01_row4_col3" class="data row4 col3" >-0.17</td>
-      <td id="T_66f01_row4_col4" class="data row4 col4" >-1.02</td>
-      <td id="T_66f01_row4_col5" class="data row4 col5" >-0.42</td>
-      <td id="T_66f01_row4_col6" class="data row4 col6" >-1.37</td>
-      <td id="T_66f01_row4_col7" class="data row4 col7" >low</td>
-      <td id="T_66f01_row4_col8" class="data row4 col8" >medium</td>
+      <th id="T_76914_level0_row4" class="row_heading level0 row4" >SPEI</th>
+      <td id="T_76914_row4_col0" class="data row4 col0" >0.01</td>
+      <td id="T_76914_row4_col1" class="data row4 col1" >0.27</td>
+      <td id="T_76914_row4_col2" class="data row4 col2" >0.00</td>
+      <td id="T_76914_row4_col3" class="data row4 col3" >-0.17</td>
+      <td id="T_76914_row4_col4" class="data row4 col4" >-1.02</td>
+      <td id="T_76914_row4_col5" class="data row4 col5" >-0.42</td>
+      <td id="T_76914_row4_col6" class="data row4 col6" >-1.37</td>
+      <td id="T_76914_row4_col7" class="data row4 col7" >low</td>
+      <td id="T_76914_row4_col8" class="data row4 col8" >medium</td>
     </tr>
     <tr>
-      <th id="T_66f01_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
-      <td id="T_66f01_row5_col0" class="data row5 col0" >5927.86</td>
-      <td id="T_66f01_row5_col1" class="data row5 col1" >404.15</td>
-      <td id="T_66f01_row5_col2" class="data row5 col2" >nan</td>
-      <td id="T_66f01_row5_col3" class="data row5 col3" >4773.21</td>
-      <td id="T_66f01_row5_col4" class="data row5 col4" >6082.73</td>
-      <td id="T_66f01_row5_col5" class="data row5 col5" >4395.12</td>
-      <td id="T_66f01_row5_col6" class="data row5 col6" >6149.11</td>
-      <td id="T_66f01_row5_col7" class="data row5 col7" >negative</td>
-      <td id="T_66f01_row5_col8" class="data row5 col8" >negative</td>
+      <th id="T_76914_level0_row5" class="row_heading level0 row5" >Heating Degree Days</th>
+      <td id="T_76914_row5_col0" class="data row5 col0" >5927.86</td>
+      <td id="T_76914_row5_col1" class="data row5 col1" >404.15</td>
+      <td id="T_76914_row5_col2" class="data row5 col2" >nan</td>
+      <td id="T_76914_row5_col3" class="data row5 col3" >4773.21</td>
+      <td id="T_76914_row5_col4" class="data row5 col4" >6082.73</td>
+      <td id="T_76914_row5_col5" class="data row5 col5" >4395.12</td>
+      <td id="T_76914_row5_col6" class="data row5 col6" >6149.11</td>
+      <td id="T_76914_row5_col7" class="data row5 col7" >negative</td>
+      <td id="T_76914_row5_col8" class="data row5 col8" >negative</td>
     </tr>
     <tr>
-      <th id="T_66f01_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
-      <td id="T_66f01_row6_col0" class="data row6 col0" >0.00</td>
-      <td id="T_66f01_row6_col1" class="data row6 col1" >0.00</td>
-      <td id="T_66f01_row6_col2" class="data row6 col2" >nan</td>
-      <td id="T_66f01_row6_col3" class="data row6 col3" >0.00</td>
-      <td id="T_66f01_row6_col4" class="data row6 col4" >0.02</td>
-      <td id="T_66f01_row6_col5" class="data row6 col5" >0.94</td>
-      <td id="T_66f01_row6_col6" class="data row6 col6" >18.19</td>
-      <td id="T_66f01_row6_col7" class="data row6 col7" >high</td>
-      <td id="T_66f01_row6_col8" class="data row6 col8" >high</td>
+      <th id="T_76914_level0_row6" class="row_heading level0 row6" >Extreme Degree Days</th>
+      <td id="T_76914_row6_col0" class="data row6 col0" >0.00</td>
+      <td id="T_76914_row6_col1" class="data row6 col1" >0.00</td>
+      <td id="T_76914_row6_col2" class="data row6 col2" >nan</td>
+      <td id="T_76914_row6_col3" class="data row6 col3" >0.00</td>
+      <td id="T_76914_row6_col4" class="data row6 col4" >0.02</td>
+      <td id="T_76914_row6_col5" class="data row6 col5" >0.94</td>
+      <td id="T_76914_row6_col6" class="data row6 col6" >18.19</td>
+      <td id="T_76914_row6_col7" class="data row6 col7" >high</td>
+      <td id="T_76914_row6_col8" class="data row6 col8" >high</td>
     </tr>
     <tr>
-      <th id="T_66f01_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
-      <td id="T_66f01_row7_col0" class="data row7 col0" >548.21</td>
-      <td id="T_66f01_row7_col1" class="data row7 col1" >123.70</td>
-      <td id="T_66f01_row7_col2" class="data row7 col2" >nan</td>
-      <td id="T_66f01_row7_col3" class="data row7 col3" >1066.80</td>
-      <td id="T_66f01_row7_col4" class="data row7 col4" >1633.50</td>
-      <td id="T_66f01_row7_col5" class="data row7 col5" >1383.87</td>
-      <td id="T_66f01_row7_col6" class="data row7 col6" >2589.60</td>
-      <td id="T_66f01_row7_col7" class="data row7 col7" >high</td>
-      <td id="T_66f01_row7_col8" class="data row7 col8" >high</td>
+      <th id="T_76914_level0_row7" class="row_heading level0 row7" >Cooling Degree Days</th>
+      <td id="T_76914_row7_col0" class="data row7 col0" >548.21</td>
+      <td id="T_76914_row7_col1" class="data row7 col1" >123.70</td>
+      <td id="T_76914_row7_col2" class="data row7 col2" >nan</td>
+      <td id="T_76914_row7_col3" class="data row7 col3" >1066.80</td>
+      <td id="T_76914_row7_col4" class="data row7 col4" >1633.50</td>
+      <td id="T_76914_row7_col5" class="data row7 col5" >1383.87</td>
+      <td id="T_76914_row7_col6" class="data row7 col6" >2589.60</td>
+      <td id="T_76914_row7_col7" class="data row7 col7" >high</td>
+      <td id="T_76914_row7_col8" class="data row7 col8" >high</td>
     </tr>
   </tbody>
 </table>
